--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(film)</string>
   <string name="DraftDatabase_Draft_location_snippet">(plats)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(svar)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galleri</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fil</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Plats</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Kan inte hitta app för att välja media.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal behöver behörigheten Lagring för att bifoga bilder, video och ljud men har nekats den permanent. Fortsätt till inställningsmenyn för Appar och aviseringar, välj \"Behörigheter\" och aktivera \"Lagring\".</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Skickad av dig</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Skickad av %1$s till %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Skickad av dig till %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Påminn mig senare</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-samtal pågår</string>
   <string name="NotificationBarManager__establishing_signal_call">Upprättar Signal-samtal</string>
   <string name="NotificationBarManager__incoming_signal_call">Inkommande Signal-samtal</string>
@@ -555,6 +563,8 @@
   <string name="RatingManager_no_thanks">Nej tack</string>
   <string name="RatingManager_later">Senare</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ojoj, appen Play Butik verkar inte finnas installerad på din enhet.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blockera denna kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du kommer inte längre få meddelanden eller samtal från denna kontakt.</string>
@@ -1410,29 +1420,22 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Skapa alfanumerisk PIN-kod</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Skapa numerisk PIN-kod</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN-kod måste vara minst %1$d tecken</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN-kod måste vara minst %1$d siffror</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Skapa en ny PIN-kod</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Eftersom du fortfarande är inloggad kan du skapa en ny PIN-kod. När du är utloggad finns det inget sätt att återställa din PIN-kod.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Skapa din PIN-kod</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN-koder lägger till ett extra lager av säkerhet till ditt konto. Skriv ner din PIN-kod och förvara den på ett säkert ställe. Den kan inte återvinnas.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN-koder matchar inte. Försök igen.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Bekräfta din PIN-kod.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Det gick inte att skapa PIN-kod</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Din PIN-kod sparades inte. Vi uppmanar dig att skapa en PIN-kod senare.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN-kod skapad.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Ange PIN-kod igen</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Introducerar PIN-koder</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Lägg till en säkerhetsnivå till ditt konto. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Läs mer här.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Läs mer</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Registreringslås = PIN-kod</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Ditt registreringslås kallas nu en PIN-kod, och den gör mer. Uppdatera nu. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Läs mer om PIN-koder.</string>
   <string name="KbsSplashFragment__update_pin">Uppdatera PIN-kod</string>
   <string name="KbsSplashFragment__create_your_pin">Skapa din PIN-kod</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Påminn mig senare</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Ange din Signal PIN-kod</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">För att hjälpa dig att memorera din PIN-kod ber vi dig att skriva in den regelbundet. Vi ber dig färre gånger med tiden.</string>
@@ -1445,20 +1448,19 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Ditt konto har låsts för att skydda din integritet och säkerhet. Efter %1$d dagar av inaktivitet i ditt konto kommer du att kunna omregistrera detta telefonnummer utan att behöva din pin-kod. Allt innehåll kommer att tas bort.</string>
   <string name="AccountLockedFragment__next">Nästa</string>
   <string name="AccountLockedFragment__learn_more">Läs mer</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Ange din PIN-kod</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Ange PIN-koden du skapade för ditt konto. Denna skiljer sig från din SMS-verifieringskod.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Ange alfanumerisk PIN-kod</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Ange numerisk PIN-kod</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Nästa</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Felaktig PIN-kod. Försök igen.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Felaktig PIN-kod. %1$d försök kvar.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Glömt PIN-kod?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Felaktig PIN-kod</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Du har %1$d försök kvar. Om dina försök tar slut kommer ditt konto att låsas i %2$d dagar. Efter %3$d dagars inaktivitet kan du registrera dig igen utan din PIN-kod. Ditt konto och allt innehåll tas bort.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Har du glömt din PIN-kod?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">För din integritet och säkerhet finns det inget sätt att återställa din PIN-kod. Om dina försök tar slut kan du åter-verifiera med SMS efter %1$d dagar av inaktivitet. I det här fallet kommer ditt konto och allt innehåll tas bort.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Ange din PIN-kod</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Ange PIN-koden du skapade för ditt konto. Denna skiljer sig från din SMS-verifieringskod.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Ange alfanumerisk PIN-kod</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Ange numerisk PIN-kod</string>
+  <string name="RegistrationLockFragment__next">Nästa</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Felaktig PIN-kod. Försök igen.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Glömt PIN-kod?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Felaktig PIN-kod</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Har du glömt din PIN-kod?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Introducerar PIN-koder</string>
+  <string name="KbsMegaphone__update_pin">Uppdatera PIN-kod</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transportikon</string>
   <string name="ConversationListFragment_loading">Hämtar in…</string>
@@ -1500,6 +1502,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Inaktivera och ta bort alla lokala säkerhetskopior?</string>
   <string name="BackupDialog_delete_backups_statement">Ta bort säkerhetskopior</string>
   <string name="BackupDialog_copied_to_clipboard">Kopierade till urklipp</string>
+  <string name="BackupDialog_verify">Verifiera</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal behöver behörigheten Lagring för att skapa säkerhetskopior men har nekats den permanent. Fortsätt till inställningsmenyn för Appar och aviseringar, välj \"Behörigheter\" och aktivera \"Lagring\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Senaste säkerhetskopia: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Pågår</string>
@@ -1519,6 +1522,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences_app_protection__signal_pin">Signal PIN-kod</string>
   <string name="preferences_app_protection__pin">PIN-kod</string>
   <string name="preferences_app_protection__change">Ändra</string>
+  <string name="preferences_app_protection__create">Skapa</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Din PIN-kod lägger till ett extra lager av säkerhet och säkerhetskopierar ditt konto. Du kommer att bli ombedd för det när du registrerar ditt telefonnummer med Signal. Om du glömmer din PIN-kod kommer du att vara låst från ditt konto i 7 dagar.</string>
   <string name="AppProtectionPreferenceFragment_none">Ingen</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN-koden för registreringslåset är inte samma som den SMS-bekräftelsekod du precis fick. Ange PIN-koden du tidigare ställde in i appen.</string>
