--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -66,6 +66,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(فيديو)</string>
   <string name="DraftDatabase_Draft_location_snippet">(الموقع)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(رَدّ)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">المعرض</string>
+  <string name="AttachmentKeyboard_gif">صورة GIF</string>
+  <string name="AttachmentKeyboard_file">ملف</string>
+  <string name="AttachmentKeyboard_contact">جهة الاتصال</string>
+  <string name="AttachmentKeyboard_location">موقع جغرافي</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">لم يتم العثور على تطبيق لاختيار ملف.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">يحتاج Signal إلى إذن الوصول إلى التخزين من أجل إرفاق الصور والفيديوهات والملفّات الصوتيّة، ولكن الإذن لم يُمنح  بشكل دائم. الّرجاء زيارة قائمة إعدادات التطبيق، واختيار \"الأذونات\"، ومن ثمّ تفعيل \"سعة التخزين\".</string>
@@ -532,7 +538,9 @@
   <string name="MediaOverviewActivity_sent_by_you">مرسل منك</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">مرسل من %1$s إلى %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">مرسل منك إلى %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">ذكرني لاحقا</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">مكالمة Signal جارية</string>
   <string name="NotificationBarManager__establishing_signal_call">بدء مكالمة Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">مكالمة Signal واردة</string>
@@ -639,6 +647,8 @@
   <string name="RatingManager_no_thanks">لا، شكرا</string>
   <string name="RatingManager_later">فيما بعد</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">عفوا، يبدو أنّ تطبيق Play Store غير مثبّت على جهازك. </string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">حظر جهة الاتصال؟</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">لن تتلقى الرسائل أو المكالمات من جهة الاتصال هذه بعد الآن.</string>
@@ -1543,12 +1553,8 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">إنشاء الرقم التعريفي الشخصي بالأحرف والأرقام </string>
   <string name="BaseKbsPinFragment__create_numeric_pin">إنشاء الرقم التعريفي الشخصي بالأرقام</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">الرقم التعريفي الشخصي يجب أن يكون %1$d حرفا على الأقل</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">الرقم التعريفي الشخصي يجب أن يتكوّن %1$d خانة على الأقل</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">إنشاء رقم تعريفي شخصي جديد</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">يمكنك إنشاء رقم تعريفي شخصي جديد لأنك لا زلت مسجِّلا لدخولك. بعد تسجيل الخروج لن تكون هناك طريقة لاسترجاع الرقم التعريفي الشخصي الخاص بك.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">إنشاء الرقم التعريفي الشخصي الخاص بك</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">تعمل الأرقام التعريفيّة الخاصة على إضافة طبقة من الحماية إلى حسابك. اكتب رقم التعريف الشخصي الخاص بك واحتفظ به في مكان آمن. لأنه ليس هناك وسيلة لاستعادته.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">الأرقام التعريفية الشخصية غير متطابقة. يرجى المحاولة ثانية.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">يرجى تأكيد الرقم التعريفي الشخصي.</string>
@@ -1557,15 +1563,11 @@
   <string name="ConfirmKbsPinFragment__pin_created">تم إنشاء الرقم التعريفي الشخصي.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">نقدم لكم الأرقام التعريفية الشخصية أو PINs</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">أضف طبقة أخرى من الأمان لحسابك. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">اقرأ المزيد هنا.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">أعرف أكثر</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">قفل التسجيل = الرقم التعريفي الشخصي</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">قفل التسجيل يسمى الآن الرقم التعريفي الشخصي، وهو مسؤول عن أكثر من ذلك. حدِّثه الآن. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">اقرأ المزيد عن الأرقام التعريفية الشخصية.</string>
   <string name="KbsSplashFragment__update_pin">تحديث الرقم التعريفي الشخصي</string>
   <string name="KbsSplashFragment__create_your_pin">إنشاء الرقم التعريفي الشخصي الخاص بك</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">ذكرني لاحقا</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">أدخل الرقم التعريفي الشخصي ل Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">لمساعدتك على حفظ  رقم التعريف الشخصي الخاص بك سنطلب منك إعادة إدخاله من حين لآخر. مع مرور الوقت سنطلبه منك مرات أقل.</string>
@@ -1578,20 +1580,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">تم إقفال حسابك لحماية خصوصيتك وأمنك.بعد مرور %1$d يوم من عدم وجود نشاط على  حسابك، سيكون بإمكانك إعادة التسجيل برقم هاتفك دون الحاجة إلى الرقم التعريفي الشخصي . سيتم حذف جميع المحتوى على حسابك.</string>
   <string name="AccountLockedFragment__next">التالي</string>
   <string name="AccountLockedFragment__learn_more">أعرف أكثر</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">أدخل الرقم التعريفي الشخصي</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">أدخل الرقم التعريفي الشخصي الذي أنشأته لحسابك، وهو مختلف عن رمز تحقق SMS.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">أدخل الرقم التعريفي الشخصي بالأحرف والأرقام</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">أدخل الرقم التعريفي الشخصي بالأرقام</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">التالي</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">الرقم التعريفي الشخصي غير صحيح. يرجى إعادة المحاولة.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">الرقم التعريفي الشخصي غير صحيح. %1$d محاولة باقية.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">هل نسيت الرقم التعريفي الشخصي؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">الرقم التعريفي الشخصي غير صحيح</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">باقي لديك %1$d محاولة. اذا نفذت المحاولات سيتم إقفال حسابك لمدة %2$d يوما. بعد %3$d يوم من عدم وجود نشاط على حسابك، سيمكنك إعادة التسجيل دون إدخال الرقم التعريفي الشخصي . سيتم مسح حسابك وحذف جميع محتواه.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">هل نسيت الرقم التعريفي الشخصي؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">من أجل الحفاظ على خصوصيتك وأمانك، لا توجد هناك طريقة لاسترجاع الرقم التعريفي الشخصي. اذا نفذت المحاولات، سيمكنك إعادة التّحقق من خلال SMS بعد %1$d يوما من عدم وجود نشاط في حسابك. في تلك الحالة سيتم مسح حسابك وجميع محتواه.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">أدخل الرقم التعريفي الشخصي</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">أدخل الرقم التعريفي الشخصي الذي أنشأته لحسابك، وهو مختلف عن رمز تحقق SMS.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">أدخل الرقم التعريفي الشخصي بالأحرف والأرقام</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">أدخل الرقم التعريفي الشخصي بالأرقام</string>
+  <string name="RegistrationLockFragment__next">التالي</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">الرقم التعريفي الشخصي غير صحيح. يرجى إعادة المحاولة.</string>
+  <string name="RegistrationLockFragment__forgot_pin">هل نسيت الرقم التعريفي الشخصي؟</string>
+  <string name="RegistrationLockFragment__incorrect_pin">الرقم التعريفي الشخصي غير صحيح</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">هل نسيت الرقم التعريفي الشخصي؟</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">نقدم لكم الأرقام التعريفية الشخصية أو PINs</string>
+  <string name="KbsMegaphone__update_pin">تحديث الرقم التعريفي الشخصي</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">أيقونة النقل.</string>
   <string name="ConversationListFragment_loading">قيد التحميل…</string>
@@ -1633,6 +1634,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">تعطيل وحذف كافّة النُّسخ الإحتياطية المحلية؟</string>
   <string name="BackupDialog_delete_backups_statement">حذف النسخ الإحتياطية</string>
   <string name="BackupDialog_copied_to_clipboard">تمّ النسخ إلى الحافظة</string>
+  <string name="BackupDialog_verify">تحقق</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">يحتاج Signal إلى إذن سعة التخزين خارجيّة لإنشاء نسخ احتياطية، ولكن تم إيقاف الإذن على نحو دائم. الرجاء زيارة إعدادات التطبيق ثم اختيار \"الأذونات\"، ثم تفعيل \"سعة التخزين\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">آخِر نسخة إحتياطية : %s</string>
   <string name="ChatsPreferenceFragment_in_progress">جارٍ</string>
@@ -1656,6 +1658,7 @@
   <string name="preferences_app_protection__signal_pin">الرقم التعريفي الشخصي ل Signal</string>
   <string name="preferences_app_protection__pin">الرقم التعريفي الشخصي</string>
   <string name="preferences_app_protection__change">تغيير</string>
+  <string name="preferences_app_protection__create">إنشاء</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">يضيف الرقم التعريفي الشخصي طبقة إضافية من الأمان وهو طريقة لعمل نسخة احتياطية من حسابك. سيتم سؤالك عنه عند التسجيل برقمك الهاتفي في Signal. اذا نسيت الرقم التعريفي الشخصي سيتم إقفال حسابك لمدة 7 أيام.</string>
   <string name="AppProtectionPreferenceFragment_none">لا شيء </string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">الرقم التعريفي الشخصي لحماية التسجيل مختلف عن رمز التحقق في رسالة SMS التي استقبلتها الآن. يُرجى إدخال الرقم التعريفي الشخصي الذي قمت بتحديده في إعدادات التطبيق من قبل.</string>
