--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -53,6 +53,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(məkan)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(cavab)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Qalereya</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fayl</string>
+  <string name="AttachmentKeyboard_contact">Əlaqə</string>
+  <string name="AttachmentKeyboard_location">Məkan</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Seçilmiş media üçün aplikasiyanı tapa bilmirəm.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal-ın normal işləməsi üçün şəkil, video və ya səsləri saxlamağa yaddaş lazımdır ki, bu da hal hazırda qadağa edilib. Davam edə bilmək üçün zəhmət olmasa aplikasiya parametrləri menyusuna, orada isə \"İcazələr\" bölməsinə keçərək \"Yaddaş\" hissəsini aktivləşdir.</string>
@@ -384,7 +390,8 @@
   <string name="MediaOverviewActivity_audio">Səs</string>
   <string name="MediaOverviewActivity_video">Video</string>
   <string name="MediaOverviewActivity_image">Şəkil</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal zəngi baş verməkdədir</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zəngi hazırlanır</string>
   <string name="NotificationBarManager__incoming_signal_call">Qəbul edilən Signal zəngi</string>
@@ -479,6 +486,8 @@
   <string name="RatingManager_no_thanks">Yox, təşəkkür edirəm</string>
   <string name="RatingManager_later">Daha sonra</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Bıy, belə görünür ki, cihazında Play Store aplikasıyası quraşdırılmamışdır.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bu əlaqəni kilidləyirsən?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Bu əlaqədən mesaj və zəng qəbul etməyəcəkdən.</string>
@@ -1244,6 +1253,7 @@
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__confirm_your_pin">PIN-i təsdiq et.</string>
   <!--KbsSplashFragment-->
+  <string name="KbsSplashFragment__learn_more">Daha Ətraflı</string>
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__skip">Ötür</string>
   <string name="KbsReminderDialog__submit">Təqdim et</string>
@@ -1252,8 +1262,9 @@
   <string name="AccountLockedFragment__next">Növbəti</string>
   <string name="AccountLockedFragment__learn_more">Daha Ətraflı</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Növbəti</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">PIN-i unutmusan?</string> -->
+  <string name="RegistrationLockFragment__next">Növbəti</string>
+  <string name="RegistrationLockFragment__forgot_pin">PIN-i unutmusan?</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ötürülmə ikonası</string>
   <string name="ConversationListFragment_loading">Yüklənir…</string>
@@ -1308,6 +1319,7 @@
   <string name="preferences_app_protection__screen_lock">Ekranın kilidlənməsi</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Android-in ekran kilidi və barmaq izi ilə Signal-a girişi kilidlə</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Ekran kilidinin qeyri aktivliyinin zamanı bitdi</string>
+  <string name="preferences_app_protection__create">Yarat</string>
   <string name="AppProtectionPreferenceFragment_none">Heç biri</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Qeydiyyat Kilid PIN-i elə indicə əldə etdiyin SMS təsdiq şifrəsi ilə eyni deyil. Zəhmət olmasa aplikasiyaya əvvəl daxil etdiyin PIN-i daxil et.</string>
   <string name="registration_activity__registration_lock_pin">Qeydiyyat Kilid PIN-i</string>
