--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -53,6 +53,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(видео)</string>
   <string name="DraftDatabase_Draft_location_snippet">(местоположение)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(отговори)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Галерия</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Файл</string>
+  <string name="AttachmentKeyboard_contact">Контакт</string>
+  <string name="AttachmentKeyboard_location">Местоположение</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Неуспешно откриване на папка за избор на файл.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal се нуждае от достъп до вградения диск, за да може да прикачва снимки, видеота или аудио, но той му е отказан. Моля, отидете в настройки в менюто и изберете \"Разрешения\" и \"Дискове\".</string>
@@ -385,7 +391,8 @@
   <string name="MediaOverviewActivity_audio">Аудио</string>
   <string name="MediaOverviewActivity_video">Видео</string>
   <string name="MediaOverviewActivity_image">Изображение</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Протича Signal разговор</string>
   <string name="NotificationBarManager__establishing_signal_call">Установяване на Signal разговор</string>
   <string name="NotificationBarManager__incoming_signal_call">Входящо Signal обаждане</string>
@@ -480,6 +487,8 @@
   <string name="RatingManager_no_thanks">Не, благодаря</string>
   <string name="RatingManager_later">По-късно</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Опа, Play Store приложението не е инсталирано на устройството Ви.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Блокиране на този контакт?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Повече няма да получавате съобщения и обаждания от този контакт.</string>
@@ -1248,6 +1257,7 @@
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Потвърдете своя ПИН.</string>
   <!--KbsSplashFragment-->
+  <string name="KbsSplashFragment__learn_more">Научи Още</string>
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__skip">Пропусни</string>
   <string name="KbsReminderDialog__submit">Изпрати</string>
@@ -1256,8 +1266,9 @@
   <string name="AccountLockedFragment__next">Следващ</string>
   <string name="AccountLockedFragment__learn_more">Научи Още</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Следващ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Забравен ПИН?</string> -->
+  <string name="RegistrationLockFragment__next">Следващ</string>
+  <string name="RegistrationLockFragment__forgot_pin">Забравен ПИН?</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Икона за транспорт</string>
   <string name="ConversationListFragment_loading">Зареждане…</string>
@@ -1299,6 +1310,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">Деактивиране и изтриване на всички локални архиви?</string>
   <string name="BackupDialog_delete_backups_statement">Изтриване на архиви</string>
   <string name="BackupDialog_copied_to_clipboard">Копирано</string>
+  <string name="BackupDialog_verify">Валидиране</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal изискава разрешение за достъп до външните хранлища, за да може да създаде архиви, но този достъп е парманентно отказан. Моля, продължете до настройки на приложенията и изберете \"Разрешения\" и активирайте \"Хранилище\"</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Последен архив: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Извъшрва се</string>
@@ -1312,6 +1324,7 @@
   <string name="preferences_app_protection__screen_lock">Заключен екран</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Заключване на достъпа до Signal с вградените в Андроид заключен екран или отпечатък</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Време за активирнае при неактивност</string>
+  <string name="preferences_app_protection__create">Създай</string>
   <string name="AppProtectionPreferenceFragment_none">Нищо</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">ПИН-ът за регистрационното заключване не е същия като СМС кодът за потвърждение, който получихте. Моля, въведете ПИН-а, който сте задали по-рано в приложението.</string>
   <string name="registration_activity__registration_lock_pin">ПИН за регистрационно заключване</string>
