--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(ভিডিও)</string>
   <string name="DraftDatabase_Draft_location_snippet">(স্থান)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(উত্তর)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">গ্যাল্যারি</string>
+  <string name="AttachmentKeyboard_gif">জিফ</string>
+  <string name="AttachmentKeyboard_file">ফাইল</string>
+  <string name="AttachmentKeyboard_contact">পরিচিতি</string>
+  <string name="AttachmentKeyboard_location">স্থান</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">মিডিয়া নির্বাচন করার জন্য কোন অ্যাপ খুঁজে পাওয়া যায়নি।</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">ছবি, ভিডিও অথবা অডিও সংযুক্ত করার জন্য Signal এর স্টোরেজ ব্যাবহারের অনুমতির প্রয়োজন কিন্তু এর উপর স্থায়ী নিষেধাজ্ঞা জারি করা হয়েছে। দয়া করে আ্যপ সেটিংস-এ যান, \"অনুমতি\" নির্বাচন করুন এবং \"স্টোরেজ\"  সক্ষম করুন।</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">আপনার প্রেরিত</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s দ্বারা %2$s কে প্রেরিত</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">%1$sকে আপনার প্রেরিত </string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">আমাকে পরে মনে করিয়ে দিবেন</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal কল চলমান </string>
   <string name="NotificationBarManager__establishing_signal_call">Signal কল স্থাপন করা হচ্ছে</string>
   <string name="NotificationBarManager__incoming_signal_call">আগত Signal কল</string>
@@ -555,6 +563,8 @@
   <string name="RatingManager_no_thanks">না ধন্যবাদ</string>
   <string name="RatingManager_later">পরবর্তীতে</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ওহো, প্লে স্টোর অ্যাপ আপনার ডিভাইস এ ইনস্টল করা আছে বলে মনে হচ্ছে না।</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">এই পরিচিতিটি ব্লক করবেন?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">আপনি এই পরিচিতি থেকে বার্তা এবং কল সমূহ গ্রহণ করতে পারবেন না।</string>
@@ -1410,29 +1420,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">বর্ণানুক্রমিক পিন তৈরি করুন</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">সংখ্যার পিন তৈরি করুন</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">পিন অবশ্যই কমপক্ষে %1$d টি অক্ষর হতে হবে</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">পিন অবশ্যই কমপক্ষে %1$d টি ডিজিটের হতে হবে</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">একটি নতুন পিন তৈরি করুন</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">আপনি এখনও লগ ইন থাকায় আপনি একটি নতুন পিন তৈরি করতে পারেন। আপনি যখন লগ আউট করে ফেলবেন তখন আপনার পিনটি পুনরুদ্ধার করার কোনও উপায় থাকবেনা।</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">আপনার পিন তৈরি করুন</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">পিনগুলি আপনার অ্যাকাউন্টে সুরক্ষার অতিরিক্ত স্তর যুক্ত করে। আপনার পিনটি লিখুন এবং এটিকে একটি নিরাপদ স্থানে রাখুন। এটি পুনরুদ্ধার করা যায় না।</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">পিনগুলি মেলে না। আবার চেষ্টা করুন|</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">আপনার পিনটি নিশ্চিত করুন।</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">পিন তৈরি ব্যর্থ হয়েছে</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">আপনার পিন সংরক্ষণ করা হয়নি। আমরা আপনাকে পরে একটি পিন তৈরি করতে অনুরোধ করব।</string>
   <string name="ConfirmKbsPinFragment__pin_created">পিন তৈরি করা হয়েছে।</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">পূনরায় পিন প্রবেশ করান</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">পিনের সাথে পরিচিত হন</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">আপনার অ্যাকাউন্টে সুরক্ষার অন্য স্তর যুক্ত করুন। %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">এখানে আরও পড়ুন।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">আরও জানুন</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">রেজিস্ট্রেশন লক = পিন</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">আপনার রেজিস্ট্রেশন লক কে এখন পিন বলা হয় এবং এটি আরও বেশি করে। এখনই এটি আপডেট করুন। %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">পিন সম্পর্কে আরও পড়ুন।</string>
   <string name="KbsSplashFragment__update_pin">পিন আপডেট করুন</string>
   <string name="KbsSplashFragment__create_your_pin">আপনার পিন তৈরি করুন</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">আমাকে পরে মনে করিয়ে দিবেন</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">আপনার Signal পিন প্রবেশ করান</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">আপনাকে আপনার পিন মুখস্ত করতে সহায়তা করতে আমরা আপনাকে মাঝে মাঝে এটি প্রবেশ করাতে বলব। আমরা সময়ের সাথে সাথে  জিজ্ঞাসা করা কমিয়ে দেব।</string>
@@ -1445,20 +1448,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">আপনার গোপনীয়তা এবং সুরক্ষা সুরক্ষার জন্য আপনার অ্যাকাউন্টটি লক করা হয়েছে। আপনার অ্যাকাউন্টে %1$d দিনের নিষ্ক্রিয়তার পরে আপনি আপনার পিনের প্রয়োজন ছাড়াই এই ফোন নম্বরটি পুনরায় নিবন্ধন করতে সক্ষম হবেন। সমস্ত সামগ্রী মুছে ফেলা হবে।</string>
   <string name="AccountLockedFragment__next">পরবর্তী</string>
   <string name="AccountLockedFragment__learn_more">আরও জানুন</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">আপনার পিন প্রবেশ করান</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">আপনি নিজের অ্যাকাউন্ট এর জন্য তৈরি করা পিনটি প্রবেশ করুন। এটি আপনার এসএমএস যাচাইকরণ কোড থেকে ভিন্ন।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">বর্ণানুক্রমিক পিন প্রবেশ করান</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">সংখ্যার পিন প্রবেশ করান</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">পরবর্তী</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">ভুল পিন। আবার চেষ্টা করুন|</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">ভুল পিন। %1$d টি প্রচেষ্টা বাকি আছে।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">পিন ভুলে গেছেন?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">ভুল পিন</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">আপনার কাছে %1$d প্রচেষ্টা বাকি আছে। আপনি যদি শেষ পর্যন্ত ব্যর্থ হন তবে, আপনার অ্যাকাউন্ট %2$d দিনের জন্য লক্ করা হবে। নিষ্ক্রিয়তার %3$d দিন পরে, আপনি আপনার পিন ছাড়াই পুনরায় নিবন্ধন করতে পারেন। আপনার অ্যাকাউন্ট এবং সমস্ত সামগ্রী মুছে ফেলা হবে।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">পিন ভুলে গেছেন?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">আপনার গোপনীয়তা এবং সুরক্ষার জন্য, আপনার পিনটি পুনরুদ্ধার করার কোনও উপায় নেই। আপনি যদি আপনার পিনটি মনে না করতে পারেন তবে আপনি %1$d দিনের নিষ্ক্রিয়তার পরে এসএমএস দিয়ে পুনরায় যাচাই করতে পারেন। এই ক্ষেত্রে, আপনার অ্যাকাউন্ট এবং সমস্ত সামগ্রী মুছে ফেলা হবে।</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">আপনার পিন প্রবেশ করান</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">আপনি নিজের অ্যাকাউন্ট এর জন্য তৈরি করা পিনটি প্রবেশ করুন। এটি আপনার এসএমএস যাচাইকরণ কোড থেকে ভিন্ন।</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">বর্ণানুক্রমিক পিন প্রবেশ করান</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">সংখ্যার পিন প্রবেশ করান</string>
+  <string name="RegistrationLockFragment__next">পরবর্তী</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">ভুল পিন। আবার চেষ্টা করুন|</string>
+  <string name="RegistrationLockFragment__forgot_pin">পিন ভুলে গেছেন?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">ভুল পিন</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">পিন ভুলে গেছেন?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">পিনের সাথে পরিচিত হন</string>
+  <string name="KbsMegaphone__update_pin">পিন আপডেট করুন</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">পরিবহন আইকন</string>
   <string name="ConversationListFragment_loading">লোড হচ্ছে…</string>
@@ -1519,6 +1521,7 @@
   <string name="preferences_app_protection__signal_pin">Signal পিন</string>
   <string name="preferences_app_protection__pin">পিন</string>
   <string name="preferences_app_protection__change">পরিবর্তন</string>
+  <string name="preferences_app_protection__create">তৈরি</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">আপনার পিন সুরক্ষার অতিরিক্ত স্তর যুক্ত করে এবং আপনার অ্যাকাউন্ট নিরাপদ করে। আপনি যখন সিগন্যালের সাথে আপনার ফোন নাম্বার নিবন্ধন করবেন তখন আপনাকে এটি জিজ্ঞাসা করা হবে। আপনি যদি আপনার পিনটি ভুলে যান তবে আপনাকে 7 দিনের জন্য আপনার অ্যাকাউন্ট থেকে লক্ করা হবে।</string>
   <string name="AppProtectionPreferenceFragment_none">কেউ না</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">রেজিস্ট্রেশন লক পিনটি আপনি সদ্য প্রাপ্ত এসএমএস যাচাইকরণ কোডের সাথে মিলছে না। আপনি পূর্বে অ্যাপ্লিকেশনটিতে কনফিগার করা পিনটি প্রবেশ করুন।</string>
