--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -60,6 +60,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(poloha)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(odpověď)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galerie</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Soubor</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Poloha</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Nemohu nalézt aplikaci pro vybraný typ dat.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal potřebuje oprávnění pro přístup k úložišti, aby mohl připojovat fotky, videa nebo audio, ale toto oprávnění je nyní zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"Úložiště\".</string>
@@ -492,7 +498,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Odesláno vámi</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Odesláno od %1$s pro %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Odesláno vámi pro %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Připomenout později</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Probíhá Signal volání</string>
   <string name="NotificationBarManager__establishing_signal_call">Navazuji Signal hovor</string>
   <string name="NotificationBarManager__incoming_signal_call">Příchozí Signal hovor</string>
@@ -597,6 +605,8 @@
   <string name="RatingManager_no_thanks">Ne díky</string>
   <string name="RatingManager_later">Později</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ajaj, vypadá to, že aplikace Obchod Play není nainstalována na vašem zařízení.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zablokovat tento kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Již nebudete přijímat zprávy nebo hovory od tohoto kontaktu.</string>
@@ -1479,29 +1489,22 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Vytvořit alfanumerický PIN</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Vytvořit číselný PIN</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN musí mít alespoň %1$d znaků</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN musí mít alespoň %1$d číslic</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Vytvořit nový PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Protože jste stále přihlášen, můžete vytvořit nový PIN. Až budete odhlášen, neexistuje žádný způsob, jak váš PIN obnovit.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Vytvořit váš PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN přidává další vrstvu zabezpečení vašeho účtu. Zapište si váš PIN a uchovejte jej na bezpečném místě. Nelze jej obnovit.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN se neshodují. Zkuste to znovu.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Potvrďte Váš PIN.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Vytvoření PIN selhalo</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Váš PIN nebyl uložen. Vyzveme vás k vytvoření PIN později.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN vytvořen.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Zadejte PIN znovu</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Představujeme PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Přidejte další vrstvu zabezpečení k vašemu účtu. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Čtěte více zde.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Dozvědět se více</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Zámek registrace = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Váš zámek registrace se nyní nazývá PIN a umí toho víc. Aktualizujte si jej nyní. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Zjistit více o PIN.</string>
   <string name="KbsSplashFragment__update_pin">Aktualizovat PIN</string>
   <string name="KbsSplashFragment__create_your_pin">Vytvořit váš PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Připomenout později</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Zadejte váš PIN k Signalu</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Abychom vám pomohli zapamatovat si PIN, budeme vás opakovaně žádat o jeho zadání. Postupem času vás budeme žádat méně.</string>
@@ -1514,20 +1517,19 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Váš účet byl uzamčen kvůli ochraně soukromí a bezpečnosti. Po %1$d dnech nečinnosti na vašem účtu můžete znovu zaregistrovat toto telefonní číslo, aniž budete potřebovat vaše PIN. Veškerý obsah účtu bude smazán.</string>
   <string name="AccountLockedFragment__next">Další</string>
   <string name="AccountLockedFragment__learn_more">Dozvědět se více</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Zadejte váš PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Zadejte PIN, který jste vytvořili pro váš účet. Je to jiný kód, než ten v ověřovací SMS.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Zadejte alfanumerický PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Zadejte číselný PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Další</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Nesprávný PIN. Zkuste to znovu.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Nesprávný PIN. Zbývající pokusy: %1$d.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Zapomněli jste PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Nesprávný PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Zbývají vám %1$dpokusy. Pokud vám pokusy dojdou, bude váš účet uzamčen po dobu %2$d dní. Po %3$d dnech nečinnosti se můžete znovu registrovat bez vašeho PIN. Váš účet bude vymazán a veškerý jeho obsah smazán.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Zapomněl(a) jste váš PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Pro vaše soukromí a bezpečnost neexistuje žádný způsob jak obnovit váš PIN. Pokud vám dojdou pokusy, můžete se znovu vrátit pomocí SMS po %1$d dnech nečinnosti. V tomto případě bude váš účet vymazán a veškerý jeho obsah smazán.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Zadejte váš PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Zadejte PIN, který jste vytvořili pro váš účet. Je to jiný kód, než ten v ověřovací SMS.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Zadejte alfanumerický PIN</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Zadejte číselný PIN</string>
+  <string name="RegistrationLockFragment__next">Další</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Nesprávný PIN. Zkuste to znovu.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Zapomněli jste PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Nesprávný PIN</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Zapomněl(a) jste váš PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Představujeme PIN</string>
+  <string name="KbsMegaphone__update_pin">Aktualizovat PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona přenosu</string>
   <string name="ConversationListFragment_loading">Načítání…</string>
@@ -1569,6 +1571,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="BackupDialog_disable_and_delete_all_local_backups">Zakázat a smazat všechny lokální zálohy?</string>
   <string name="BackupDialog_delete_backups_statement">Smazat zálohy</string>
   <string name="BackupDialog_copied_to_clipboard">Zkopírováno do schránky</string>
+  <string name="BackupDialog_verify">Ověřit</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal potřebuje oprávnění pro přístup k úložišti, aby mohl vytvářet zálohy, ale toto oprávnění je nyní trvale zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"Úložiště\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Poslední záloha: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Probíhá</string>
@@ -1588,6 +1591,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="preferences_app_protection__signal_pin">Signal PIN</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Změnit</string>
+  <string name="preferences_app_protection__create">Vytvořit</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN přidává další vrstvu zabezpečení a zálohuje váš účet. O jeho zadání budete požádáni při registraci vašeho telefonního čísla u Signalu. Pokud váš PIN zapomenete, bude účet uzamčen po dobu 7 dní.</string>
   <string name="AppProtectionPreferenceFragment_none">Nic</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN zámku registrace není stejný jako přijatý SMS kontrolní kód, který jste před chvílí obdrželi. Prosím zadejte PIN, který jste dříve nastavili v aplikaci.</string>
