--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(lokation)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(svar)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Billeder</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fil</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Lokation</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Ingen app tilgængelig til valg af data</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal kræver tilladelse til at tilgå din hukommelse, for at kunne vedhæfte billeder, videoer eller lydfiler, hvilket det er blevet nægtet. Gå venligst via appens menu til Indstillinger, vælg \"Tilladelser\" og tilvælg \"Hukommelse\"</string>
@@ -453,7 +459,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Sendt af dig</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Sendt fra %1$s til %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Sendt fra dig til %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Påmind mig senere</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal opkald i gang</string>
   <string name="NotificationBarManager__establishing_signal_call">Foretager Signalopkald</string>
   <string name="NotificationBarManager__incoming_signal_call">Indgående Signal opkald</string>
@@ -557,6 +565,8 @@
   <string name="RatingManager_no_thanks">Nej tak</string>
   <string name="RatingManager_later">Senere</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ups, det ser ud til at Play Butik ikke er installeret på din enhed</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokér kontakten?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du vil ikke længere modtage beskeder eller opkald fra kontakten</string>
@@ -1416,12 +1426,8 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Generér alfanumerisk PIN</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Generér numerisk PIN</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN skal minimum være på %1$d karakters længde</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN skal være på mindst %1$d cifre</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Opret en ny PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Da du stadig er logget ind, kan du oprette en ny PIN. Når du er logget ud, har du ingen muligheder for at gendanne din PIN</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Opret din PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PINs tilføjer et ekstra lag af sikkerhed til din konto. Skriv din PIN ned og opbevar den et sikkert sted. Den kan ikke gendannes</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN´s passer ikke. Prøv igen</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Bekræft din PIN</string>
@@ -1430,15 +1436,11 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="ConfirmKbsPinFragment__pin_created">PIN oprettet</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Introducerer PIN´s</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Tilføj et ekstra lag af sikkerhed til din konto. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Læs mere</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Lær mere</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Registreringsnøgle = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Din registreringsnøgle kaldes fremover for en PIN, og gør mere. Opdater nu! %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Læs mere om PIN´s</string>
   <string name="KbsSplashFragment__update_pin">Opdatér PIN</string>
   <string name="KbsSplashFragment__create_your_pin">Opret din PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Påmind mig senere</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Skriv din Signal PIN</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">For at hjælpe med at huske din PIN, beder vi dig om at skrive den periodisk. Vi vil bede om den sjældnere over tid</string>
@@ -1451,20 +1453,19 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Din konto er blevet låst for at beskytte dit privatliv og din sikkerhed. Efter %1$d dages inaktivitet på din konto, vil du kunne genregistrere dette mobilnummer uden brug af PIN. Alt indhold vil blive slettet</string>
   <string name="AccountLockedFragment__next">Næste</string>
   <string name="AccountLockedFragment__learn_more">Lær mere</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Skriv din PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Skriv den PIN du oprettede til din konto. Den er anderledes end din SMS verifikationskode</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Skriv alfanumerisk PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Skriv numerisk PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Næste</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Forkert PIN. Prøv igen</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Forkert PIN. %1$d tilbageværende forsøg</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Glemt PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Forkert PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Du har %1$d forsøg tilbage. Hvis du bruger alle forsøg vil din konto blive låst i %2$d dage. Efter %3$d dages inaktivitet, kan du genregistrere uden din PIN. Din konto vil blive fjernet og alt indhold slettet</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Glemt din PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Af sikkerhed for dit privatliv, er der ingen mulighed for at gendanne din PIN. Hvis du bruger alle forsøg, kan du genverificere med SMS efter %1$d dages inaktivitet. I sådant tilfælde vil din konto blive fjernet og alt indhold slettet</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Skriv din PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Skriv den PIN du oprettede til din konto. Den er anderledes end din SMS verifikationskode</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Skriv alfanumerisk PIN</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Skriv numerisk PIN</string>
+  <string name="RegistrationLockFragment__next">Næste</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Forkert PIN. Prøv igen</string>
+  <string name="RegistrationLockFragment__forgot_pin">Glemt PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Forkert PIN</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Glemt din PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Introducerer PIN´s</string>
+  <string name="KbsMegaphone__update_pin">Opdatér PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transport ikon</string>
   <string name="ConversationListFragment_loading">Henter…</string>
@@ -1506,6 +1507,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="BackupDialog_disable_and_delete_all_local_backups">Deaktivér og slet alle lokale backup\'s?</string>
   <string name="BackupDialog_delete_backups_statement">Slet backup\'s</string>
   <string name="BackupDialog_copied_to_clipboard">Kopieret til udklipsholder</string>
+  <string name="BackupDialog_verify">Verificér</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal kræver tilladelse til at tilgå ekstern placering for at oprette backups, hvilket det er blevet nægtet. Gå venligst via appens menu til Indstillinger, vælg \"Tilladelser\" og tilvælg \"Hukommelse\"</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Sidste backup: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Pågående</string>
@@ -1525,6 +1527,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences_app_protection__signal_pin">Signal PIN</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Skift</string>
+  <string name="preferences_app_protection__create">Opret</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Din PIN tilføjer et ekstra lag af sikkerhed og laver en backup af din konto. Du vil blive spurgt om den når du registrerer dit nummer ved Signal. Hvis du glemmer din PIN, bliver du låst ude af din konto i 7 dage</string>
   <string name="AppProtectionPreferenceFragment_none">Ingen</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Verifikationskode er ikke den samme, som den kode du netop har modtaget på SMS. Indtast venligst koden du tidligere har indtastet i applikationen</string>
