--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -53,6 +53,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(βίντεο)</string>
   <string name="DraftDatabase_Draft_location_snippet">(τοποθεσία)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(απάντηση)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Πινακοθήκη</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Αρχείο</string>
+  <string name="AttachmentKeyboard_contact">Επαφή</string>
+  <string name="AttachmentKeyboard_location">Τοποθεσία</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Δεν μπορεί να βρεθεί εφαρμογή για επιλογή πολυμέσων.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio"> Το Signal χρειάζεται τα δικαιώματα Αποθηκευτικού Χώρου για να μπορούμε να επισυνάψουμε φωτογραφίες, βίντεο ή κομμάτια ήχου, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε το \"Αποθηκευτικός Χώρος\". </string>
@@ -398,7 +404,8 @@
   <string name="MediaOverviewActivity_audio">Ήχος</string>
   <string name="MediaOverviewActivity_video">Βίντεο</string>
   <string name="MediaOverviewActivity_image">Εικόνα</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Κλήση Signal εν εξελίξει</string>
   <string name="NotificationBarManager__establishing_signal_call">Γίνεται κλήση Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Εισερχόμενη κλήση Signal</string>
@@ -499,6 +506,8 @@
   <string name="RatingManager_no_thanks">Όχι, ευχαριστώ</string>
   <string name="RatingManager_later">Αργότερα</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ουπς, δε φαίνεται να έχετε εγκατεστημένη την εφαρμογή Play Store στην συσκευή σας.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Μπλοκάρισμα αυτής της επαφής;</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Δε θα λαμβάνετε πλέον μηνύματα και κλήσεις από αυτή την επαφή.</string>
@@ -1275,6 +1284,7 @@
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Επιβεβαιώστε το PIN σας.</string>
   <!--KbsSplashFragment-->
+  <string name="KbsSplashFragment__learn_more">Μάθετε περισσότερα</string>
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__skip">Παράλειψη</string>
   <string name="KbsReminderDialog__submit">Αποστολή</string>
@@ -1283,10 +1293,11 @@
   <string name="AccountLockedFragment__next">Επόμενο</string>
   <string name="AccountLockedFragment__learn_more">Μάθετε περισσότερα</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Επόμενο</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Ξεχάσατε το PIN;</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Λανθασμένο ΡΙΝ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Ξεχάσατε το PIN;</string> -->
+  <string name="RegistrationLockFragment__next">Επόμενο</string>
+  <string name="RegistrationLockFragment__forgot_pin">Ξεχάσατε το PIN;</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Λανθασμένο ΡΙΝ</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Ξεχάσατε το PIN;</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Μεταφορά εικονίδιου</string>
   <string name="ConversationListFragment_loading">Φόρτωση…</string>
@@ -1341,6 +1352,7 @@
   <string name="preferences_app_protection__screen_lock">Κλείδωμα οθόνης</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Κλείδωμα της πρόσβασης στο Signal με την οθόνη κλειδώματος του Android ή με δακτυλικό αποτύπωμα</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Χρονικό όριο αδράνειας κλειδώματος οθόνης</string>
+  <string name="preferences_app_protection__create">Δημιουργία</string>
   <string name="AppProtectionPreferenceFragment_none">Κανένα</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Το PIN κλειδώματος εγγραφής δεν είναι το ίδιο με το SMS με τον κωδικό επιβεβαίωσης που μόλις λάβατε. Παρακαλώ γράψτε το PIN που είχατε ρυθμίσει παλαιότερα μέσω της εφαρμογής.</string>
   <string name="registration_activity__registration_lock_pin">PIN κλειδώματος εγγραφής</string>
