--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(videaĵo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(loko)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(respondo)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galerio</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Dosiero</string>
+  <string name="AttachmentKeyboard_contact">Kontakto</string>
+  <string name="AttachmentKeyboard_location">Loko</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Ne eblas trovi aplikaĵon por malfermi aŭdvidaĵon.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal bezonas la Konservejo-permeson por almeti bildojn, videojn aŭ aŭdaĵojn, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Konservejo“.</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Sendita de vi</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Sendita de %1$s al %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Sendita de vi al %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Memorigi min poste</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-alvoko fariĝanta</string>
   <string name="NotificationBarManager__establishing_signal_call">Starigo de Signal-alvoko</string>
   <string name="NotificationBarManager__incoming_signal_call">Envena Signal-alvoko</string>
@@ -556,6 +564,8 @@
   <string name="RatingManager_no_thanks">Ne, dankon</string>
   <string name="RatingManager_later">Poste</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Nu, la aplikaĵo „Play Store“ ŝajne ne estas instalita sur via aparato.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Ĉu bloki ĉi tiun kontakton?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Vi ne plu ricevos mesaĝojn kaj alvokojn el tiu kontakto.</string>
@@ -1415,12 +1425,8 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Krei literciferan PIN</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Krei ciferan PIN</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN estu almenaŭ %1$d signojn longa</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN estu almenaŭ %1$d ciferajn longa</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Krei novan PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Ĉar vi jam estas ensalutinta, vi povas krei novan PIN. Kiam vi estas elsalutinta, ne ekzistas maniero rehavi vian PIN.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Krei vian PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN aldonas plian tavolon de sekurigo ĉe via konto. Skribu vian PIN kaj konservu ĝin sekurloke. Ĝi ne estas rehavebla.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">La du PIN-oj malsamas. Re-provu.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Konfirmu vian PIN.</string>
@@ -1429,15 +1435,11 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="ConfirmKbsPinFragment__pin_created">PIN kreiĝis.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Jen la „persona identiga numero“ (PIN)</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Aldonu plian tavolon de sekurigo al via konto. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Legu pli ĉi tie.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Scii pli</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Bloko de registriĝo = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Via „bloko de registriĝo“ nomiĝas nun „PIN“, kaj ĝi faras pli. Ĝisdatigu ĝin nun. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Legu pli pri PIN.</string>
   <string name="KbsSplashFragment__update_pin">Ĝisdatigi PIN-on</string>
   <string name="KbsSplashFragment__create_your_pin">Krei vian PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Memorigi min poste</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Entajpu vian Signal-PIN-on</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Por helpi vin memorigi vian PIN, ni petos vin entajpi ĝin tempaltempe. Ni mapli petos vin laŭtempe.</string>
@@ -1450,20 +1452,19 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Via konto ŝlosiĝis por protekti vian privatecon kaj sekurecon. Post %1$d tagoj de neaktiveco, vi povos re-registrigi tiun telefonnumeron sen bezono de via PIN. Ĉiu enhavo foriĝos.</string>
   <string name="AccountLockedFragment__next">Sekva</string>
   <string name="AccountLockedFragment__learn_more">Scii pli</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Entajpu vian PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Entajpu la PIN-on, kiun vi kreis por via konto. Ĝi ne estas la sama kiel la SMS-kontrolkodo.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Entajpu literciferan PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Entajpu ciferan PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Sekva</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Malĝusta PIN. Reprovu.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Malĝusta PIN. Restas %1$d provoj.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Ĉu vi forgesis vian personan identigan numeron?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Malĝusta PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Restas %1$d provoj. Se vi ne plu havas provojn, via konto ŝlosiĝos dum %2$d tagoj. Post %3$d tagoj sen aktivaĵoj, vi povos re-registriĝi sen via PIN. Via konto kaj ĉiu enhavo forviŝiĝos.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Ĉu vi forgesis vian PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Pro via protekto kaj sekureco, tute ne eblas rehavi vian PIN. Se vi ne plu povas reprovi, vi povos re-kontroli vian konton per SMS post %1$d tagoj de neaktivaĵoj. Ĉi-okaze, via konto kaj ĉiu enhavo forviŝiĝos.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Entajpu vian PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Entajpu la PIN-on, kiun vi kreis por via konto. Ĝi ne estas la sama kiel la SMS-kontrolkodo.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Entajpu literciferan PIN</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Entajpu ciferan PIN</string>
+  <string name="RegistrationLockFragment__next">Sekva</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Malĝusta PIN. Reprovu.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Ĉu vi forgesis vian personan identigan numeron?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Malĝusta PIN</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Ĉu vi forgesis vian PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Jen la „persona identiga numero“ (PIN)</string>
+  <string name="KbsMegaphone__update_pin">Ĝisdatigi PIN-on</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Piktogramo pri sendometodo</string>
   <string name="ConversationListFragment_loading">Ŝargado…</string>
