--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(vídeo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(posición)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(responder)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galería</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Archivo</string>
+  <string name="AttachmentKeyboard_contact">Contacto</string>
+  <string name="AttachmentKeyboard_location">Posición</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">No se pudo encontrar una aplicación para el contenido seleccionado.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal necesita acceso al almacenamiento de tu teléfono para adjuntar fotos, vídeos o audio. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Almacenamiento».</string>
@@ -452,7 +458,10 @@
   <string name="MediaOverviewActivity_sent_by_you">Enviado por ti</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Enviado por %1$s a %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Enviado por ti a %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">Las reacciones a mensajes han llegado</string>
+  <string name="Megaphones_remind_me_later">Recordar más tarde</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Llamada de Signal en curso</string>
   <string name="NotificationBarManager__establishing_signal_call">Estableciendo llamada de Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Llamada de Signal entrante</string>
@@ -556,6 +565,8 @@
   <string name="RatingManager_no_thanks">No, gracias</string>
   <string name="RatingManager_later">Más tarde</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Vaya, la aplicación de la Play Store no parece estar instalada.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">¿Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Ya no recibirás mensajes y llamadas de este contacto.</string>
@@ -1417,29 +1428,23 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Crear PIN alfanumérico</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Crear PIN numérico</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">El PIN debe constar de al menos %1$d caracteres</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">El PIN debe constar al menos de %1$d cifras</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Crear nuevo PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Al estar la sesión aún abierta, puedes crear un nuevo PIN. Cuando cierres la sesión, no habrá manera de recuperar tu PIN.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Crea tu PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">El PIN añade una capa extra de seguridad a tu cuenta. Escribe tu PIN y mantenlo en un lugar seguro. No se puede recuperar.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">El PIN no coincide. Inténtalo de nuevo.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Confirma el número PIN.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Fallo al crear el PIN</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Tu PIN no se ha guardado. Volveremos a preguntarte para crear el PIN más tarde.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN creado.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Vuelve a introducir el PIN</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">¡El PIN ha llegado!</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Añade otro nivel de seguridad a tu cuenta. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Lee más aquí.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Saber más</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Bloqueo de registro = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Tu bloqueo de registro ahora se llama PIN, y permite más funciones. Actualiza ahora. %1$s</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">El bloqueo de registro ahora se llama PIN, y permite más funciones. Actualiza ahora.</string>
   <string name="KbsSplashFragment__read_more_about_pins">Saber más sobre el PIN.</string>
   <string name="KbsSplashFragment__update_pin">Actualizar PIN</string>
   <string name="KbsSplashFragment__create_your_pin">Crea tu PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Recordar más tarde</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Introduce tu PIN de Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Para ayudarte a memorizar el PIN, te solicitaremos introducirlo de vez en cuando. Con el tiempo lo solicitaremos con menos frecuencia.</string>
@@ -1452,20 +1457,23 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Tu cuenta ha sido bloqueada para proteger tu privacidad y seguridad. Después de %1$d días de inactividad en tu cuenta, podrás volver a registrar este número de teléfono sin necesidad de tu PIN. Se borrará todo el contenido de tu cuenta.</string>
   <string name="AccountLockedFragment__next">Siguiente</string>
   <string name="AccountLockedFragment__learn_more">Saber más</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Introduce tu PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Introduce el PIN que has seleccionado al crear tu cuenta de Signal. El PIN es diferente al del SMS de verificación.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Introduce PIN alfanumérico</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Introduce PIN numérico</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Siguiente</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PIN incorrecto. Inténtalo de nuevo.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PIN incorrecto. Te quedan %1$d intentos.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">¿No recuerdas el PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PIN incorrecto</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Te quedan %1$d intentos. Si superas el número de intentos, tu cuenta quedará bloqueada por %2$d días. Después de %3$d días de inactividad, podrás volver a registrarte sin tu PIN. Todo el contenido de tu cuenta se eliminará.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">¿Has olvidado el PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Para proteger tu privacidad y seguridad, no hay manera de recuperar tu PIN. Si agotas todos los intentos, podrás volver a verificar tu cuenta por SMS tras %1$d días de inactividad. En este caso, todo el contenido de tu cuenta se eliminará.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Introduce tu PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Introduce el PIN que has seleccionado al crear tu cuenta de Signal. El PIN es diferente al del SMS de verificación.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Introduce PIN alfanumérico</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Introduce PIN numérico</string>
+  <string name="RegistrationLockFragment__next">Siguiente</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PIN incorrecto. Inténtalo de nuevo.</string>
+  <string name="RegistrationLockFragment__forgot_pin">¿No recuerdas el PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PIN incorrecto</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">¿Has olvidado el PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">Crear PIN</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">El PIN añade otro nivel de seguridad a tu cuenta de Signal.</string>
+  <string name="KbsMegaphone__create_pin">Crea tu PIN</string>
+  <string name="KbsMegaphone__introducing_pins">¡El PIN ha llegado!</string>
+  <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">Tu bloqueo de registro ahora se llama PIN, y es más seguro. Actualizar sólo lleva unos segundos.</string>
+  <string name="KbsMegaphone__update_pin">Actualizar PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icono de transporte</string>
   <string name="ConversationListFragment_loading">Cargando …</string>
@@ -1507,6 +1515,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="BackupDialog_disable_and_delete_all_local_backups">¿Desactivar y eliminar todas las copias de seguridad locales?</string>
   <string name="BackupDialog_delete_backups_statement">Eliminar copias de seguridad</string>
   <string name="BackupDialog_copied_to_clipboard">Copiado al portapapeles</string>
+  <string name="BackupDialog_verify">Verificar número</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal necesita acceso al almacenamiento en unidades externas para crear copias de seguridad. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Almacenamiento».</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Última copia de seguridad: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">En curso</string>
@@ -1526,6 +1535,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_app_protection__signal_pin">PIN de Signal</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Modificar</string>
+  <string name="preferences_app_protection__create">Crear</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Tu PIN añade una capa de seguridad extra y protege tu cuenta. Te preguntaremos el PIN al registrar tu número desde otro dispositivo en Signal. Si olvidas tu PIN, bloquearemos tu cuenta durante 7 días.</string>
   <string name="AppProtectionPreferenceFragment_none">Ninguno</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">El PIN de bloqueo de registro es distinto del código de verificación que acabas de recibir por SMS. Por favor, introduce el PIN que has seleccionado previamente en los ajustes de Signal.</string>
