--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(asukoht)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(vastus)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galerii</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fail</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Asukoht</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Ei leia rakendust meediafaili valimiseks.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal vajab fotode, videote või audiofailide manustamiseks ligipääsu salvestusmeediale, kuid see on püsivalt keelatud. Palun ava rakenduse sätete menüü, vali \"Õigused\" ja luba \"Salvestusmeedia\".</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Saadetud sinu poolt</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Saadetud %1$s poolt kontaktile %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Saadetud sinu poolt kontaktile %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Tuleta hiljem meelde</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signali kõne käib</string>
   <string name="NotificationBarManager__establishing_signal_call">Alustan Signali kõnet</string>
   <string name="NotificationBarManager__incoming_signal_call">Sissetulev Signali kõne</string>
@@ -556,6 +564,8 @@
   <string name="RatingManager_no_thanks">Tänan, ei</string>
   <string name="RatingManager_later">Hiljem</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ups, tundub et Play poe rakendus puudub sinu seadmest.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokeerid selle kontakti?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Sa ei saa sellelt kontaktilt enam sõnumeid ja kõnesid vastu võtta.</string>
@@ -1420,14 +1430,13 @@
   <string name="CreateKbsPinFragment__create_your_pin">Loo enda PIN-kood</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Kinnita enda PIN-kood.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Sisesta PIN-kood uuesti</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Tutvustame PIN-koode</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Loe lisaks siit.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Uuri täpsemalt</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Registreerimislukk = PIN-kood</string>
   <string name="KbsSplashFragment__update_pin">Uuenda PINi</string>
   <string name="KbsSplashFragment__create_your_pin">Loo enda PIN-kood</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Tuleta hiljem meelde</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Sisesta Signal-i PIN-kood</string>
   <string name="KbsReminderDialog__skip">Jäta vahele</string>
@@ -1437,16 +1446,18 @@
   <string name="AccountLockedFragment__account_locked">Konto lukustatud</string>
   <string name="AccountLockedFragment__next">Edasi</string>
   <string name="AccountLockedFragment__learn_more">Uuri täpsemalt</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Sisesta enda PIN-kood</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Sisesta PIN-kood, mille tegid enda konto jaoks. See erineb SMS-kontrollkoodist.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Sisesta tähtnumbriline PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Sisesta numbriline PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Edasi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Unustasid PINi?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Sobimatu PIN-kood</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Kas unustasid PIN-koodi?</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Sisesta enda PIN-kood</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Sisesta PIN-kood, mille tegid enda konto jaoks. See erineb SMS-kontrollkoodist.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Sisesta tähtnumbriline PIN</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Sisesta numbriline PIN</string>
+  <string name="RegistrationLockFragment__next">Edasi</string>
+  <string name="RegistrationLockFragment__forgot_pin">Unustasid PINi?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Sobimatu PIN-kood</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Kas unustasid PIN-koodi?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Tutvustame PIN-koode</string>
+  <string name="KbsMegaphone__update_pin">Uuenda PINi</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transpordi ikoon</string>
   <string name="ConversationListFragment_loading">Laadimine…</string>
@@ -1488,6 +1499,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">Kustuta ja keela kõik kohalikud varundused?</string>
   <string name="BackupDialog_delete_backups_statement">Kustuta varundused</string>
   <string name="BackupDialog_copied_to_clipboard">Lõikelauale kopeeritud</string>
+  <string name="BackupDialog_verify">Kinnita</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal vajab välismälu õigust, et luua varundusi, ent see on püsivalt keelatud. Palun jätka rakenduse seadetes, vali \"Load\" ning luba \"Mäluruum\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Viimane varundus: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Töötamisel</string>
@@ -1507,6 +1519,7 @@
   <string name="preferences_app_protection__signal_pin">Signali PIN</string>
   <string name="preferences_app_protection__pin">PIN-kood</string>
   <string name="preferences_app_protection__change">Muuda</string>
+  <string name="preferences_app_protection__create">Loo</string>
   <string name="AppProtectionPreferenceFragment_none">Puudub</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Registreerimisluku PIN ei ole sama, mis SMSi kinnituskood, mille just said. Palun sisesta PIN, mille seadistasid eelnevalt rakenduse siseselt.</string>
   <string name="registration_activity__registration_lock_pin">Registreerimisluku PIN</string>
