--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(ویدئو)</string>
   <string name="DraftDatabase_Draft_location_snippet">(موقعیت)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(پاسخ)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">گالری</string>
+  <string name="AttachmentKeyboard_gif">جیف</string>
+  <string name="AttachmentKeyboard_file">فایل</string>
+  <string name="AttachmentKeyboard_contact">مخاطب</string>
+  <string name="AttachmentKeyboard_location">موقعیت</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">برنامه‌ای برای انتخاب رسانه پیدا نشد.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal برای پیوست کردن فایل‌های تصویری و صوتی نیاز به دسترسی به حافظهٔ دارد اما این اجازه داده نشده است. لطفاً به منو تنظیمات برنامه‌ رفته، \" مجوزها\" را انتخاب کنید و \"حافظهٔ\" را فعال کنید.</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">ارسال شده توسط شما</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">ارسال شده از طرف %1$s به %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">ارسال شده توسط شما به %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">بعداً به من یادآوری کن</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">تماس Signal در جریان است</string>
   <string name="NotificationBarManager__establishing_signal_call">در حال برقراری تماس Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">تماس ورودی Signal</string>
@@ -555,6 +563,8 @@
   <string name="RatingManager_no_thanks">نه ممنون</string>
   <string name="RatingManager_later">بعدا</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">اوه، به نظر می آید برنامه پلی استور روی دستگاه شما نصب نمی باشد.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">مسدود کردن این مخاطب؟</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">شما ديگر هیچ تماس و پيامی از این مخاطب دريافت نخواهید کرد.</string>
@@ -1412,29 +1422,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">ایجاد پین الفبایی‌ عددی</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">ایجاد پین عددی</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">پین باید حداقل دارای %1$d باشد</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">پین باید حداقل دارای %1$d رقم باشد</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">یک پین جدید ایجاد کنید</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">چون همچنان داخل برنامه هستید، می‌توانید یک پین جدید ایجاد کنید. زمانی که خارج شدید، راهی برای بازیابی پین شما وجود ندارد.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">پین خود را ایجاد کنید</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">پین‌ها یک یک لایه امنیتی دیگر به حساب شما اضافه می کنند. پین خود را بنویسید و در یک جای امن از آن نگهداری کنید. قابل بازیابی نیست.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">پین‌ها مطابقت ندارند. دوباره تلاش کنید.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">پین خود را تایید کنید</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">پین ایجاد نشد</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">پین شما ذخیره نشد. ما بعداً از شما خواهیم خواست تا یک پین دیگر ایجاد کنید.</string>
   <string name="ConfirmKbsPinFragment__pin_created">پین ایجاد شد.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">وارد کردن دوباره پین</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">تعریف پین‌ها</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">یک لایه امنیتی دیگر به حساب کاربری خود اضافه کنید. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">در اینجا بیشتر بخوانید.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">اطلاعات بیشتر</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">قفل ثبت‌نام = پین</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">قفل ثبت‌نام شما اکنون پین نام دارد، و کارهای بیشتری را انجام می دهد. الان آن را به‌روزرسانی کنید. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">درباره پین‌ها بیشتر بخوانید.</string>
   <string name="KbsSplashFragment__update_pin">به‌روزرسانی پین</string>
   <string name="KbsSplashFragment__create_your_pin">پین خود را ایجاد کنید</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">بعداً به من یادآوری کن</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">پین Signal خود را وارد کنید</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">برای کمک به شما در به خاطر سپردن پین خود، ما به صورت دوره ای از شما خواهیم خواست تا آن را وارد کنید. با گذر زمان آن را کمتر از شما خواهیم خواست.</string>
@@ -1447,20 +1450,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">حساب کاربری شما به منظور محافظت از حریم خصوصی و امنیت شما قفل شده است. پس از %1$d روز عدم فعالیت در حساب می توانید دوباره با این شماره تلفن بدون نیاز به پین خود ثبت‌نام کنید. تمام محتویات پاک خواهند شد.</string>
   <string name="AccountLockedFragment__next">بعدی</string>
   <string name="AccountLockedFragment__learn_more">اطلاعات بیشتر</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">پین خود را وارد کنید</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">پین ایجاد شده برای حساب خود را وارد کنید. این با کد تأیید پیامک شما تفاوت دارد.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">پین حرفی‌عددی وارد کنید</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">پین عددی وارد کنید</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">بعدی</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">پین نادرست. دوباره تلاش کنید.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">پین نادرست. %1$d تلاش دیگر باقی مانده است.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">پین را فراموش کرده اید؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">پین نادرست</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">%1$d تلاش دیگر باقی مانده است. اگر تلاش دیگری برای شما باقی نماند، حساب شما به مدت %2$d روز قفل خواهد شد. پس از %3$d روز عدم فعالیت، شما می توانید بدون نیاز به پین خود دوباره ثبت‌نام کنید. حساب شما پاک خواهد شد و تمام محتویات آن از بین خواهد رفت.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">پین خود را فراموش کرده‌اید؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">برای حفظ امنیت و حریم خصوصی شما، هیچ راهی برای بازیابی پین وجود ندارد. اگر تلاش دیگری برای شما باقی نماند، می‌توانید  پس از %1$d روز عدم‌ فعالیت قادر هستید از طریق پیامک مجدداً تأیید کنید. در این مورد، حساب شما پاک خواهد شد و تمام محتویات آن نیز از بین خواهد رفت.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">پین خود را وارد کنید</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">پین ایجاد شده برای حساب خود را وارد کنید. این با کد تأیید پیامک شما تفاوت دارد.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">پین حرفی‌عددی وارد کنید</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">پین عددی وارد کنید</string>
+  <string name="RegistrationLockFragment__next">بعدی</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">پین نادرست. دوباره تلاش کنید.</string>
+  <string name="RegistrationLockFragment__forgot_pin">پین را فراموش کرده اید؟</string>
+  <string name="RegistrationLockFragment__incorrect_pin">پین نادرست</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">پین خود را فراموش کرده‌اید؟</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">تعریف پین‌ها</string>
+  <string name="KbsMegaphone__update_pin">به‌روزرسانی پین</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">نگارک انتقال</string>
   <string name="ConversationListFragment_loading">در حال بارگذاری…</string>
@@ -1502,6 +1504,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">غیرفعال کردن و پاک کردن همه پشتیبان‌های محلی؟</string>
   <string name="BackupDialog_delete_backups_statement">حذف پشتیبان‌ها</string>
   <string name="BackupDialog_copied_to_clipboard">روی کلیپ بورد کپی شد</string>
+  <string name="BackupDialog_verify">تآیید</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal برای پشتیبان گیری نیاز به مجوز حافظهٔ دارد، اما اجازه آن داده نشده است. لطفاً به تنظیمات برنامه رفته، \"مجوزها\" را انتخاب کنید و \"حافظهٔ\" را فعال کنید.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">آخرین پشتیبان: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">در حال انجام</string>
@@ -1521,6 +1524,7 @@
   <string name="preferences_app_protection__signal_pin">پین Signal</string>
   <string name="preferences_app_protection__pin">پین</string>
   <string name="preferences_app_protection__change">تغییر</string>
+  <string name="preferences_app_protection__create">ایجاد</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">پین شما یک لایه امنیتی دیگر اضافه می کند و از حساب شما پشتیبان می گیرد. هنگامی که با شماره تلفن خود در Signal ثبت نام می کنید از شما خواسته خواهد شد. اگر پین خود را فراموش کردید، حساب شما به مدت 7 روز قفل خواهد شد.</string>
   <string name="AppProtectionPreferenceFragment_none">هیچ کدام</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">پین قفل ثبت‌نام همان کد تأییدی که الان از طریق پیامک دریافت کردید نیست. لطفاً رمزی را که قبلاً در برنامه تنظیم کرده بودید را وارد کنید.</string>
