--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(vidéo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(position)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(réponse)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galerie</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fichier</string>
+  <string name="AttachmentKeyboard_contact">Contact</string>
+  <string name="AttachmentKeyboard_location">Position</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Impossible de trouver une appli pour sélectionner le média.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal exige l’autorisation Stockage afin de joindre des photos, des vidéos ou du son, mais elle a été refusée définitivement. Veuillez accéder au menu des paramètres des applis, sélectionner « Autorisations » et activer « Stockage ».</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Envoyé par vous</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Envoyé par %1$s à %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Envoyé par vous à %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Me le rappeler plus tard</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Appel Signal en cours</string>
   <string name="NotificationBarManager__establishing_signal_call">Établissement de l’appel Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Appel Signal entrant</string>
@@ -556,6 +564,8 @@
   <string name="RatingManager_no_thanks">Non merci</string>
   <string name="RatingManager_later">Ultérieurement</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Oups, il semble que la logithèque Play Store n’est pas installée sur votre appareil.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquer ce contact ?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Vous ne recevrez plus ni message ni appel de ce contact.</string>
@@ -1407,29 +1417,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Créer un NIP alphanumérique</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Créer un NIP numérique</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">Votre NIP doit comporter au moins %1$d caractères</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">Votre NIP doit comporter au moins %1$d chiffres</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Créer un nouveau NIP</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Comme vous êtes encore connecté, vous pouvez créer un nouveau NIP. Si vous êtes déconnecté, il est impossible de récupérer votre NIP.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Créer votre NIP</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">Les NIP ajoutent une couche supplémentaire de sécurité à votre compte. Prenez votre NIP par écrit et gardez-le en lieu sûr. Il ne peut pas être récupéré.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">Les NIP ne correspondent pas. Veuillez ressayez.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Confirmez votre NIP</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Échec de création du NIP</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Votre NIP n’a pas été enregistré. Nous vous inviterons à en créer un ultérieurement.</string>
   <string name="ConfirmKbsPinFragment__pin_created">Votre NIP a été créé.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Saisissez à nouveau votre NIP.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Nous présentons les NIP</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Ajoutez une couche supplémentaire de sécurité à votre compte. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Apprenez-en davantage ici.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">En savoir plus</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Blocage de l’inscription = NIP</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Votre blocage de l’inscription s’appelle désormais un NIP et il accomplit encore plus. Mettez-le à jour maintenant. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Apprenez-en davantage sur les NIP.</string>
   <string name="KbsSplashFragment__update_pin">Mettre le NIP à jour</string>
   <string name="KbsSplashFragment__create_your_pin">Créer votre NIP</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Me le rappeler plus tard</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Saisissez votre NIP Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Pour vous aider à mémoriser votre NIP, nous vous demanderons de le saisir régulièrement. Nous vous le demanderons de moins en moins souvent.</string>
@@ -1442,20 +1445,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Votre compte a été verrouillé afin de protéger vos données personnelles et votre sécurité. Après %1$d jours d’inactivité dans votre compte, vous pouvez réinscrire ce numéro de téléphone sans avoir besoin de votre NIP. Tout le contenu sera supprimé.</string>
   <string name="AccountLockedFragment__next">Suivant</string>
   <string name="AccountLockedFragment__learn_more">En savoir plus</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Saisissez votre NIP</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Saisissez le NIP que vous avez créé pour votre compte. Il est différent de votre code de vérification reçu par texto.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Saisir un NIP alphanumérique</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Saisir un NIP numérique</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Suivant</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Le NIP est erroné. Veuillez ressayer.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Le NIP est erroné. Il reste %1$d tentatives.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Avez-vous oublié votre NIP ?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Le NIP est erroné</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Il vous reste %1$d tentatives. Si vous épuisez le nombre de tentatives, votre compte sera verrouillé pendant %2$d jours. Après %3$d jours d’inactivité, vous pourrez vous réinscrire sans votre NIP. Votre compte sera effacé et son contenu supprimé.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Avez-vous oublié votre NIP ?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Afin de protéger vos données personnelles et votre sécurité, il est impossible de récupérer votre NIP. Si vous épuisez le nombre de tentatives, vous pouvez reconfirmer votre compte par texto après %1$d jours d’inactivité. Le cas échéant, votre compte sera effacé et son contenu supprimé.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Saisissez votre NIP</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Saisissez le NIP que vous avez créé pour votre compte. Il est différent de votre code de vérification reçu par texto.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Saisir un NIP alphanumérique</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Saisir un NIP numérique</string>
+  <string name="RegistrationLockFragment__next">Suivant</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Le NIP est erroné. Veuillez ressayer.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Avez-vous oublié votre NIP ?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Le NIP est erroné</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Avez-vous oublié votre NIP ?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Nous présentons les NIP</string>
+  <string name="KbsMegaphone__update_pin">Mettre le NIP à jour</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icône de transport</string>
   <string name="ConversationListFragment_loading">Chargement…</string>
@@ -1497,6 +1499,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">Désactiver et supprimer toutes les sauvegardes locales ?</string>
   <string name="BackupDialog_delete_backups_statement">Supprimer les sauvegardes</string>
   <string name="BackupDialog_copied_to_clipboard">Copié dans le presse-papiers</string>
+  <string name="BackupDialog_verify">Vérifier</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal exige l’autorisation d’accès à la mémoire externe afin de créer des sauvegardes, mais elle a été refusée définitivement. Veuillez accéder au menu des paramètres des applis, sélectionner « Autorisations » et activer « Stockage ».</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Dernière sauvegarde : %s</string>
   <string name="ChatsPreferenceFragment_in_progress">En cours</string>
@@ -1516,6 +1519,7 @@
   <string name="preferences_app_protection__signal_pin">NIP de Signal</string>
   <string name="preferences_app_protection__pin">NIP</string>
   <string name="preferences_app_protection__change">Changer</string>
+  <string name="preferences_app_protection__create">Créer</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Votre NIP ajoute une couche supplémentaire de sécurité et sauvegarde votre compte. Il vous sera demandé quand vous inscrirez votre numéro de téléphone auprès de Signal. Si vous oubliez votre NIP, votre compte sera verrouillé pendant sept jours.</string>
   <string name="AppProtectionPreferenceFragment_none">Aucun</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Le NIP de blocage de l’inscription ne correspond pas au code de vérification que vous venez de recevoir par texto. Veuillez saisir le NIP que vous avez précédemment défini dans l’application.</string>
