--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(વિડિયો)</string>
   <string name="DraftDatabase_Draft_location_snippet">(સ્થાન)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(જવાબ)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">ગેલેરી</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">ફાઇલ</string>
+  <string name="AttachmentKeyboard_contact">સંપર્ક</string>
+  <string name="AttachmentKeyboard_location">સ્થળ</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">મીડિયા પસંદ કરવા માટે કોઈ એપ્લિકેશન મળતું નથી.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">ફોટા, વિડિયો અથવા ઓડિયો ને જોડવા માટે Signal ને સ્ટોરેજ પરવાનગીની જરૂર હોય છે, પરંતુ તે કાયમી ધોરણે નામંજૂર કરવામાં આવી છે. કૃપા કરીને એપ્લિકેશન સેટિંગ્સ મેનૂ પર ચાલુ રાખો, \"પરવાનગી\" પસંદ કરો અને \"સ્ટોરેજ\" સક્ષમ કરો.</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">તમારા દ્વારા મોકલેલ</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s દ્વારા %2$s મોકલ્યો</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">%1$s ને તમારા દ્વારા મોકલાયેલ</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">મને પછી યાદ કરાવો</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal કૉલ ચાલુ છે</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal કૉલ સ્થાપિત કરી રહ્યા છીએ</string>
   <string name="NotificationBarManager__incoming_signal_call">આવી રહેલ Signal કૉલ</string>
@@ -555,6 +563,8 @@
   <string name="RatingManager_no_thanks">ના આભાર</string>
   <string name="RatingManager_later">પછી</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">અરેરે, Play Store એપ્લિકેશન તમારા ડિવાઇસ પર ઇન્સ્ટોલ કરેલી દેખાતી નથી.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">આ સંપર્કને અવરોધિત કરો?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">હવેથી આ સંપર્કોમાંથી તમને સંદેશા અને કૉલ્સ પ્રાપ્ત થશે નહીં.</string>
@@ -1409,12 +1419,8 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">આલ્ફાન્યુમેરિક પિન બનાવો</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">સંખ્યાત્મક PIN બનાવો</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN ઓછામાં ઓછા %1$d અક્ષરોનો હોવો જોઈએ</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN ઓછામાં ઓછો %1$d અંકનો હોવો જોઈએ</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">નવો PIN બનાવો</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">કારણ કે તમે હજી પણ લૉગઇન છો, તમે એક નવો PIN બનાવી શકો છો. જ્યારે તમે લૉગ આઉટ થઈ જાઓ છો, ત્યારે તમારો PIN ફરીથી પ્રાપ્ત કરવાની કોઈ રીત નથી.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">તમારો PIN બનાવો</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN તમારા એકાઉન્ટ માં સુરક્ષાનો વધારાનો સ્તર ઉમેરશે. તમારો PIN લખો અને તેને સુરક્ષિત જગ્યાએ રાખો. તે પુન:પ્રાપ્ત કરી શકાતું નથી.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN મેળ ખાતા નથી. ફરીથી પ્રયત્ન કરો.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">તમારા PIN ની પુષ્ટિ કરો.</string>
@@ -1423,15 +1429,11 @@
   <string name="ConfirmKbsPinFragment__pin_created">PIN બનાવ્યો.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">PIN રજૂ કરી રહ્યા છીએ</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">તમારા એકાઉન્ટ માં સુરક્ષાનું બીજું સ્તર ઉમેરો. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">અહીં વધુ વાંચો.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">વધુ શીખો</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">રજીસ્ટ્રેશન લૉક = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">રજીસ્ટ્રેશન લૉક PIN તમારા નોંધણી લૉકને હવે PIN કહેવામાં આવે છે, અને તે વધુ કરે છે. હવે તેને અપડેટ કરો. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">PIN વિશે વધુ વાંચો.</string>
   <string name="KbsSplashFragment__update_pin">PIN અપડેટ કરો</string>
   <string name="KbsSplashFragment__create_your_pin">તમારો PIN બનાવો</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">મને પછી યાદ કરાવો</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">તમારો Signal પિન દાખલ કરો</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">તમને તમારો PIN યાદ રાખવામાં મદદ કરવા માટે, અમે તમને તે સમયાંતરે દાખલ કરવા માટે કહીશું. અમે તમને સમય સાથે ઓછા પૂછીએ છીએ.</string>
@@ -1444,20 +1446,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">તમારી ગોપનીયતા અને સુરક્ષાને સુરક્ષિત કરવા માટે તમારું એકાઉન્ટ લૉક થઈ ગયું છે. તમારા એકાઉન્ટ માં %1$d દિવસની નિષ્ક્રિયતા પછી તમે તમારા PIN ની જરૂર વગર આ ફોન નંબરને ફરીથી રજીસ્ટર કરી શકશો. બધી સામગ્રી કાઢી નાખવામાં આવશે.</string>
   <string name="AccountLockedFragment__next">આગળ</string>
   <string name="AccountLockedFragment__learn_more">વધુ શીખો</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">તમારો પિન દાખલ કરો</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">તમારા એકાઉન્ટ માટે તમે બનાવેલો PIN દાખલ કરો. આ તમારા SMS ચકાસણી કોડથી અલગ છે.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">આલ્ફાન્યુમેરિક PIN દાખલ કરો</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">સંખ્યાત્મક PIN દાખલ કરો</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">આગળ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">ખોટો પિન. ફરીથી પ્રયત્ન કરો.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">ખોટો PIN. %1$d પ્રયત્નો બાકી છે.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">PIN ભૂલી ગયા?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">ખોટો PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">તમારી પાસે %1$d પ્રયત્નો બાકી છે. જો તમે પ્રયાસોમાંથી બહાર નીકળી જશો તો તમારું એકાઉન્ટ %2$d દિવસ માટે લૉક રહેશે. નિષ્ક્રિયતાના %3$d દિવસ પછી, તમે તમારા પિન વિના ફરીથી રજીસ્ટર કરી શકો છો. તમારું એકાઉન્ટ ભૂંસી નાખવામાં આવશે અને બધી સામગ્રી કાઢી નાખવામાં આવશે.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">તમારો PIN ભૂલી ગયા છો?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">તમારી ગોપનીયતા અને સુરક્ષા માટે, તમારો PIN ફરીથી પ્રાપ્ત કરવાની કોઈ રીત નથી. જો તમે પ્રયત્નોનો અંત લાવો છો, તો તમે %1$d દિવસની નિષ્ક્રિયતા પછી SMS થી ફરીથી ચકાસી શકો છો. આ સ્થિતિમાં, તમારું એકાઉન્ટ ભૂંસી નાખવામાં આવશે અને બધી સામગ્રી કાઢી નાખવામાં આવશે.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">તમારો પિન દાખલ કરો</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">તમારા એકાઉન્ટ માટે તમે બનાવેલો PIN દાખલ કરો. આ તમારા SMS ચકાસણી કોડથી અલગ છે.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">આલ્ફાન્યુમેરિક PIN દાખલ કરો</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">સંખ્યાત્મક PIN દાખલ કરો</string>
+  <string name="RegistrationLockFragment__next">આગળ</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">ખોટો પિન. ફરીથી પ્રયત્ન કરો.</string>
+  <string name="RegistrationLockFragment__forgot_pin">PIN ભૂલી ગયા?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">ખોટો PIN</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">તમારો PIN ભૂલી ગયા છો?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">PIN રજૂ કરી રહ્યા છીએ</string>
+  <string name="KbsMegaphone__update_pin">PIN અપડેટ કરો</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">પરિવહન ચિહ્ન</string>
   <string name="ConversationListFragment_loading">લોડ કરી રહ્યું છે </string>
@@ -1518,6 +1519,7 @@
   <string name="preferences_app_protection__signal_pin">Signal PIN</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">બદલો</string>
+  <string name="preferences_app_protection__create">બનાવો</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">તમારો PIN સલામતીનો એક વધારાનો સ્તર ઉમેરશે અને તમારા એકાઉન્ટ નો બૅકઅપ લે. જ્યારે તમે Signal સાથે તમારો ફોન નંબર રજીસ્ટર છો ત્યારે તમને તેના માટે પૂછવામાં આવશે. જો તમે તમારો PIN ભૂલી જાઓ છો, તો તમને 7 દિવસ માટે તમારા એકાઉન્ટ માંથી લૉક આઉટ કરવામાં આવશે.</string>
   <string name="AppProtectionPreferenceFragment_none">કંઈ નહીં</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">રજીસ્ટરેશન લૉક પિન તમે હમણાં જ પ્રાપ્ત કરેલા SMS ચકાસણી કોડ જેવો નથી. કૃપા કરીને એપ્લિકેશનમાં તમે પહેલાં ગોઠવેલો પિન દાખલ કરો.</string>
