--- a/app/src/main/res/values-ha/strings.xml
+++ b/app/src/main/res/values-ha/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(Bidiyo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(Wuri)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(Amsa)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Gidan hotuna</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fayil</string>
+  <string name="AttachmentKeyboard_contact">Lambar sadarwa</string>
+  <string name="AttachmentKeyboard_location">Wuri</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Babu aikace-aikacen zabar midiya</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal na bukatar izinin ajiya domin samun damar hada hotuna, bidiyoyi ko kuma odiyo,amma kuma an hana izinin dindindin. Cigaba ka/ki shiga menun wurin saiti, zabi \"permissions\", kuma ka/ki shiga \"storage\" ka/ki bada dama.</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Kai/ke ka/kika tura</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s"> %1$s ne ya tura zuwa %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Sako daga kai/ke zuwa %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Tuna min anjima</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Ana cikin kira na Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Farawar kiran Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Shigowar kiran Signal</string>
@@ -556,6 +564,8 @@
   <string name="RatingManager_no_thanks">A\'a Nagode</string>
   <string name="RatingManager_later">Anjima</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Kash! Babu manhajar Google Play Store a wannan na\'urar.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">A toshe wannan lambar?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Zaka/ki daina samun sakwanni da kira daga wannan lambar</string>
@@ -1414,12 +1424,8 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Kirkiri lambobin sirri a hade da haruffa.</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Kirkiri lambobin sirri zalla</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">Dole sai lambobin sirri sun kai haruffa %1$d</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">Dole sai lbobin sirri sun kai wa\'adi %1$d </string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Kirkiri sabon lambobin sirri</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Sabida kana cikin Signal, zaka/ki iya kirkira sabon lambobin sirri. Idan ka/kika fita kuma, ba damar murmure lambobin sirrinka/ki.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Kirkiri lambobin sirrinka/ki</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">Lambobin sirri na kara karfin tsaron asusunka/ki. Rubuta lambobin sirrinka/ki kuma ka/ki ajiye da kyau. Baza\'a iya murmurewa ba.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">An samu kuskuren lambobin sirri. Kara gwadawa.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Tabbabtar da lambobin sirrinka/ki.</string>
@@ -1428,15 +1434,11 @@
   <string name="ConfirmKbsPinFragment__pin_created">An kirkiri lambobin sirri.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Gabatarwa da lbobin sirri</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Kara karfin tsaron asusunka/ki %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Karanta karin bayani anan.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Karin bayani</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Kullin rijista = Lambobin sirri</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Sunan makullin rijistarka/ki ya koma Lambobin sirri kuma yafi aiki. Sabunta yanzu.. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Karanta karin bayanin lambobin sirri.</string>
   <string name="KbsSplashFragment__update_pin">Sabunta lambobin sirri</string>
   <string name="KbsSplashFragment__create_your_pin">Kirkiri lambobin sirrinka/ki</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Tuna min anjima</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Shigar da lambobin sirrin Signal dinka/ki</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Domin tayakaki haddace lambobin sirrinka/ki, zamu rinka tambayan lambobin lokaci-lokaci. Zamu rage tambaya nan gaba.</string>
@@ -1449,20 +1451,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">An kulle asusunka/ki domin kare sirrinka/ki. Bayan kwana %1$d na rashin aikin asusunka/ki zaka/ki iya sake rijista da wannan lambar ba tare da bukatar lambobin sirri ba. Za\'a goge duk abubuwa da suke ciki.</string>
   <string name="AccountLockedFragment__next">Na gaba</string>
   <string name="AccountLockedFragment__learn_more">Karin bayani</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Shigar da lambobim sirri</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Sa lambobin sirri da ka/kika kirkirawa asusunka/ki. Waddannan lambobin, daban suke da waddanda aka turo maka/ki ta SMS.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Shigar da lambobin sirri mai haruffa.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Shigar da lambobin sirri mai lambobi zalla</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Na gaba</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Lambobin sirrinnan ba dai dai bane. Kara gwada.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Lambobin sirrin ba daidai bane. Damar gwajinka/ki saura %1$d </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">An manta da lambobin sirri?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Lambobin sirrin ba daidai bane</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Damar gwajinka/ki saura %1$d . Idan damarka/ki ta kare, za\'a kulle asusunka/ki zuwa kwana%2$d. Bayan kwana %3$d na rashin aiki, zaka/ki iya sake rijista ba tare da lambobin sirrinka/ki ba. Za\'a goge asusunka/ki da abubuwan ciki.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Ka/kin manta lambobin sirri?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Domin kare sirrinka/ki, ba damar murmure lambobin sirrinka/ki. idan damar gwadawarka/ki ta kare, zaka/ki iya sake tabbatarwa da SMS bayan kwana %1$d na rashin aiki. A iri wannan kes, za\'a goge asusunka/ki da duk abubuwan da suke ciki.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Shigar da lambobim sirri</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Sa lambobin sirri da ka/kika kirkirawa asusunka/ki. Waddannan lambobin, daban suke da waddanda aka turo maka/ki ta SMS.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Shigar da lambobin sirri mai haruffa.</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Shigar da lambobin sirri mai lambobi zalla</string>
+  <string name="RegistrationLockFragment__next">Na gaba</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Lambobin sirrinnan ba dai dai bane. Kara gwada.</string>
+  <string name="RegistrationLockFragment__forgot_pin">An manta da lambobin sirri?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Lambobin sirrin ba daidai bane</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Ka/kin manta lambobin sirri?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Gabatarwa da lbobin sirri</string>
+  <string name="KbsMegaphone__update_pin">Sabunta lambobin sirri</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Gusar da alamar hoto</string>
   <string name="ConversationListFragment_loading">Yana lodi</string>
@@ -1523,6 +1524,7 @@
   <string name="preferences_app_protection__signal_pin">Lambobin sirrin Signal</string>
   <string name="preferences_app_protection__pin">Lambobin sirri</string>
   <string name="preferences_app_protection__change">Canza</string>
+  <string name="preferences_app_protection__create">kirkira</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Lambobin sirrinka/ki na kara karfin tsaron asusunka/ki. Za\'a tambayeka/ki shi idan kayiwa lambar wayarka/ki rijistar Signal. Idan ka/kika manta da lambobin sirrin, za\'a kulle damar samun asusunka/ki zuwa kwana 7.</string>
   <string name="AppProtectionPreferenceFragment_none">Babu.</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Lambar sirrin rijista ba daya bane da lambar sirrin tabbatarwar SMS da ka/kika samu. Dan shigar da lambar sirrin that ka/kika fara sakawa a manhajar.</string>
