--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(वीडियो)</string>
   <string name="DraftDatabase_Draft_location_snippet">( स्थान )</string>
   <string name="DraftDatabase_Draft_quote_snippet">( उत्तर ) </string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">गैलरी</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">फ़ाइल</string>
+  <string name="AttachmentKeyboard_contact">संपर्क</string>
+  <string name="AttachmentKeyboard_location">स्थान</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">मीडिया का चयन करने के लिए कोई ऐप नहीं मिल सकता है</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">फ़ोटो, वीडियो या ऑडियो संलग्न करने के लिए Signal को संग्रहण अनुमति की आवश्यकता होती है, लेकिन इसे स्थायी रूप से अस्वीकार कर दिया गया है। कृपया ऐप सेटिंग्स मेनू पर जारी रखें, \"अनुमतियां\" चुनें, और \"संग्रहण\" सक्षम करें।</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">आपके द्वारा भेजा गया</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s द्वारा %2$s को भेजा गया</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">आपके द्वारा %1$s को भेजा गया</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">मुझे बाद में याद दिलाना</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal कॉल प्रगति पर है</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal कॉल की स्थापना की जा रही है</string>
   <string name="NotificationBarManager__incoming_signal_call">आने वाली Signal कॉल</string>
@@ -555,6 +563,8 @@
   <string name="RatingManager_no_thanks">नहीं धन्यवाद </string>
   <string name="RatingManager_later">बाद में </string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ओह, Play Store ऐप आपके डिवाइस पर इंस्टॉल नहीं प्रतीत होता है।</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">इस संपर्क को ब्लॉक करें?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">अब आप इस संपर्क से मेसेज और कॉल प्राप्त नहीं करेंगे।</string>
@@ -1408,29 +1418,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">अल्फ़ान्यूमेरिक पिन बनाएं</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">न्यूमेरिक पिन बनाएं</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">पिन कम से कम %1$d अक्षर का होना चाहिए</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">पिन कम से कम %1$d अंकों का होना चाहिए</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">नया पिेन बनाएँ</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">क्योंकि आप अभी भी लॉग इन हैं, आप एक नया पिन बना सकते हैं| जब आप लॉग आउट हो जाते हैं, तो आपके पिन को पुनर्प्राप्त करने का कोई तरीका नहीं है।</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">अपना पिन बनाएँ</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">पिन आपके खाते में सुरक्षा की एक अतिरिक्त परत जोड़ते हैं। अपना पिन नीचे लिखें और इसे सुरक्षित स्थान पर रखें। इसे पुनर्प्राप्त नहीं किया जा सकता है।</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">पिन मेल नहीं खाते। पुनः प्रयास करें।</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">अपने पिन की पुष्टि करें।</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">पिन निर्माण विफल रहा</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">आपका पिन सहेजा नहीं गया था| हम आपको बाद में एक पिन बनाने के लिए संकेत देंगे।</string>
   <string name="ConfirmKbsPinFragment__pin_created">पिन बनाया गया।</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">पिन फिेरसे डालें</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">पेश है, पिन</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">अपने खाते में सुरक्षा का एक और स्तर जोड़ें| %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">यहाँ और पढ़ें|</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">और जानें</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">पंजीकरन लॉक = पिन</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">आपके पंजीकरण लॉक को अब एक पिन कहा जाता है, और यह अधिक करता है। इसे अभी अपडेट करें| %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">पिन के बारे में अधिक पढ़ें|</string>
   <string name="KbsSplashFragment__update_pin">पिन अपडेट करें</string>
   <string name="KbsSplashFragment__create_your_pin">अपना पिन बनाएँ</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">मुझे बाद में याद दिलाना</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">अपना Signal पिन डालें</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">आपको अपना पिन याद रखने में मदद करने के लिए, हम आपको समय-समय पर इसे दर्ज करने के लिए कहेंगे। हम आपसे समय के साथ कम पूछते हैं।</string>
@@ -1443,20 +1446,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">आपकी गोपनीयता और सुरक्षा की रक्षा के लिए आपका खाता लॉक कर दिया गया है। आपके खाते में निष्क्रियता के %1$d दिनों के बाद आप अपने पिन की आवश्यकता के बिना इस फोन नंबर को फिर से पंजीकृत करने में सक्षम होंगे। सभी सामग्री हटा दी जाएगी।</string>
   <string name="AccountLockedFragment__next">अगला</string>
   <string name="AccountLockedFragment__learn_more">और जानें</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">अपना पिन डालें</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">अपने ख़ाते के लिये बनाया गया पिन डालें। ये पिन आपके SMS सत्यापण कोड से अलग है।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">अल्फ़ान्यूमेरिक पिन दर्ज करें</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">संख्यात्मक पिन दर्ज करें</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">अगला</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">गलत पिन। पुनः प्रयास करें।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">गलत पिन| %1$d प्रयास बाकी|</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">पिन भूल गए?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">ग़लत पिन</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">आपके पास %1$d प्रयास बाकी हैं| यदि आप प्रयासों से बाहर निकलते हैं तो आपका खाता %2$d दिनों के लिए लॉक हो जाएगा। %3$d दिनों की निष्क्रियता के बाद, आप अपने पिन के बिना फिर से पंजीकरण कर सकते हैं। आपका खाता मिटा दिया जाएगा और सभी सामग्री हटा दी जाएंगी।</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">क्या आप अपना पिन भूल गये हैं?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">आपकी गोपनीयता और सुरक्षा के लिए, आपके पिन को पुनर्प्राप्त करने का कोई तरीका नहीं है। यदि आप प्रयासों से बाहर निकलते हैं, तो आप %1$d दिनों की निष्क्रियता के बाद SMS से पुन: सत्यापन कर सकते हैं। इस स्थिति में, आपका खाता मिटा दिया जाएगा और सभी सामग्री हटा दी जाएंगी।</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">अपना पिन डालें</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">अपने ख़ाते के लिये बनाया गया पिन डालें। ये पिन आपके SMS सत्यापण कोड से अलग है।</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">अल्फ़ान्यूमेरिक पिन दर्ज करें</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">संख्यात्मक पिन दर्ज करें</string>
+  <string name="RegistrationLockFragment__next">अगला</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">गलत पिन। पुनः प्रयास करें।</string>
+  <string name="RegistrationLockFragment__forgot_pin">पिन भूल गए?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">ग़लत पिन</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">क्या आप अपना पिन भूल गये हैं?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">पेश है, पिन</string>
+  <string name="KbsMegaphone__update_pin">पिन अपडेट करें</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">परिवहन चिह्न</string>
   <string name="ConversationListFragment_loading">लोड हो रहा है</string>
@@ -1521,6 +1523,7 @@ Locale: %4$s</string>
   <string name="preferences_app_protection__signal_pin">Signal पिन</string>
   <string name="preferences_app_protection__pin">पिन</string>
   <string name="preferences_app_protection__change">बदलो</string>
+  <string name="preferences_app_protection__create">बनाएँ</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">आपका पिन सुरक्षा की एक अतिरिक्त परत जोड़ता है और आपके खाते का बैक अप लेता है। जब आप Signal के साथ अपना फ़ोन नंबर पंजीकृत करेंगे तो आपसे इसके लिए पूछा जाएगा। यदि आप अपना पिन भूल जाते हैं, तो आपको अपने खाते से 7 दिनों के लिए बंद कर दिया जाएगा।</string>
   <string name="AppProtectionPreferenceFragment_none">कुछ नहीं</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">पंजीकरण लॉक पिन आपके द्वारा प्राप्त किए गए एसएमएस सत्यापन कोड जैसा नहीं है। कृपया उस पिन को दर्ज करें जिसे आपने पहले एप्लिकेशन में कॉन्फ़िगर किया था।</string>
