--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -60,6 +60,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(סרטון)</string>
   <string name="DraftDatabase_Draft_location_snippet">(מיקום)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(תשובה)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">גלריה</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">קובץ</string>
+  <string name="AttachmentKeyboard_contact">איש קשר</string>
+  <string name="AttachmentKeyboard_location">מיקום</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">לא ניתן למצוא יישום לבחירת מדיה.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal דורש את הרשאת האחסון על מנת לצרף תצלומים, סרטונים, או שמע, אבל היא נדחתה לצמיתות. אנא המשך אל תפריט הגדרות היישום, בחר \"הרשאות\" ואפשר את \"אחסון\".</string>
@@ -492,7 +498,9 @@
   <string name="MediaOverviewActivity_sent_by_you">נשלח על ידך</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">נשלח על ידי %1$s אל %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">נשלח על ידך אל %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">הזכר לי מאוחר יותר</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">שיחת Signal בתהליך</string>
   <string name="NotificationBarManager__establishing_signal_call">מקים שיחת Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">שיחת Signal נכנסת</string>
@@ -598,6 +606,8 @@
   <string name="RatingManager_no_thanks">לא תודה</string>
   <string name="RatingManager_later">מאוחר יותר</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">אוי, נראה שיישום חנות Play אינו מותקן במכשיר שלך.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">לחסום איש קשר זה?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">לא תקבל יותר הודעות ושיחות מאיש קשר זה.</string>
@@ -1480,29 +1490,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">צור PIN אלפאנומרי</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">צור PIN מספרי</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN חייב להיות לפחות %1$d תווים</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN חייב להיות לפחות %1$d ספרות</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">צור PIN חדש</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">מאחר שאתה עדין מחובר, אתה יכול ליצור PIN חדש. ברגע שתתנתק, אין דרך להשיב את ה־PIN שלך.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">צור את ה־PIN שלך</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">קודי PIN מוספים שכבת אקסטרה של אבטחה אל החשבון שלך. כתוב את ה־PIN שלך ושמור אותו במקום בטוח. הוא בלתי ניתן להשבה.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">קודי PIN אינם תואמים. נסה שוב.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">אמת את ה־PIN שלך.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">יצירת PIN נכשלה</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">ה־PIN שלך לא נשמר. ניידע אותך ליצור PIN מאוחר יותר.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN נוצר.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">הכנס מחדש PIN</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">היכרות עם PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">הוסף רמה נוספת של אבטחה אל החשבון שלך. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">למד עוד כאן.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">למד עוד</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">נעילת הרשמה = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">נעילת ההרשמה שלך נקראת כעת PIN, והיא עושה יותר. עדכן אותה כעת. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">למד עוד על PIN.</string>
   <string name="KbsSplashFragment__update_pin">עדכן PIN</string>
   <string name="KbsSplashFragment__create_your_pin">צור את ה־PIN שלך</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">הזכר לי מאוחר יותר</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">הכנס את ה־PIN של Signal שלך</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">כדי לעזור לך לשנן את ה־PIN שלך, נבקש ממך להכניס אותו מעת לעת. נבקש ממך פחות עם הזמן.</string>
@@ -1515,20 +1518,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">החשבון שלך ננעל כדי להגן על הפרטיות והאבטחה שלך. לאחר %1$d ימים של אי־פעילות בחשבון שלך, תוכל להירשם שוב עם מספר טלפון זה ללא צורך ב־PIN שלך. כל התוכן יימחק.</string>
   <string name="AccountLockedFragment__next">הבא</string>
   <string name="AccountLockedFragment__learn_more">למד עוד</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">הכנס את ה־PIN שלך</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">הכנס את ה־PIN שיצרת עבור החשבון שלך. הוא שונה מקוד הוידוא שלך במסרון.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">הכנס PIN אלפאנומרי</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">הכנס PIN מספרי</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">הבא</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PIN שגוי. נסה שוב.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PIN שגוי. %1$d ניסיונות נותרו.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">שכחת PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PIN שגוי</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">יש לך %1$d ניסיונות נותרים. אם הניסיונות יאזלו, חשבונך יינעל למשך %2$d ימים. לאחר %3$d ימים של אי־פעילות, תוכל להירשם שוב בלי ה־PIN שלך. חשבונך ינוקה וכל התוכן יימחק.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">שכחת את ה־PIN שלך?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">למען פרטיותך ואבטחתך, אין דרך להשיב את ה־PIN שלך. אם הניסיונות יאזלו, תוכל לוודא מחדש עם מסרון לאחר %1$d ימים של אי־פעילות. במקרה זה, חשבונך ינוקה וכל התוכן יימחק.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">הכנס את ה־PIN שלך</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">הכנס את ה־PIN שיצרת עבור החשבון שלך. הוא שונה מקוד הוידוא שלך במסרון.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">הכנס PIN אלפאנומרי</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">הכנס PIN מספרי</string>
+  <string name="RegistrationLockFragment__next">הבא</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PIN שגוי. נסה שוב.</string>
+  <string name="RegistrationLockFragment__forgot_pin">שכחת PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PIN שגוי</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">שכחת את ה־PIN שלך?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">היכרות עם PIN</string>
+  <string name="KbsMegaphone__update_pin">עדכן PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">צלמית תעבורה</string>
   <string name="ConversationListFragment_loading">טוען…</string>
@@ -1570,6 +1572,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">להשבית ולמחוק את כל הגיבויים המקומיים?</string>
   <string name="BackupDialog_delete_backups_statement">מחק גיבויים</string>
   <string name="BackupDialog_copied_to_clipboard">הועתק ללוח</string>
+  <string name="BackupDialog_verify">אימות</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal דורש הרשאת אחסון חיצוני על מנת ליצור גיבויים, אבל היא נדחתה לצמיתות. אנא המשך אל הגדרות היישום, בחר \"הרשאות\" ואפשר את \"אחסון\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">גיבוי אחרון: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">בתהליך</string>
@@ -1589,6 +1592,7 @@
   <string name="preferences_app_protection__signal_pin">PIN של Signal</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">שנה</string>
+  <string name="preferences_app_protection__create">צור</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">ה־PIN שלך מוסיף שכבת אקסטרה של אבטחה ומגבה את חשבונך. תישאל לגביו כאשר תירשם עם מספר הטלפון שלך אל Signal. אם תשכח את ה־PIN שלך, תינעל מחוץ לחשבונך למשך 7 ימים.</string>
   <string name="AppProtectionPreferenceFragment_none">ללא</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN נעילת ההרשמה אינו אותו דבר כמו קוד הוידוא שקיבלת. אנא הכנס את ה־PIN שתיצרת קודם לכן ביישום.</string>
