--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -51,6 +51,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(動画)</string>
   <string name="DraftDatabase_Draft_location_snippet">(位置情報)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(返信)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">ギャラリー</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">ファイル</string>
+  <string name="AttachmentKeyboard_contact">連絡先</string>
+  <string name="AttachmentKeyboard_location">場所</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">ファイルを開くアプリが見つかりません。</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signalに写真や動画、音声データを添付するには、ストレージへのアクセス許可が必要ですが、無効になっています。アプリ設定メニューの「アプリの権限」で「ストレージ」を有効にしてください。</string>
@@ -432,7 +438,10 @@
   <string name="MediaOverviewActivity_sent_by_you">あなたが送信</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s が %2$s に送信</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">あなたが %1$s に送信</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">リアクションの紹介</string>
+  <string name="Megaphones_remind_me_later">あとで通知</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal通話中</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal通話を接続しています</string>
   <string name="NotificationBarManager__incoming_signal_call">Signal通話の着信</string>
@@ -534,6 +543,8 @@
   <string name="RatingManager_no_thanks">しません</string>
   <string name="RatingManager_later">後で</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">おっと、Playストアアプリはこのデバイスにインストールされていないようです。</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">この連絡先をブロックしますか？</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">この連絡先からメッセージや通話を受け取ることはなくなります。</string>
@@ -1373,29 +1384,23 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">英数字のPINを作成</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">数字のPINを作成</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PINは%1$d文字以上にしてください</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PINは%1$d桁以上の数字にしてください</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">新しいPINを登録</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">ログイン中は新しいPINを作成できますが、ログアウトするとPINは回復できません。</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">あなたのPINを作成</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PINはアカウントのセキュリティを強化します。PINを書きとめて安全な場所に保管してください。PINの回復はできません。</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PINが一致しません。再度試してください。</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">PINを確認してください。</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">PINの作成に失敗しました</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">PINは保存されませんでした。あとでPINの作成について改めて伺います。 </string>
   <string name="ConfirmKbsPinFragment__pin_created">PINを作成しました。</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">PINを再入力</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">PINのご紹介</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">アカウントのセキュリティを強化します。 %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">さらに表示</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">詳細を知る</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">登録ロック = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">登録ロックは今後PINと呼ばれ、より多機能になります。いますぐアップデートしてください。 %1$s</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">登録ロックは今後PINと呼ばれ、より多機能になります。いますぐアップデートしてください。</string>
   <string name="KbsSplashFragment__read_more_about_pins">PINの詳細について</string>
   <string name="KbsSplashFragment__update_pin">PINをアップデート</string>
   <string name="KbsSplashFragment__create_your_pin">あなたのPINを作成</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">あとで通知</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">SignalのPINを入力</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">あなたがPINを忘れないよう、Signalは定期的に確認します。頻度は次第に減ってゆきます。</string>
@@ -1408,20 +1413,23 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">プライバシーとセキュリティ保護のため、あなたのアカウントをロックしました。%1$d日間の休止後に、PINなしでこの電話番号を再登録できるようになります。メッセージ等はすべて消去されます。</string>
   <string name="AccountLockedFragment__next">次へ</string>
   <string name="AccountLockedFragment__learn_more">詳細を知る</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">PINを入力</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">アカウントを作成するときに決めたPINを入力してください。（SMSの認証コードとは違います）</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">英数字のPINを入力</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">数字のPINを入力</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">次へ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PINが違います。再度試してください。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PINが違います。あと%1$d回試せます。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">PINを忘れましたか？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PINが違います</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">あと%1$d回試せます。試し終わるとアカウントが%2$d日間ロックされます。%3$d日間の休止後にPINなしで再登録できますが、アカウントはリセットされ、メッセージ等もすべて削除されます。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">PINを忘れましたか？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">プライバシーとセキュリティ保護のため、PINを回復することはできません。試行上限を過ぎると、%1$d日間の休止後にSMSで再認証できます。その場合アカウントはリセットされ、メッセージ等もすべて削除されます。</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">PINを入力</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">あなたのアカウント用に作成したPINを入力してください。これはSMSの認証コードとは違います。</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">英数字のPINを入力</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">数字のPINを入力</string>
+  <string name="RegistrationLockFragment__next">次へ</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PINが違います。再度試してください。</string>
+  <string name="RegistrationLockFragment__forgot_pin">PINを忘れましたか？</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PINが違います</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">PINを忘れましたか？</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">PINを作成</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">PINはSignalアカウントのセキュリティを強化します。</string>
+  <string name="KbsMegaphone__create_pin">PINを作成</string>
+  <string name="KbsMegaphone__introducing_pins">PINのご紹介</string>
+  <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">登録ロックは今後PINと呼ばれます。アップデートは数秒で終わります。</string>
+  <string name="KbsMegaphone__update_pin">PINをアップデート</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">転送アイコン</string>
   <string name="ConversationListFragment_loading">読み込んでいます…</string>
@@ -1463,6 +1471,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">すべてのローカルバックアップを削除して無効にしますか？</string>
   <string name="BackupDialog_delete_backups_statement">バックアップを削除します</string>
   <string name="BackupDialog_copied_to_clipboard">クリップボードにコピーしました</string>
+  <string name="BackupDialog_verify">確認する</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalでバックアップを作成するには、外部ストレージへのアクセス許可が必要ですが、無効になっています。アプリ設定メニューの「アプリの権限」で「ストレージ」を有効にしてください。</string>
   <string name="ChatsPreferenceFragment_last_backup_s">最終バックアップ: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">実行中</string>
@@ -1482,6 +1491,7 @@
   <string name="preferences_app_protection__signal_pin">Signal PIN</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">変更する</string>
+  <string name="preferences_app_protection__create">作成</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PINはセキュリティを強化し、アカウントを保護します。PINはSignalに電話番号を登録する際に要求されます。PINを忘れると、アカウントは7日間ロックされます。</string>
   <string name="AppProtectionPreferenceFragment_none">なし</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">登録ロックPINは、先程SMSで受信した検証コードとは異なります。以前Signalで設定したPINを入力してください。</string>
