--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -51,6 +51,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(វីដេអូ)</string>
   <string name="DraftDatabase_Draft_location_snippet">(ទីតាំង)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(ឆ្លើយតប)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">វិចិត្រសាល</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">ឯកសារ</string>
+  <string name="AttachmentKeyboard_contact">ទំនាក់ទំនង</string>
+  <string name="AttachmentKeyboard_location">ទីតាំង</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">មិនអាចស្វែងរកកម្មវិធីដើម្បីជ្រើសរើសព័ត៌មាន</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal ទាមទារសិទ្ធិប្រើប្រាស់អង្គរក្សាទុកដើម្បីភ្ជាប់រូបថត វីដេអូ ឬសំឡេង ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅការកំណត់របស់ប្រព័ន្ធ ជ្រើសរើស \"អនុញ្ញាត\" និងបើក \"អង្គរក្សាទុក\" ។</string>
@@ -432,7 +438,8 @@
   <string name="MediaOverviewActivity_sent_by_you">បានផ្ញើដោយអ្នក</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">បានផ្ញើដោយ %1$s ទៅ %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">បានផ្ញើដោយអ្នកទៅ %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">ការហៅចេញSignal កំពុងដំណើរការ</string>
   <string name="NotificationBarManager__establishing_signal_call">ការហៅចេញ តាមSignal</string>
   <string name="NotificationBarManager__incoming_signal_call">ការហៅចូលតាម Signal </string>
@@ -534,6 +541,8 @@
   <string name="RatingManager_no_thanks">ទេ អរគុណ</string>
   <string name="RatingManager_later">ពេលក្រោយ</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ចុម កម្មវិធី Play Store មានសម្រាប់ដំឡើងក្នុងឧបករណ៍របស់អ្នកទេ។</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">បិទលេខទំនាក់ទំនងនេះ?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">អ្នកនឹងលែងទទួលសារ និងការហៅចូលពីលេខទំនាក់ទំនងនេះទៀតហើយ។</string>
@@ -1370,8 +1379,10 @@
   <string name="CreateKbsPinFragment__create_your_pin">បង្កើតលេខ PIN របស់អ្នក</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__confirm_your_pin">ផ្ទៀងផ្ទាត់លេខ PIN របស់អ្នក។</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">បញ្ចូលលេខ PIN ម្តងទៀត</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">ការណែនាំ លេខPINs</string>
+  <string name="KbsSplashFragment__learn_more">ស្វែងយល់បន្ថែម</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">ចាក់សោរការចុះឈ្មោះ = លេខ PIN</string>
   <string name="KbsSplashFragment__create_your_pin">បង្កើតលេខ PIN របស់អ្នក</string>
   <!--KBS Reminder Dialog-->
@@ -1383,12 +1394,14 @@
   <string name="AccountLockedFragment__next">បន្ទាប់</string>
   <string name="AccountLockedFragment__learn_more">ស្វែងយល់បន្ថែម</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">បញ្ចូលលេខ PIN របស់អ្នក</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">បញ្ចូលលេខ PIN ដែលអ្នកបានបង្កើតសម្រាប់ គណនីរបស់អ្នក។ នេះខុសពីលេខកូដផ្ទៀងផ្ទាត់ពីសារ SMS ។</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">បន្ទាប់</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">ភ្លេចលេខ PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">លេខកូដ PIN មិនត្រឹមត្រូវ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">ភ្លេចលេខ PIN របស់អ្នក?</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">បញ្ចូលលេខ PIN របស់អ្នក</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">បញ្ចូលលេខ PIN ដែលអ្នកបានបង្កើតសម្រាប់ គណនីរបស់អ្នក។ នេះខុសពីលេខកូដផ្ទៀងផ្ទាត់ពីសារ SMS ។</string>
+  <string name="RegistrationLockFragment__next">បន្ទាប់</string>
+  <string name="RegistrationLockFragment__forgot_pin">ភ្លេចលេខ PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">លេខកូដ PIN មិនត្រឹមត្រូវ</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">ភ្លេចលេខ PIN របស់អ្នក?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">ការណែនាំ លេខPINs</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">រូបសញ្ញាជញ្ជូន</string>
   <string name="ConversationListFragment_loading">កំពុងផ្ទុក…</string>
@@ -1430,6 +1443,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">បិទ និងលុបចោលការបម្រុងទុកខាងក្នុងទាំងអស់?</string>
   <string name="BackupDialog_delete_backups_statement">លុបការបម្រុងទុក</string>
   <string name="BackupDialog_copied_to_clipboard">បានចម្លងទៅ clipboard</string>
+  <string name="BackupDialog_verify">ផ្ទៀងផ្ទាត់</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalត្រូវការសិទ្ធិប្រើប្រាស់អង្គរក្សាទុកខាងក្រៅដើម្បីបង្កើតការស្តារឡើងវិញ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅកាន់ ការកំណត់ ជ្រើសរើស \"ការអនុញ្ញាត\" និងបើក \"អង្គរក្សាទុក\"។ </string>
   <string name="ChatsPreferenceFragment_last_backup_s">បម្រុងទុកលើលចុងក្រោយ៖ %s</string>
   <string name="ChatsPreferenceFragment_in_progress">កំពុងដំណើរការ</string>
@@ -1447,6 +1461,7 @@
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">ចាក់សោរការប្រើប្រាស់ Signal ជាមួយសោរអេក្រង់ Android ឬ ក្រយៅដៃ</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">អេក្រង់ជាប់សោរ ទុកចោលហួសកំណត់ </string>
   <string name="preferences_app_protection__pin">លេខ PIN</string>
+  <string name="preferences_app_protection__create">បង្កើត</string>
   <string name="AppProtectionPreferenceFragment_none">គ្មាន</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">លេខPIN សម្រាប់ចាក់សោរការចុះឈ្មោះ មិនដូចគ្នានឹងលេខកូដផ្ទៀងផ្ទាត់ទទួលពីសារSMS ។ សូមបញ្ចូលលេខកូដដែលអ្នកបានកំណត់ពីមុន ក្នុងកម្មវិធីនេះ។</string>
   <string name="registration_activity__registration_lock_pin">លេខ PIN សម្រាប់ចាក់សោការចុះឈ្មោះ</string>
