--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(ವೀಡಿಯೊ)</string>
   <string name="DraftDatabase_Draft_location_snippet">(ಸ್ಥಳ)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(ಉತ್ತರಿಸಿ)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">ಗ್ಯಾಲರಿ</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">ಫೈಲ್</string>
+  <string name="AttachmentKeyboard_contact">ಸಂಪರ್ಕಿಸಿ</string>
+  <string name="AttachmentKeyboard_location">ಸ್ಥಳ</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">ಈ ಮೀಡಿಯಾ ತೆರೆಯಲು ಸಾಮರ್ಥ್ಯವಿರುವ ಅಪ್ಲಿಕೇಶನ್ ಹುಡುಕಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal ಅಗತ್ಯವಿದೆ ಸಂಗ್ರಹಣೆ ಅನುಮತಿ ಸಲುವಾಗಿ ಲಗತ್ತಿಸಿ ಫೋಟೋಗಳು, ವೀಡಿಯೊಗಳು ಅಥವಾ ಆಡಿಯೊ, ಆದರೆ ಅದನ್ನು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ದಯವಿಟ್ಟು ಗೆ ಮುಂದುವರಿಸಿ ಅಪ್ಲಿಕೇಶನ್ ಸಂಯೋಜನೆಗಳು ಮೆನು, ಆಯ್ಕೆ ಮಾಡಿ \"ಅನುಮತಿಗಳು\", ಮತ್ತು ಸಕ್ರಿಯಗೊಳಿಸಿ \"ಸಂಗ್ರಹಣೆ\".</string>
@@ -456,7 +462,9 @@
   <string name="MediaOverviewActivity_sent_by_you">ಕಳುಹಿಸಲ್ಪಟ್ಟ, ಕಳುಹಿಸಿದವರು ನೀವು</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">ಕಳುಹಿಸಲ್ಪಟ್ಟ, ಕಳುಹಿಸಿದವರು %1$s ಗೆ%2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">ಕಳುಹಿಸಲ್ಪಟ್ಟ, ಕಳುಹಿಸಿದವರು ನೀವು ಗೆ %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">ನಂತರ ನನಗೆ ನೆನಪಿಸು</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal ಕರೆ ಪ್ರಗತಿಯಲ್ಲಿದೆ</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal ಕರೆ ಸ್ಥಾಪಿಸಲಾಗುತ್ತಿದೆ</string>
   <string name="NotificationBarManager__incoming_signal_call">ಒಳಬರುವ Signal ಕರೆ</string>
@@ -560,6 +568,8 @@
   <string name="RatingManager_no_thanks">ಧನ್ಯವಾದಗಳು. ಸಧ್ಯಕ್ಕೆ ಇಲ್ಲ.</string>
   <string name="RatingManager_later">ನಂತರ</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ಓಹ್, ಪ್ಲೇ ಅಂಗಡಿ ಅಪ್ಲಿಕೇಶನ್ ಸ್ಥಾಪಿಸಿದಂತೆ ಕಾಣುತ್ತಿಲ್ಲ ನಿಮ್ಮ ಸಾಧನ.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">ಈ ಸಂಪರ್ಕವನ್ನು ನಿರ್ಬಂಧಿಸುವುದೇ?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">ನೀವು ಇನ್ನು ಮುಂದೆ ಸಂದೇಶಗಳನ್ನು ಸ್ವೀಕರಿಸುವುದಿಲ್ಲ ಮತ್ತು ಈ ಸಂಪರ್ಕದಿಂದ ಕರೆಗಳು.</string>
@@ -1415,12 +1425,8 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">ರಚಿಸಿ ಆಲ್ಫಾನ್ಯೂಮರಿಕ್ ಪಿನ್</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">ಸಂಖ್ಯಾ ಪಿನ್ ರಚಿಸಿ</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">ಪಿನ್ ಕನಿಷ್ಠ ಇರಬೇಕು %1$d ಅಕ್ಷರಗಳು</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">ಪಿನ್ ಕನಿಷ್ಠ ಇರಬೇಕು %1$d ಅಂಕೆಗಳು</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">ರಚಿಸಿಹೊಸದುಪಿನ್</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">ನೀವು ಇನ್ನೂ ಲಾಗಿನ್ ಆಗಿರುವ ಕಾರಣ, ನೀವು ಹೊಸ ಪಿನ್ ರಚಿಸಬಹುದು. ನೀವು ಲಾಗ್ ಹೊರಗೆ ಟ್ ಮಾಡಿದಾಗ, ನಿಮ್ಮ ಪಿನ್ ಅನ್ನು ಮರುಪಡೆಯಲು ಯಾವುದೇ ಮಾರ್ಗವಿಲ್ಲ.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">ರಚಿಸಿ ನಿಮ್ಮ ಪಿನ್</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">ಪಿನ್‌ಗಳು ಸುರಕ್ಷತೆಯ ಹೆಚ್ಚುವರಿ ಪದರವನ್ನು ಸೇರಿಸುತ್ತವೆ ನಿಮ್ಮಖಾತೆ. ಬರೆಯಿರಿನಿಮ್ಮ ಪಿನ್ ಕೆಳಗೆ ಮತ್ತುಅದನ್ನು ಸುರಕ್ಷಿತ ಸ್ಥಳದಲ್ಲಿ ಇರಿಸಿ. ಅದುಸಾಧ್ಯವಿಲ್ಲ ಮರುಪಡೆಯಲಾಗುತ್ತದೆ.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">ಪಿನ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುವುದಿಲ್ಲ. ಮತ್ತೆ ಪ್ರಯತ್ನಿಸು.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">ನಿಮ್ಮ ಪಿನ್ ಅನ್ನು ದೃಡಪಡಿಸು.</string>
@@ -1429,15 +1435,11 @@
   <string name="ConfirmKbsPinFragment__pin_created">ಪಿನ್ ರಚಿಸಲಾಗಿದೆ.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">ಪಿನ್‌ಗಳನ್ನು ಪರಿಚಯಿಸಲಾಗುತ್ತಿದೆ</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">ಇದಕ್ಕೆ ಮತ್ತೊಂದು ಮಟ್ಟದ ಭದ್ರತೆಯನ್ನು ಸೇರಿಸಿ ನಿಮ್ಮ ಖಾತೆ. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">ಇಲ್ಲಿ ಇನ್ನಷ್ಟು ಓದಿ.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">ನೋಂದಣಿ ಲಾಕ್ = ಪಿನ್</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">ನಿಮ್ಮ ನೋಂದಣಿ ಲಾಕ್ ಅನ್ನು ಈಗ ಪಿನ್ ಎಂದು ಕರೆಯಲಾಗುತ್ತದೆ, ಮತ್ತು ಅದು ಹೆಚ್ಚಿನದನ್ನು ಮಾಡುತ್ತದೆ. ಇದೀಗ ಅದನ್ನು ನವೀಕರಿಸಿ. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">ಪಿನ್‌ಗಳ ಬಗ್ಗೆ ಇನ್ನಷ್ಟು ಓದಿ.</string>
   <string name="KbsSplashFragment__update_pin">ಪಿನ್ ನವೀಕರಿಸಿ</string>
   <string name="KbsSplashFragment__create_your_pin">ರಚಿಸಿ ನಿಮ್ಮ ಪಿನ್</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">ನಂತರ ನನಗೆ ನೆನಪಿಸು</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">ನಿಮ್ಮ Signal ಪಿನ್ ಅನ್ನು ನಮೂದಿಸಿ</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">ಗೆ ಸಹಾಯ ನೀವು ನೆನಪಿಡಿ ನಿಮ್ಮ ಪಿನ್, ನಾವು\'ಕೇಳುತ್ತೇನೆ ನೀವು ಗೆ ನಮೂದಿಸಿಇದು ನಿಯತಕಾಲಿಕವಾಗಿ. ನಾವು ಕೇಳುತ್ತೇವೆನೀವು ಕಾಲಾನಂತರದಲ್ಲಿ ಕಡಿಮೆ.</string>
@@ -1450,20 +1452,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">ನಿಮ್ಮ ರಕ್ಷಿಸಲು ಖಾತೆಯನ್ನು ಲಾಕ್ ಮಾಡಲಾಗಿದೆ ನಿಮ್ಮ ಗೌಪ್ಯತೆ ಮತ್ತುಭದ್ರತೆ. ನಂತರ %1$d ನಿಷ್ಕ್ರಿಯತೆಯ ದಿನಗಳು ನಿಮ್ಮ ಖಾತೆ ನೀವು\'ಇದನ್ನು ಮರು ನೋಂದಾಯಿಸಲು ನನಗೆ ಸಾಧ್ಯವಾಗುತ್ತದೆ ದೂರವಾಣಿ ಅಗತ್ಯವಿಲ್ಲದೆ ಸಂಖ್ಯೆ ನಿಮ್ಮ ಪಿನ್. ಎಲ್ಲಾ ವಿಷಯವನ್ನು ಅಳಿಸಲಾಗುತ್ತದೆ.</string>
   <string name="AccountLockedFragment__next">ಮುಂದೆ</string>
   <string name="AccountLockedFragment__learn_more">ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">ನಮೂದಿಸಿ ನಿಮ್ಮ ಪಿನ್</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">ನಮೂದಿಸಿ ದಿ ಪಿನ್ ನೀವು ಗಾಗಿ ರಚಿಸಲಾಗಿದೆ ನಿಮ್ಮಖಾತೆ. ಇದು ವಿಭಿನ್ನವಾಗಿದೆನಿಮ್ಮ ಎಸ್‌ಎಂಎಸ್ ಪರಿಶೀಲನೆ ಕೋಡ್.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">ನಮೂದಿಸಿ ಆಲ್ಫಾನ್ಯೂಮರಿಕ್ ಪಿನ್</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">ನಮೂದಿಸಿ ಸಂಖ್ಯಾ ಪಿನ್</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">ಮುಂದೆ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">ತಪ್ಪಾದ ಪಿನ್. ಮತ್ತೆ  ಪ್ರಯತ್ನಿಸಿ.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">ತಪ್ಪಾದ ಪಿನ್. %1$d ಉಳಿದ ಪ್ರಯತ್ನಗಳು.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">ಮರೆತುಹೋಗಿದೆ ಪಿನ್?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">ತಪ್ಪಾದ ಪಿನ್</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">ನೀವು ಹೊಂದಿವೆ %1$d ಉಳಿದ ಪ್ರಯತ್ನಗಳು. ವೇಳೆ ನೀವು ಪ್ರಯತ್ನಗಳು ಮುಗಿದಿವೆ ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಲಾಕ್ ಮಾಡಲಾಗುತ್ತದೆ %2$d ದಿನಗಳು. ನಂತರ %3$d ನಿಷ್ಕ್ರಿಯತೆಯ ದಿನಗಳು, ನೀವು ಇಲ್ಲದೆ ಮರು ನೋಂದಾಯಿಸಬಹುದು ನಿಮ್ಮ ಪಿನ್. ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಅಳಿಸಲಾಗುತ್ತದೆ ಮತ್ತು ಎಲ್ಲಾ ವಿಷಯವನ್ನು ಅಳಿಸಲಾಗಿದೆ.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">ಮರೆತುಹೋಗಿದೆ ನಿಮ್ಮ ಪಿನ್?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">ಫಾರ್ ನಿಮ್ಮ ಗೌಪ್ಯತೆ ಮತ್ತು ಭದ್ರತೆ, ಇದೆ ಇಲ್ಲ ಚೇತರಿಸಿಕೊಳ್ಳುವ ಮಾರ್ಗ ನಿಮ್ಮ ಪಿನ್. ವೇಳೆ ನೀವು ಪ್ರಯತ್ನಗಳು ಮುಗಿದಿವೆ, ನೀವು ಇದರೊಂದಿಗೆ ಮರು ಪರಿಶೀಲಿಸಬಹುದು ಎಸ್‌ಎಂಎಸ್ ನಂತರ %1$d ನಿಷ್ಕ್ರಿಯತೆಯ ದಿನಗಳು. ಈ ವಿಷಯದಲ್ಲಿ,ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಅಳಿಸಲಾಗುತ್ತದೆ ಮತ್ತು ಎಲ್ಲಾ ವಿಷಯವನ್ನು ಅಳಿಸಲಾಗಿದೆ.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">ನಮೂದಿಸಿ ನಿಮ್ಮ ಪಿನ್</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">ನಮೂದಿಸಿ ದಿ ಪಿನ್ ನೀವು ಗಾಗಿ ರಚಿಸಲಾಗಿದೆ ನಿಮ್ಮಖಾತೆ. ಇದು ವಿಭಿನ್ನವಾಗಿದೆನಿಮ್ಮ ಎಸ್‌ಎಂಎಸ್ ಪರಿಶೀಲನೆ ಕೋಡ್.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">ನಮೂದಿಸಿ ಆಲ್ಫಾನ್ಯೂಮರಿಕ್ ಪಿನ್</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">ನಮೂದಿಸಿ ಸಂಖ್ಯಾ ಪಿನ್</string>
+  <string name="RegistrationLockFragment__next">ಮುಂದೆ</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">ತಪ್ಪಾದ ಪಿನ್. ಮತ್ತೆ  ಪ್ರಯತ್ನಿಸಿ.</string>
+  <string name="RegistrationLockFragment__forgot_pin">ಮರೆತುಹೋಗಿದೆ ಪಿನ್?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">ತಪ್ಪಾದ ಪಿನ್</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">ಮರೆತುಹೋಗಿದೆ ನಿಮ್ಮ ಪಿನ್?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">ಪಿನ್‌ಗಳನ್ನು ಪರಿಚಯಿಸಲಾಗುತ್ತಿದೆ</string>
+  <string name="KbsMegaphone__update_pin">ಪಿನ್ ನವೀಕರಿಸಿ</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">ಸಾರಿಗೆ ಮಾಧ್ಯಮದ ಚಿಹ್ನೆ</string>
   <string name="ConversationListFragment_loading">ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ…</string>
@@ -1524,6 +1525,7 @@
   <string name="preferences_app_protection__signal_pin">Signal ಪಿನ್</string>
   <string name="preferences_app_protection__pin">ಪಿನ್</string>
   <string name="preferences_app_protection__change">ಬದಲಾವಣೆ</string>
+  <string name="preferences_app_protection__create">ರಚಿಸಿ</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">ನಿಮ್ಮ ಪಿನ್ ಸುರಕ್ಷತೆಯ ಹೆಚ್ಚುವರಿ ಪದರವನ್ನು ಸೇರಿಸುತ್ತದೆ ಮತ್ತು ಬ್ಯಾಕ್ ಅಪ್ ನಿಮ್ಮ ಖಾತೆ. ನೀವು\'ಯಾವಾಗ ಅದನ್ನು ಕೇಳಲಾಗುತ್ತದೆ ನೀವು ನೋಂದಣಿ ನಿಮ್ಮ ದೂರವಾಣಿ ಇದರೊಂದಿಗೆ ಸಂಖ್ಯೆ Signal. ವೇಳೆ ನೀವು ಮರೆತುಬಿಡಿ ನಿಮ್ಮ ಪಿನ್, ನೀವು\'ಹೊರಗೆ ಲಾಕ್ ಮಾಡಲಾಗುವುದು ನಿಮ್ಮ 7 ದಿನಗಳ ಖಾತೆ.</string>
   <string name="AppProtectionPreferenceFragment_none">ಯಾವುದೂ ಇಲ್ಲ</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">ದಿ ನೋಂದಣಿ ಲಾಕ್ ಪಿನ್ ನಂತೆಯೇ ಅಲ್ಲ ಎಸ್‌ಎಂಎಸ್ ಪರಿಶೀಲನೆ ಕೋಡ್ ನೀವು ಇದೀಗ ಸ್ವೀಕರಿಸಲಾಗಿದೆ. ದಯವಿಟ್ಟು ನಮೂದಿಸಿ ದಿ ಪಿನ್ ನೀವು ಹಿಂದೆ ಕಾನ್ಫಿಗರ್ ಮಾಡಲಾಗಿದೆ ಅಪ್ಲಿಕೇಶನ್.</string>
