--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -51,6 +51,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(동영상)</string>
   <string name="DraftDatabase_Draft_location_snippet">(위치)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(답장)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">갤러리</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">파일</string>
+  <string name="AttachmentKeyboard_contact">연락처</string>
+  <string name="AttachmentKeyboard_location">위치</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">미디어를 선택할 수 있는 앱이 없음</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal에 사진이나 비디오 또는 오디오를 첨부하려면 저장공간 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"저장공간\" 항목을 허용하세요.</string>
@@ -374,7 +380,8 @@
   <string name="MediaOverviewActivity_audio">오디오</string>
   <string name="MediaOverviewActivity_video">비디오</string>
   <string name="MediaOverviewActivity_image">이미지</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal 통화 중</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal 통화 연결 중</string>
   <string name="NotificationBarManager__incoming_signal_call">수신 Signal 통화</string>
@@ -465,6 +472,8 @@
   <string name="RatingManager_no_thanks">취소</string>
   <string name="RatingManager_later">나중에</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Play 스토어 앱 없음</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">사용자를 차단하시겠습니까?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">당신은 이 연락처로부터 더 이상 메시지나 전화통화를 받지 않게될 것입니다</string>
@@ -1228,8 +1237,9 @@
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__next">다음</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">다음</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">번호를 잊으셨나요?</string> -->
+  <string name="RegistrationLockFragment__next">다음</string>
+  <string name="RegistrationLockFragment__forgot_pin">번호를 잊으셨나요?</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">전송 아이콘</string>
   <string name="ConversationListFragment_loading">불러오는 중</string>
@@ -1271,6 +1281,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">백업을 끄고 로컬 백업을 삭제하시겠습니까?</string>
   <string name="BackupDialog_delete_backups_statement">백업 삭제</string>
   <string name="BackupDialog_copied_to_clipboard">클립보드로 복사됨</string>
+  <string name="BackupDialog_verify">확인</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal이 백업을 저장하려면 저장공간 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"저장공간\" 항목을 허용하세요.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">마지막 백업: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">진행 중</string>
@@ -1285,6 +1296,7 @@
   <string name="preferences_app_protection__screen_lock">화면 잠금</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">안드로이드 화면 잠금 또는 지문으로 Signal을 잠급니다</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">다음 시간만큼 이용이 없을 때 화면 잠금</string>
+  <string name="preferences_app_protection__create">만들기</string>
   <string name="AppProtectionPreferenceFragment_none">없음</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">등록 잠금 번호는 현재 전송된 SMS 인증 코드와는 다릅니다. 예전에 앱에서 설정했던 번호를 입력하세요.</string>
   <string name="registration_activity__registration_lock_pin">등록 잠금 번호</string>
