--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -57,6 +57,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(atrašanās vieta)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(atbilde)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galerija</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fails</string>
+  <string name="AttachmentKeyboard_contact">Kontakts</string>
+  <string name="AttachmentKeyboard_location">Atrašanās vieta</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Nevar atrast aplikāciju, ar kuru iespējams izvēlēties pievienojamo mediju.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Lai pievienoto fotogrāfijas, videoierakstus un audioierakstus, Signal nepieciešama atļauja pieejai pie Glabātuves, bet tā ir liegta. Ejiet uz lietotnes iestatījumu izvēli, izvēlieties „Atļaujas“ un ieslēdziet „Glabātuve“.</string>
@@ -435,7 +441,8 @@
   <string name="MediaOverviewActivity_audio">Audio</string>
   <string name="MediaOverviewActivity_video">Video</string>
   <string name="MediaOverviewActivity_image">Atēls</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Notiek Signal zvans </string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zvana izveide</string>
   <string name="NotificationBarManager__incoming_signal_call">Ienākošais Signal zvans</string>
@@ -538,6 +545,8 @@
   <string name="RatingManager_no_thanks">Nē, paldies</string>
   <string name="RatingManager_later">Vēlāk</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ups! šķiet, ka Jums nav instelēts Play Veikals.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloķēt šo kontaktu?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Jūs vairs nesaņemsiet ziņas un zvanus no šī kontakta.</string>
@@ -1337,8 +1346,9 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__next">Tālāk</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Tālāk</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Aizmirsāt PIN?</string> -->
+  <string name="RegistrationLockFragment__next">Tālāk</string>
+  <string name="RegistrationLockFragment__forgot_pin">Aizmirsāt PIN?</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transporta ikona</string>
   <string name="ConversationListFragment_loading">Lādē…</string>
@@ -1380,6 +1390,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="BackupDialog_disable_and_delete_all_local_backups">Atspējot un dzēst visus dublējumus?</string>
   <string name="BackupDialog_delete_backups_statement">Dzēst dublējumus</string>
   <string name="BackupDialog_copied_to_clipboard">Kopēts starpliktuvē</string>
+  <string name="BackupDialog_verify">Pārbaudīt</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal ir nepieciešama pieeja krātuvei, lai izveidotu dublējumus, bet tā tiek patstāvīgi liegta. Lūdzu ejiet uz aplikāciju iestatījumiem, izvēlieties \"Atļaujas\" un iespējojiet \"Krātuve\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Pēdējais dublējums:%s</string>
   <string name="ChatsPreferenceFragment_in_progress">Progresā</string>
