--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(stad)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(svar)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galleri</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Fil</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Plassering</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Fann ingen program for valt medium.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal treng tilgang til lagring for å legga ved bilde, film eller lydklipp, men tilgangen er permanent avslått. Opna app-innstillingsmenyen og vel «Tilgang» – eventuelt «Tillatelser» – og skru på «Lagring».</string>
@@ -452,7 +458,8 @@
   <string name="MediaOverviewActivity_sent_by_you">Sent frå deg</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Sent frå %1$s til %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Sent frå deg til %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-samtale i gang</string>
   <string name="NotificationBarManager__establishing_signal_call">Set opp Signal-anrop</string>
   <string name="NotificationBarManager__incoming_signal_call">Inngåande Signal-anrop</string>
@@ -555,6 +562,8 @@
   <string name="RatingManager_no_thanks">Nei takk</string>
   <string name="RatingManager_later">Seinare</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Uff då. Programmet Play Store ser ikkje ut til å vera installert på denne eininga.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Vil du blokkera denne kontakten?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du kan i så fall ikkje lenger motta meldingar og anrop frå vedkomande.</string>
@@ -1413,8 +1422,9 @@ Du er à jour!</string>
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__next">Neste</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Neste</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Gløymt PIN-koden?</string> -->
+  <string name="RegistrationLockFragment__next">Neste</string>
+  <string name="RegistrationLockFragment__forgot_pin">Gløymt PIN-koden?</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transport-ikon</string>
   <string name="ConversationListFragment_loading">Lastar …</string>
@@ -1456,6 +1466,7 @@ Du er à jour!</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Skru av og slett alle lokale reservekopiar?</string>
   <string name="BackupDialog_delete_backups_statement">Slett reservekopiar</string>
   <string name="BackupDialog_copied_to_clipboard">Kopiert til utklippstavla</string>
+  <string name="BackupDialog_verify">Stadfest</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal treng tilgang til ekstern lagring for å laga reservekopiar, men tilgangen er permanent avslått. Opna app-innstillingsmenyen og vel «Tilgang» – eventuelt «Tillatelser» – og skru på «Lagring».</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Siste reservekopi: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">I gang</string>
