--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -60,6 +60,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(wideo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(lokalizacja)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(odpowiedź)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galeria</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Plik</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Lokalizacja</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Nie można znaleźć aplikacji, aby otworzyć tę zawartość.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal wymaga pozwolenia na przechowywanie w celu dołączania zdjęć, filmów lub dźwięków, ale zostało one na stałe odrzucone. Przejdź do menu ustawień aplikacji, wybierz \"Uprawnienia\" i włącz \"Przechowywanie\".</string>
@@ -492,7 +498,10 @@
   <string name="MediaOverviewActivity_sent_by_you">Wysłano przez Ciebie</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Wysłano przez %1$s do %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Wysłano przez Ciebie do %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">Przedstawiamy reakcje</string>
+  <string name="Megaphones_remind_me_later">Przypomnij później</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Połączenie Signal w toku</string>
   <string name="NotificationBarManager__establishing_signal_call">Nawiązywanie połączenia Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Przychodzące połączenie Signal</string>
@@ -597,6 +606,8 @@
   <string name="RatingManager_no_thanks">Nie dzięki</string>
   <string name="RatingManager_later">Później</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ups, prawdopodobnie aplikacja Google Play nie jest zainstalowana na Twoim urządzeniu.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zablokować ten kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Nie będziesz mógł(a) odbierać wiadomości i połączeń od tego kontaktu.</string>
@@ -1472,29 +1483,23 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Stwórz alfanumeryczny PIN</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Stwórz liczbowy PIN</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN musi mieć przynajmniej %1$d znaków</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN musi mieć przynajmniej %1$d cyfr</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Utwórz nowy PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Wciąż jesteś zalogowany(a), więc możesz wybrać nowy PIN. Gdy jesteś wylogowany(a), nie ma sposobu na odzyskanie Twojego numeru PIN.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Utwórz swój PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">Numery PIN zapewniają dodatkową ochronę Twojego konta. Zapisz swój PIN i schowaj w bezpiecznym miejscu, gdyż nie da się go odzyskać.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">Numery PIN się różnią. Spróbuj ponownie.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Potwierdź swój PIN</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Tworzenie PINu nie powiodło się</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Twój PIN nie został zapisany. Później poprosimy Cię o stworzenie PINu.</string>
   <string name="ConfirmKbsPinFragment__pin_created">Stworzono PIN.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Ponownie wpisz PIN</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Przedstawiamy numery PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Dodaj do swojego konta kolejne zabezpieczenie. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Tutaj dowiesz się więcej.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Dowiedz się więcej</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Blokada rejestracji = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Twoja blokada rejestracji nazywa się teraz PIN, i ma nowe funkcje. Uaktualnij ją teraz. %1$s</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Twoja blokada rejestracji nazywa się teraz PIN, i ma nowe funkcje. Uaktualnij ją teraz.</string>
   <string name="KbsSplashFragment__read_more_about_pins">Dowiedz się więcej o numerach PIN</string>
   <string name="KbsSplashFragment__update_pin">Uaktualnij PIN</string>
   <string name="KbsSplashFragment__create_your_pin">Utwórz swój PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Przypomnij później</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Wpisz swój PIN Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Aby pomóc Ci zapamiętać Twój numer PIN, będziemy co jakiś czas o niego pytać. Z czasem pytania będą coraz rzadsze.</string>
@@ -1507,20 +1512,23 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Twoje konto zostało zablokowane, aby chronić Twoją prywatność i bezpieczeństwo. Po %1$d dniach nieaktywności będziesz móc ponownie zarejestrować ten numer telefonu bez użycia numeru PIN. Cała zawartość Twojego konta zostanie usunięta.</string>
   <string name="AccountLockedFragment__next">Dalej</string>
   <string name="AccountLockedFragment__learn_more">Dowiedz się więcej</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Wpisz swój PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Wpisz numer PIN, który utworzyłeś(aś) dla swojego konta. Ten numer nie jest Twoim kodem weryfikacyjnym SMS.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Wpisz alfanumeryczny PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Wpisz liczbowy PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Dalej</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Nieprawidłowy PIN. Spróbuj ponownie.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Nieprawidłowy kod PIN. Pozostały(a) %1$d próby(a).</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Zapomniałeś(aś) PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Nieprawidłowy kod PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Pozostały(a) Ci %1$d prób(a). Jeśli się skończą, Twoje konto zostanie zablokowane na %2$d dni. Po %3$d dniach możesz zarejestrować się ponownie, bez użycia numeru PIN. Twoje konto zostanie skasowane, a cała jego zawartość usunięta.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Zapomniałeś(aś) kodu PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Dla Twojej prywatności i bezpieczeństwa, nie ma sposobu na odzyskanie Twojego numeru PIN. Jeśli Jeśli skończą Ci się próby, możesz ponownie zweryfikować numer przez SMS, po %1$d dniach nieaktywności. W tym przypadku Twoje konto zostanie skasowane, a cała zawartość usunięta.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Wpisz swój PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Wpisz numer PIN, który utworzyłeś(aś) dla swojego konta. Ten numer nie jest Twoim kodem weryfikacyjnym SMS.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Wpisz alfanumeryczny PIN</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Wpisz liczbowy PIN</string>
+  <string name="RegistrationLockFragment__next">Dalej</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Nieprawidłowy PIN. Spróbuj ponownie.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Zapomniałeś(aś) PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Nieprawidłowy kod PIN</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Zapomniałeś(aś) kodu PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">Utwórz PIN</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">Numer PIN zapewnia dodatkową ochronę Twojego konta Signal.</string>
+  <string name="KbsMegaphone__create_pin">Utwórz PIN</string>
+  <string name="KbsMegaphone__introducing_pins">Przedstawiamy numery PIN</string>
+  <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">Twoja blokada rejestracji nazywa się teraz PIN. Aktualizacja potrwa kilka sekund.</string>
+  <string name="KbsMegaphone__update_pin">Uaktualnij PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona transportu</string>
   <string name="ConversationListFragment_loading">Wczytywanie…</string>
@@ -1562,6 +1570,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Wyłączyć i usunąć wszystkie lokalne kopie zapasowe?</string>
   <string name="BackupDialog_delete_backups_statement">Usuń kopie zapasowe</string>
   <string name="BackupDialog_copied_to_clipboard">Skopiowane do schowka</string>
+  <string name="BackupDialog_verify">Zweryfikuj</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal wymaga dostępu do pamięci urządzenia w celu utworzenia kopii zapasowych, ale uprawnienia zostały na stałe odrzucone. Przejdź do ustawień aplikacji, wybierz \"Uprawnienia\" i włącz \"Pamięć\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Ostatnia kopia zapasowa: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">W trakcie</string>
@@ -1581,6 +1590,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="preferences_app_protection__signal_pin">PIN Signal</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Zmień</string>
+  <string name="preferences_app_protection__create">Utwórz</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Twój PIN zapewnia dodatkową warstwę ochrony i pozwala Ci na odzyskanie konta. Zostaniesz o niego poproszony(a), gdy będziesz rejestrować swój numer telefonu w Signal. Jeśli zapomnisz swojego numeru PIN, zostaniesz odcięty(a) od swojego konta na 7 dni.</string>
   <string name="AppProtectionPreferenceFragment_none">Brak</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Kod PIN blokady rejestracji różni się od kodu weryfikacyjnego SMS, który właśnie otrzymałeś(aś). Wprowadź kod PIN skonfigurowany wcześniej w aplikacji.</string>
