--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(vídeo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(localização)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(responder)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galeria</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Arquivo</string>
+  <string name="AttachmentKeyboard_contact">Contato</string>
+  <string name="AttachmentKeyboard_location">Local</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Não foi possível encontrar uma aplicação para selecionar a multimédia.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">O Signal requer permissão de acesso ao armazenamento de forma a poder anexar fotografias, vídeo e áudio, mas esta foi negada permanentemente. Por favor, aceda ao menu de definições das aplicações do seu telemóvel, selecione a aplicação Signal, e em \"Permissões\" ative \"Armazenamento\" ou \"Memória\". </string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Enviado por si</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Enviado por %1$s para %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Enviado por si para %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Lembrar-me mais tarde</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chamada do Signal em curso</string>
   <string name="NotificationBarManager__establishing_signal_call">A estabelecer chamada do Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">A receber chamada do Signal</string>
@@ -555,6 +563,8 @@
   <string name="RatingManager_no_thanks">Não, obrigado</string>
   <string name="RatingManager_later">Mais tarde</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Oops, a aplicação Play Store parece não estar instalada no seu dispositivo.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Deixará de receber mensagens ou chamadas deste contacto.</string>
@@ -1412,29 +1422,22 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Criar um PIN alfanumérico</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Criar um PIN numérico</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">O PIN deverá ter pelo menos %1$d caracteres</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">O PIN deve ter pelo menos %1$d dígitos</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Criar um novo PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Porque ainda tem sessão iniciada, você pode criar um PIN novo. Quando terminar sessão, não existe forma de recuperar o seu PIN.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Criar o seu PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">Os PINs adicionam uma camada extra de segurança à sua conta. Escreva o seu PIN e guarde-o num local seguro. Ele não poderá ser recuperado.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">Os PINs não coincidem. Tente novamente.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Confirme o seu PIN</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Ocorreu um erro ao tentar criar o PIN</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">O seu PIN não foi guardado. Iremos pedir-lhe para criar o PIN mais tarde.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN criado.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Reintroduza o PIN</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Introdução aos PINs</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Adicione outro nível de segurança à sua conta. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Leia mais aqui.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Saber mais</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Bloqueio do registo = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">O seu \'Bloqueio de resgisto\' agora chama-se PIN, e faz mais. Actualize-o agora. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Ler mais acerca dos PINs.</string>
   <string name="KbsSplashFragment__update_pin">Atualizar PIN</string>
   <string name="KbsSplashFragment__create_your_pin">Crie o seu PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Lembrar-me mais tarde</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Introduza o seu PIN do Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Para o ajudar a memorizar o seu PIN, vamos pedir-lhe para o introduzir periodicamente. Iremos pedir-lhe menos vezes ao longo do tempo.</string>
@@ -1447,20 +1450,19 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">A sua conta foi bloqueada de forma a proteger a sua privacidade e segurança. Após %1$d dias de inatividade da sua conta, você será capaz de voltar a registar este número de telemóvel sem necessitar do seu pin. Todo o conteúdo será eliminado.</string>
   <string name="AccountLockedFragment__next">Seguinte</string>
   <string name="AccountLockedFragment__learn_more">Saber mais</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Introduza o seu PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Introduza o PIN que criou para a sua conta. Ele é diferente do seu código de verificação SMS.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Introduza um PIN alfanumérico</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Introduza um PIN numérico</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Seguinte</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PIN incorreto. Tente novamente.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PIN incorreto. Restam-lhe %1$d tentativas.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Esqueceu-se do PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PIN incorreto</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Restam-lhe %1$d tentativas. Quando não restarem mais tentativas, a sua conta será bloqueada durante %2$d dias. Após %3$d dias de inatividade, você poderá voltar a registar-se sem ser necessário o seu PIN. A sua conta será limpa e todo o conteúdo presente nela será eliminado.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Esqueceu-se do seu PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Para sua privacidade e segurança, não existe forma de recuperar o seu PIN. Se esgotar todas as tentativas, poderá fazer uma nova verificação através de SMS após %1$d dias de inatividade. Neste caso, a sua conta será limpa e todo o conteúdo presente nela será eliminado.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Introduza o seu PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Introduza o PIN que criou para a sua conta. Ele é diferente do seu código de verificação SMS.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Introduza um PIN alfanumérico</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Introduza um PIN numérico</string>
+  <string name="RegistrationLockFragment__next">Seguinte</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PIN incorreto. Tente novamente.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Esqueceu-se do PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PIN incorreto</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Esqueceu-se do seu PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Introdução aos PINs</string>
+  <string name="KbsMegaphone__update_pin">Atualizar PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ícone de transporte</string>
   <string name="ConversationListFragment_loading">A carregar…</string>
@@ -1502,6 +1504,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="BackupDialog_disable_and_delete_all_local_backups">Desativar e eliminar todas as cópias de segurança locais?</string>
   <string name="BackupDialog_delete_backups_statement">Eliminar cópias de segurança</string>
   <string name="BackupDialog_copied_to_clipboard">Copiado para a área de transferência</string>
+  <string name="BackupDialog_verify">Verificar</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">O Signal requer permissão de acesso ao armazenamento externo para criar cópias de segurança, mas esta foi negada permanentemente. Por favor, aceda às definições das aplicações do seu telemóvel, selecione a aplicação Signal e nas \"Permissões\" ative \"Armazenamento\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Última cópia de segurança: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Em progresso</string>
@@ -1521,6 +1524,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences_app_protection__signal_pin">PIN do Signal</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Alterar</string>
+  <string name="preferences_app_protection__create">Criar</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">O seu PIN adiciona uma camada extra de segurança e faz uma códia de segurança da sua conta. Ser-lhe-á pedida quando registar o seu número de telemóvel com o Signal. Se se esquecer do seu PIN, ficará bloqueado de aceder à sua conta durante 7 dias.</string>
   <string name="AppProtectionPreferenceFragment_none">Nenhum</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">O registo de um PIN de bloqueio não é o mesmo que o código de verificação SMS que acabou de receber. Por favor, insira o PIN que configurou previamente para a sua aplicação.</string>
