--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -60,6 +60,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(poloha)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(odpoveď)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galéria</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Súbor</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Poloha</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Nenašla sa aplikácia pre výber médií.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal potrebuje prístup k úložisku aby k správam mohol pridať obrázkové, video a zvukové prílohy, ale prístup bol natrvalo zakázaný. Prosím v nastaveniach aplikácií zvoľte \"Oprávnenia\", a povoľte \"Úložisko\".</string>
@@ -492,7 +498,10 @@
   <string name="MediaOverviewActivity_sent_by_you">Vami odoslané</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Odoslal/a %1$s adresátovi %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Vami odoslané adresátovi %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">Predstavujeme reakcie</string>
+  <string name="Megaphones_remind_me_later">Pripomenúť neskôr</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Prebieha Signal hovor</string>
   <string name="NotificationBarManager__establishing_signal_call">Príprava na Signal hovor</string>
   <string name="NotificationBarManager__incoming_signal_call">Prichádzajúci Signal hovor</string>
@@ -597,6 +606,8 @@
   <string name="RatingManager_no_thanks">Nie, ďakujem</string>
   <string name="RatingManager_later">Neskôr</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Joj, vyzerá to, že Obchod Google Play nie je nainštalovaný na vašom zariadení.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zablokovať tento kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Už nebudete od tohto kontaktu dostávať správy a hovory.</string>
@@ -1479,29 +1490,23 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Vytvoriť alfanumerický PIN kód</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Vytvoriť numerický PIN kód</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN kód musí mať minimálne %1$d znakov</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN kód musí mať aspoň %1$d číslic</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Vytvoriť nový PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Pretože ste stále prihlásený/prihlásená, môžete si vytvoriť nový PIN kód. Keď sa odhlásite, váš PIN kód nebude možné obnoviť.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Vytvorte si PIN</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN kódy pridávajú k vášmu účtu ďalšiu vrstvu zabezpečenia. Zapíšte si svoj PIN kód a uchovávajte ho na bezpečnom mieste. Nie je totiž možné ho obnoviť.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN kódy sa nezhodujú. Skúste to znova.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Potvrďte svoj PIN.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Pri tvorbe PIN kódu došlo k chybe</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Váš PIN kód sa neuložil. Vyzveme vás vytvoriť si PIN kód neskôr.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN kód sa vytvoril.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Znovu zadajte PIN</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Predstavujeme PINy</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Pridajte k svojmu účtu ďalšiu vrstvu zabezpečenia. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Ďalšie informácie nájdete tu.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Dozvedieť sa viac</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Registračný zámok = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Váš Registračný zámok sa teraz volá PIN kód a dokáže viac. Aktualizujte ho teraz. %1$s</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Váš Registračný zámok sa teraz volá PIN kód a dokáže viac. Aktualizujte ho teraz.</string>
   <string name="KbsSplashFragment__read_more_about_pins">Prečítajte si viac o PIN kódoch.</string>
   <string name="KbsSplashFragment__update_pin">Aktualizovať PIN kód</string>
   <string name="KbsSplashFragment__create_your_pin">Vytvorte si PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Pripomenúť neskôr</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Zadajte váš PIN pre Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Aby sme vám pomohli zapamätať si váš PIN kód, budeme vás opakovanie žiadať o jeho zadanie. Postupom času vás o to budeme žiadať menej často.</string>
@@ -1514,20 +1519,23 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Váš účet sa uzamkol z dôvodu ochrany vášho súkromia a zabezpečenia. Po %1$d dňoch nečinnosti vo vašom účte budete môcť opätovne zaregistrovať toto telefónne číslo bez potreby PIN kódu. Všetok obsah sa odstráni.</string>
   <string name="AccountLockedFragment__next">Ďalší</string>
   <string name="AccountLockedFragment__learn_more">Dozvedieť sa viac</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Zadajte svoj PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Zadajte PIN, ktorý ste si pre váš účet vytvorili. Nie je to to isté ako SMS overovací kód.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Zadajte alfanumerický PIN kód</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Zadajte číselný PIN kód</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Ďalší</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">Nesprávny PIN kód. Skúste to znova.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">Nesprávny PIN kód. Zostáva %1$d pokusov.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Zabudli ste PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">Nesprávny PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Zostáva vám %1$d pokusov. Ak miniete všetky pokusy, váš účet sa na %2$d dní zablokuje. Po %3$d dňoch nečinnosti sa môžete znova zaregistrovať bez potreby PIN kódu. Váš účet sa vymaže a všetok obsah sa odstráni.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Zabudli ste svoj PIN?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Z dôvodu ochrany vášho súkromia a zabezpečenia neexistuje možnosť obnovenia vášho PIN kódu. Ak miniete všetky pokusy, môžete sa opätovne overiť prostredníctvom SMS po %1$d dňoch nečinnosti. V tomto prípade sa váš účet vymaže a všetok obsah sa odstráni.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Zadajte svoj PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Zadajte PIN, ktorý ste si pre váš účet vytvorili. Nie je to to isté ako SMS overovací kód.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Zadajte alfanumerický PIN kód</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Zadajte číselný PIN kód</string>
+  <string name="RegistrationLockFragment__next">Ďalší</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">Nesprávny PIN kód. Skúste to znova.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Zabudli ste PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">Nesprávny PIN</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Zabudli ste svoj PIN?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">Vytvoriť PIN</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">PIN kódy pridajú k vášmu účtu Signal ďalšiu vrstvu zabezpečenia.</string>
+  <string name="KbsMegaphone__create_pin">Vytvoriť PIN</string>
+  <string name="KbsMegaphone__introducing_pins">Predstavujeme PINy</string>
+  <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">Váš Registračný zámok sa teraz volá PIN kód. Jeho aktualizácia vám zaberie pár sekúnd.</string>
+  <string name="KbsMegaphone__update_pin">Aktualizovať PIN kód</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona prenosu</string>
   <string name="ConversationListFragment_loading">Načítava sa…</string>
@@ -1569,6 +1577,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="BackupDialog_disable_and_delete_all_local_backups">Zakázať a vymazať všetky lokálne zálohy?</string>
   <string name="BackupDialog_delete_backups_statement">Vymazať zálohy</string>
   <string name="BackupDialog_copied_to_clipboard">Skopírované do schránky</string>
+  <string name="BackupDialog_verify">Overiť</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal potrebuje prístup k úložisku aby mohol vytvárať zálohy, ale prístup bol natrvalo zakázaný. Prosím v nastaveniach aplikácií zvoľte \"Oprávnenia\", a povoľte \"Úložisko\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Posledná záloha: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Prebieha</string>
@@ -1588,6 +1597,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="preferences_app_protection__signal_pin">PIN kód Signalu</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Zmeniť</string>
+  <string name="preferences_app_protection__create">Vytvoriť</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN kód pridáva ďalšiu vrstvu zabezpečenia a zálohuje váš účet. Budete oň požiadaný/požiadaná, keď si v Signale zaregistrujete svoje tefónne číslo. Ak zabudnete svoj PIN kód, váš účet sa na 7 dní uzamkne.</string>
   <string name="AppProtectionPreferenceFragment_none">Žiadny</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN registračného zámku sa nezhoduje s verifikačným kódom ktorý ste obdržali v SMS správe. Zadajte prosím PIN, ktorý ste si v aplikácii nastavili.</string>
