--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(vendndodhje)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(përgjigju)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Galeri</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Kartelë</string>
+  <string name="AttachmentKeyboard_contact">Kontakt</string>
+  <string name="AttachmentKeyboard_location">Vendndodhje</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">S\’gjendet dot aplikacion për përzgjedhje mediash.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Që të mund të bashkëngjisë foto, video, ose audio, Signal-i lyp leje Depozitimi, por kjo i është mohuar. Ju lutemi, vazhdoni për te menuja e rregullimeve të aplikacionit, përzgjidhni \"Leje\", dhe aktivizoni \"Depozitim\".</string>
@@ -452,7 +458,9 @@
   <string name="MediaOverviewActivity_sent_by_you">Dërguar nga ju</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Dërguar nga %1$s për %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Dërguar nga ju për %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Kujtomë më vonë</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Thirrje Signal në zhvillim e sipër</string>
   <string name="NotificationBarManager__establishing_signal_call">Po bëhet thirrje Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Thirrje ardhëse Signal</string>
@@ -554,6 +562,8 @@
   <string name="RatingManager_no_thanks">Jo, faleminderit</string>
   <string name="RatingManager_later">Më vonë</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Hëm, aplikacioni Play Store s\’duket të jetë i instaluar në pajisjen tuaj.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Të bllokohet ky kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">S\’do të merrni më mesazhe dhe thirrje nga ky kontakt.</string>
@@ -1410,29 +1420,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Krijo PIN alfanumerik</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Krijo PIN numerik</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN-i duhet të jetë të paktën %1$d shenja</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN-i duhet të jetë të paktën %1$d shenja</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Krijoni një PIN të ri</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Ngaqë jeni ende të futur, mund të krijoni një PIN të ri. Kur të keni dalë, s’ka mënyrë për të rikthyer PIN-in tuaj.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Krijoni PIN-in tuaj</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN-et i shtojnë llogarisë tuaj një shtresë ekstra. Shkruajeni PIN-in tuaj dhe mbajeni në një vend të parrezik. S’mund të rikthehet.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN-et s’përputhen. Riprovoni.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Ripohoni PIN-in tuaj.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Krijimi i PIN-it dështoi</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">PIN-i juaj s’u ruajt.Do t’ju kujtojmë më vonë të krijoni një PIN.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN-i u krijua.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Rijepeni PIN-in</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Ju paraqesim PIN-et</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Shtojini llogarisë tuaj një tjetër nivel sigurie. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Lexoni më tepër këtu.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Mësoni Më Tepër</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Kyçje Regjistrimi = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Kyçi juaj i Regjistrimit tani quhet PIN, dhe bën edhe më tepër se aq. Përditësojeni që tani. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Lexoni më tepër rreth PIN-esh.</string>
   <string name="KbsSplashFragment__update_pin">Përditësoni PIN-in</string>
   <string name="KbsSplashFragment__create_your_pin">Krijoni PIN-in tuaj</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Kujtomë më vonë</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Jepni PIN-in tuaj për Signal-in</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Për t’ju ndihmuar të fiksoni në kujtesë PIN,-in tuaj, do t’ju kërkojmë në mënyrë periodike ta jepni. Me kalimin e kohës do t’jua kërkojmë më rrallë.</string>
@@ -1445,20 +1448,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Llogaria juaj është kyçur për të mbrojtur privatësinë dhe sigurinë. Pas %1$d ditësh mosveprimtarie në llogarinë tuaj, do të jeni në gjendje të riregjistroni këtë numër telefoni pa u dashur PIN. Krejt lënda do të fshihet.</string>
   <string name="AccountLockedFragment__next">Pasuesi</string>
   <string name="AccountLockedFragment__learn_more">Mësoni Më Tepër</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Jepni PIN-in tuaj</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Jepni PIN-in që krijuar për llogarinë tuaj. Ky është tjetër gjë nga kodi juaj i verifikimit me SMS.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Jepni PIN alfanumerik</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Jepni PIN numerik</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Pasuesi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PIN i pasaktë. Riprovoni.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PIN i pasaktë. Edhe %1$d prova.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Harruat PIN-in?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PIN i pasaktë</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Ju mbeten edhe %1$d prova. Nëse ju mbarohen provat, llogaria juaj do të kyçet për %2$d ditë. Pas %3$d ditësh mosveprimtarie, mund ta riregjistroni pa u dashur PIN. Llogaria juaj do të spastrohet dhe krejt lënda do të fshihet.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Harruat PIN-in tuaj?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Për privatësinë dhe sigurinë tuaj, nuk ka mënyrë për rimarrje të PIN-it tuaj. Nëse ju mbarohen provat, mund ta riverifikoni me SMS, pas %1$d ditësh mosveprimtarie. Në rast të tillë, llogaria juaj do të spastrohet dhe krejt lënda do të fshihet.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Jepni PIN-in tuaj</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Jepni PIN-in që krijuar për llogarinë tuaj. Ky është tjetër gjë nga kodi juaj i verifikimit me SMS.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Jepni PIN alfanumerik</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Jepni PIN numerik</string>
+  <string name="RegistrationLockFragment__next">Pasuesi</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PIN i pasaktë. Riprovoni.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Harruat PIN-in?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PIN i pasaktë</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Harruat PIN-in tuaj?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Ju paraqesim PIN-et</string>
+  <string name="KbsMegaphone__update_pin">Përditësoni PIN-in</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikonë bartjesh</string>
   <string name="ConversationListFragment_loading">Po ngarkohet…</string>
@@ -1500,6 +1502,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">Të çaktivizohen dhe fshihen krejt kopjeruajtjet vendore?</string>
   <string name="BackupDialog_delete_backups_statement">Fshiji kopjeruajtjet</string>
   <string name="BackupDialog_copied_to_clipboard">U kopjua në të papastër</string>
+  <string name="BackupDialog_verify">Verifiko</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Që të mund të krijohen kopjeruajtje, Signal-i lyp leje mbi depozitë të jashtme, por kjo i është mohuar. Ju lutemi, kaloni te rregullime aplikacioni, përzgjidhni \"Leje\" dhe aktivizoni \"Depozitim\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Kopjeruajtja e fundit: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Në kryerje e sipër</string>
@@ -1519,6 +1522,7 @@
   <string name="preferences_app_protection__signal_pin">PIN Signal-i</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Ndryshojeni</string>
+  <string name="preferences_app_protection__create">Krijoni</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN-i juaj i shton llogarisë tuaj një shtresë ekstra sigurie dhe ndihmon në kopjeruajtjen e llogarisë tuaj. Do t’ju kërkohet një i tillë kur regjistroni numrin e telefonit tuaj me Signal-in. Nëse harroni PIN-in tuaj, do të kyçeni jashtë llogarisë tuaj për 7 ditë.</string>
   <string name="AppProtectionPreferenceFragment_none">Asnjë</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN-i i Kyçjes së Regjistrimit s\’është i njëjtë me kodin e verifikimit SMS që sapo morët. Ju lutemi, jepni PIN-in që formësuat më herët te aplikacioni.</string>
