--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -58,6 +58,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(видео)</string>
   <string name="DraftDatabase_Draft_location_snippet">(локација)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(одговор)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Галерија</string>
+  <string name="AttachmentKeyboard_gif">ГИФ</string>
+  <string name="AttachmentKeyboard_file">Фајл</string>
+  <string name="AttachmentKeyboard_contact">Контакт</string>
+  <string name="AttachmentKeyboard_location">Локација</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Нема апликације за избор медијума.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal захтева дозовле за меморију како би могао слати фотографије, видео снимке или аудио снимке, али су трајно забрањене. Молимо Вас идите у мени за подешавања и дозволите приступ меморији.</string>
@@ -416,7 +422,8 @@
   <string name="MediaOverviewActivity_audio">Звук</string>
   <string name="MediaOverviewActivity_video">Видео</string>
   <string name="MediaOverviewActivity_image">Слика</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Позив преко Signal-a у току</string>
   <string name="NotificationBarManager__establishing_signal_call">Успостављам Signal позив</string>
   <string name="NotificationBarManager__incoming_signal_call">Долазни Signal позив</string>
@@ -517,6 +524,8 @@
   <string name="RatingManager_no_thanks">Не, хвала</string>
   <string name="RatingManager_later">Касније</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Упс, изгледа да апликација Плеј продавница није инсталирана на вашем уређају.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Блокирати овај контакт?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Више нећете примати поруке и позиве од овог контакта.</string>
@@ -1296,8 +1305,9 @@
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__next">Даље</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Даље</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Заборавили сте ПИН?</string> -->
+  <string name="RegistrationLockFragment__next">Даље</string>
+  <string name="RegistrationLockFragment__forgot_pin">Заборавили сте ПИН?</string>
+  <!--KBS Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Икона преноса</string>
   <string name="ConversationListFragment_loading">Учитавање…</string>
@@ -1332,6 +1342,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">Да искључим и обришем све локалне резерве?</string>
   <string name="BackupDialog_delete_backups_statement">Обриши резерве</string>
   <string name="BackupDialog_copied_to_clipboard">Копирано на клипборд</string>
+  <string name="BackupDialog_verify">Потврди</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Последња резерва: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">У току</string>
   <string name="LocalBackupJob_creating_backup">Прављење бекапа…</string>
@@ -1344,6 +1355,7 @@
   <string name="preferences_app_protection__screen_lock">Закључавање екрана</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Ограничите приступ Сигналу помоћу Андроид екрана за закључавање или отиском прста</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Период неактивности за закључавање екрана</string>
+  <string name="preferences_app_protection__create">Направи</string>
   <string name="AppProtectionPreferenceFragment_none">Ништа</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Пријавни код се не слаже са СМС кодом који сте примили. Молимо вас да унесете пријавни код који сте раније подесили унутар апликације.</string>
   <string name="registration_activity__registration_lock_pin">Пријавни код</string>
