--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(eneo)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(jibu)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">Matunzio</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">Faili</string>
+  <string name="AttachmentKeyboard_contact">Mwasiliani</string>
+  <string name="AttachmentKeyboard_location">Eneo</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Haiwezi kupata programu ya kuchagua media</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal inahitaji idhini ya Hifadhi ili kuunganisha picha, video, au sauti, lakini imekataliwa kabisa. Tafadhali endelea kwenye orodha ya mipangilio ya programu, chagua \"Ruhusa\", na uwezesha \"Hifadhi\".</string>
@@ -453,7 +459,9 @@ Gusa ikoni hii kwenye kicharazio chako:</string>
   <string name="MediaOverviewActivity_sent_by_you">Uliyotuma</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Umetumwa na %1$s kwa %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Umetumwa na wewe kwa %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Nikumbushe baadaya</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Simu ya Signal inaendelea</string>
   <string name="NotificationBarManager__establishing_signal_call">Inaanzisha simu ya Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">Simu ya Signal inayoingia</string>
@@ -558,6 +566,8 @@ Signal inahitaji ruhusa ya Kamera ili kuskani msimbo wa QR, lakini imekataliwa k
   <string name="RatingManager_no_thanks">Hapana nashukuru</string>
   <string name="RatingManager_later">Baadaye</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Duh, programu ya Play Store inaonekana haijasakinishwa kwenye kifaa chako.</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zuia mwasiliani huyu?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Hautapokea tena ujumbe na simu kutoka kwa mwasiliani huyu</string>
@@ -1411,12 +1421,8 @@ nambari yako ya simu</string>
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Buni PINI ya herufi na maneno</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Buni PINI ya herufi</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PINI lazima angalau iwe na alama%1$d.</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PINI lazima iwe angalau herufi %1$d</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">Buni PINI mpya</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Kwa sababu bado uko mtandaoni, unaweza kubuni PINI mpya. Unapotoka, hamna njia yoyote ile ya kuokoa PINI yako.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">Buni PINI yako</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PINI zinaongeza safu ya ziada kwenye akaunti yako. Andika PINI yako mahali na uiweke pahali salama. Haiwezi kuokolewa.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PINI hazifanani. Jaribu tena.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Thibitisha PINI yako.</string>
@@ -1425,15 +1431,11 @@ nambari yako ya simu</string>
   <string name="ConfirmKbsPinFragment__pin_created">PINI imebuniwa.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Kujulisha kuhusu PINI.</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Ongeza kiwango kingine cha usalama kwenye akaunti yako. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Soma mengi zaidi hapa.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">Fahamu Zaidi</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Kufuli ya Usajili = PINI</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Kufuli Yako ya Usajili sasa inaitwa PINI na inafanya mengi zaidi. Isasishe sasa. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">Soma zaidi kuhusu PINI.</string>
   <string name="KbsSplashFragment__update_pin">Sasisha PINI</string>
   <string name="KbsSplashFragment__create_your_pin">Buni PINI yako</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Nikumbushe baadaya</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">Weka PINI yako ya Signal</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Ili kukusaidia kukariri PINI yako, tutakuuliza uiingize mara kwa mara. Tunapunguza kukuuliza baada ya muda.</string>
@@ -1446,20 +1448,19 @@ nambari yako ya simu</string>
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Akaunti yako imefungwa ili kulinda faragha yako na usalama wako. Baada ya siku %1$d za kimya kwenye akaunti yako utaweza kusajili upya nambari hii wa simu bila kuhitaji pini yako. Yote yaliyomo yatafutwa.</string>
   <string name="AccountLockedFragment__next">Ifuatayo</string>
   <string name="AccountLockedFragment__learn_more">Fahamu Zaidi</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Weka PINI yako</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Weka PINI uliyobuni kwa hii akaunti. Hii ni tofauti na msimbo wako wa kuhakikisha kupitia Ujumbe Mfupi.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Weka PINI yako ya herufi na maneno</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Weka PINI yako ya herufi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Ifuatayo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PINI si sahihi. Jaribu tena.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PINI si sahihi. Majaribio %1$d yamebakia.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Umesahau Nenosiri?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PINI si sahihi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Una majaribio %1$d yaliyobakia. Majaribio yako yakiisha akaunti yako itafungwa kwa siku %2$d. Baada ya siku %3$d za kimya, unaweza kusajili upya bila PINI yako. Akaunti yako itafutwa na yote yaliyomo kufutwa.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Je, umesahau PINI yako?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Kwa ajili ya faragha yako na usalama wako, hakuna njia yoyote ya kuokoa PINI yako. Majaribio yako yakiisha, unaweza kuhakikisha kupitia Ujumbe Mfupi baada ya siku %1$d za kimya. Kwa kesi hii, akaunti yako itafutwa na yote yaliyomo kufutwa.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">Weka PINI yako</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">Weka PINI uliyobuni kwa hii akaunti. Hii ni tofauti na msimbo wako wa kuhakikisha kupitia Ujumbe Mfupi.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Weka PINI yako ya herufi na maneno</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Weka PINI yako ya herufi</string>
+  <string name="RegistrationLockFragment__next">Ifuatayo</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PINI si sahihi. Jaribu tena.</string>
+  <string name="RegistrationLockFragment__forgot_pin">Umesahau Nenosiri?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PINI si sahihi</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">Je, umesahau PINI yako?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">Kujulisha kuhusu PINI.</string>
+  <string name="KbsMegaphone__update_pin">Sasisha PINI</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikoni ya usafiri</string>
   <string name="ConversationListFragment_loading">Inafunguka</string>
