--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(వీడియో)</string>
   <string name="DraftDatabase_Draft_location_snippet">(ప్రదేశం)</string>
   <string name="DraftDatabase_Draft_quote_snippet">స్పంధించు</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">చిత్రశాల</string>
+  <string name="AttachmentKeyboard_gif">గిఫ్</string>
+  <string name="AttachmentKeyboard_file">పత్రం</string>
+  <string name="AttachmentKeyboard_contact">పరిచయం</string>
+  <string name="AttachmentKeyboard_location">స్థానం</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">మీడియా ఎంచుకోవడానికి అనువర్తనం దొరకదు.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">చిత్రాలు , వీడియోలు లేదా ఆడియోను అటాచ్ చేయడానికి Signal కు నిల్వ అనుమతి అవసరం, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. దయచేసి అనువర్తనం సెట్టింగ్ల మెనుకు కొనసాగండి, \"అనుమతులు\" ఎంచుకోండి మరియు \"నిల్వ\" ను ప్రారంభించండి.</string>
@@ -457,7 +463,9 @@
   <string name="MediaOverviewActivity_sent_by_you">మీరు పంపారు</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">%1$sనుండి%2$sవరకు పంపబడింది</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">మీరు పంపారు%1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">తరువాత నాకు గుర్తు చేయండి</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">పురోగతి లో Signal కాల్</string>
   <string name="NotificationBarManager__establishing_signal_call">స్థాపించబడుతున్న Signal కాల్</string>
   <string name="NotificationBarManager__incoming_signal_call">క్రొత్తగా వచ్చిన Signal కాల్</string>
@@ -560,6 +568,8 @@
   <string name="RatingManager_no_thanks">వద్దు ధన్యవాదాలు</string>
   <string name="RatingManager_later">తర్వాత</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">అయ్యో, </string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">ఈ పరిచయం నిరోధించాలా?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">మీరు ఇకపై ఈ వ్యక్తి నుండి ఏటువంతి సందేశాలను మరియు కాల్స్ అందుకోరు.</string>
@@ -1415,29 +1425,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">ఆల్ఫాన్యూమరిక్ పిన్ను సృష్టించండి</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">సంఖ్యా పిన్ను సృష్టించండి</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">పిన్ కనీసం %1$d అక్షరాలు ఉండాలి</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">పిన్ కనీసం %1$d అంకెలు ఉండాలి</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">క్రొత్త పిన్ను సృష్టించండి</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">మీరు ఇప్పటికీ లాగిన్ అయినందున, మీరు క్రొత్త పిన్ను సృష్టించవచ్చు. మీరు లాగ్ అవుట్ అయినప్పుడు, మీ పిన్‌ను తిరిగి పొందటానికి మార్గం లేదు.</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">మీ పిన్ను సృష్టించండి</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">పిన్‌లు మీ ఖాతాకు అదనపు భద్రతా పొరను జోడిస్తాయి. మీ పిన్ను వ్రాసి సురక్షితమైన స్థలంలో ఉంచండి. దాన్ని తిరిగి పొందలేము.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">పిన్‌లు సరిపోలడం లేదు. మళ్ళీ ప్రయత్నించండి.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">మీ పిన్ను నిర్ధారించండి.</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">పిన్ సృష్టి విఫలమైంది</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">మీ పిన్ సేవ్ చేయబడలేదు. తరువాత పిన్ సృష్టించమని మేము మిమ్మల్ని అడుగుతాము.</string>
   <string name="ConfirmKbsPinFragment__pin_created">పిన్ సృష్టించబడింది.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">పిన్‌ను తిరిగి నమోదు చేయండి</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">పిన్‌లను పరిచయం చేస్తోంది</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">మీ ఖాతాకు మరో స్థాయి భద్రతను జోడించండి. %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">ఇక్కడ మరింత చదవండి.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">ఇంకా నేర్చుకో</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">నమోదు లాక్  = పిన్</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">మీ రిజిస్ట్రేషన్ లాక్‌ను ఇప్పుడు పిన్ అని పిలుస్తారు మరియు ఇది మరింత చేస్తుంది. ఇప్పుడే దాన్ని నవీకరించండి. %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">పిన్‌ల గురించి మరింత చదవండి.</string>
   <string name="KbsSplashFragment__update_pin">పిన్‌ను నవీకరించండి</string>
   <string name="KbsSplashFragment__create_your_pin">మీ పిన్ను సృష్టించండి</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">తరువాత నాకు గుర్తు చేయండి</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">మీ Signal పిన్ను నమోదు చేయండి</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">మీ పిన్‌ను గుర్తుంచుకోవడంలో మీకు సహాయపడటానికి, క్రమానుగతంగా నమోదు చేయమని మేము మిమ్మల్ని అడుగుతాము. మేము మిమ్మల్ని కాలక్రమేణా తక్కువ అడుగుతాము.</string>
@@ -1450,20 +1453,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">మీ గోప్యత మరియు భద్రతను రక్షించడానికి మీ ఖాతా లాక్ చేయబడింది. మీ ఖాతాలో %1$d రోజుల నిష్క్రియాత్మకత తర్వాత మీరు మీ పిన్ అవసరం లేకుండా ఈ ఫోన్ నంబర్‌ను తిరిగి నమోదు చేయగలరు. మొత్తం కంటెంట్ తొలగించబడుతుంది.</string>
   <string name="AccountLockedFragment__next">తరువాత</string>
   <string name="AccountLockedFragment__learn_more">ఇంకా నేర్చుకో</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">మీ పిన్ను నమోదు చేయండి</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">మీ ఖాతా కోసం మీరు సృష్టించిన పిన్‌ను నమోదు చేయండి. ఇది మీ SMS ధృవీకరణ కోడ్‌కు భిన్నంగా ఉంటుంది.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">ఆల్ఫాన్యూమరిక్ పిన్ను నమోదు చేయండి</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">సంఖ్యా పిన్ను నమోదు చేయండి</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">తరువాత</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">తప్పు పిన్. మళ్ళీ ప్రయత్నించండి.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">తప్పు పిన్. %1$d ప్రయత్నాలు మిగిలి ఉన్నాయి.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">పిన్ను మరచిపోయారా?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">తప్పయిన పిన్</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">మీకు %1$d ప్రయత్నాలు మిగిలి ఉన్నాయి. మీరు ప్రయత్నాలు అయిపోతే మీ ఖాతా %2$d రోజులు లాక్ చేయబడుతుంది. %3$d రోజుల నిష్క్రియాత్మకత తరువాత, మీరు మీ పిన్ లేకుండా తిరిగి నమోదు చేసుకోవచ్చు. మీ ఖాతా తుడిచివేయబడుతుంది మరియు మొత్తం కంటెంట్ తొలగించబడుతుంది.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">పిన్ను మరచిపోయారా?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">మీ గోప్యత మరియు భద్రత కోసం, మీ పిన్‌ను తిరిగి పొందటానికి మార్గం లేదు. మీరు ప్రయత్నాలు అయిపోతే, %1$d రోజుల నిష్క్రియాత్మకత తర్వాత మీరు SMS తో తిరిగి ధృవీకరించవచ్చు. ఈ సందర్భంలో, మీ ఖాతా తుడిచివేయబడుతుంది మరియు మొత్తం కంటెంట్ తొలగించబడుతుంది.</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">మీ పిన్ను నమోదు చేయండి</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">మీ ఖాతా కోసం మీరు సృష్టించిన పిన్‌ను నమోదు చేయండి. ఇది మీ SMS ధృవీకరణ కోడ్‌కు భిన్నంగా ఉంటుంది.</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">ఆల్ఫాన్యూమరిక్ పిన్ను నమోదు చేయండి</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">సంఖ్యా పిన్ను నమోదు చేయండి</string>
+  <string name="RegistrationLockFragment__next">తరువాత</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">తప్పు పిన్. మళ్ళీ ప్రయత్నించండి.</string>
+  <string name="RegistrationLockFragment__forgot_pin">పిన్ను మరచిపోయారా?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">తప్పయిన పిన్</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">పిన్ను మరచిపోయారా?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">పిన్‌లను పరిచయం చేస్తోంది</string>
+  <string name="KbsMegaphone__update_pin">పిన్‌ను నవీకరించండి</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">రవాణా చిహ్నం</string>
   <string name="ConversationListFragment_loading">లోడ్…</string>
@@ -1505,6 +1507,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">అన్ని స్థానిక ప్రత్యామ్నాయను తొలగించి, డిసేబుల్ చేయాలా?</string>
   <string name="BackupDialog_delete_backups_statement">ప్రత్యామ్నాయను తొలిగించు</string>
   <string name="BackupDialog_copied_to_clipboard">క్లిప్బోర్డ్కు కాపీ చేయబడింది</string>
+  <string name="BackupDialog_verify">నిర్ధారించబడిన</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">ప్రత్యామ్నాయను సృష్టించడానికి Signal బాహ్య నిల్వ అనుమతి అవసరం, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. దయచేసి అనువర్తనం సెట్టింగ్లకు కొనసాగించండి, \"అనుమతులు\" ఎంచుకుని, \"నిల్వ\" ను ప్రారంభించండి.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">మునుపటి ప్రత్యామ్నాయ: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">పురోగతిలో ఉంది</string>
@@ -1524,6 +1527,7 @@
   <string name="preferences_app_protection__signal_pin">Signal పిన్</string>
   <string name="preferences_app_protection__pin">పిన్</string>
   <string name="preferences_app_protection__change">మార్పు</string>
+  <string name="preferences_app_protection__create">సృష్టించు</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">మీ పిన్ అదనపు భద్రతా పొరను జోడిస్తుంది మరియు మీ ఖాతాను బ్యాకప్ చేస్తుంది. మీరు మీ ఫోన్ నంబర్‌ను Signal తో నమోదు చేసినప్పుడు మీరు అడుగుతారు. మీరు మీ పిన్‌ను మరచిపోతే, మీరు మీ ఖాతా నుండి 7 రోజులు లాక్ అవుతారు.</string>
   <string name="AppProtectionPreferenceFragment_none">ఏదీ కాదు</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">మీరు అందుకున్న SMS ధృవీకరణ కోడ్ వలె నమోదు లాక్ పిన్ అదే కాదు. దయచేసి మీరు మునుపు అనువర్తనం లో కాన్ఫిగర్ చేసిన పిన్ ను నమోదు చేయండి.</string>
