--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -51,6 +51,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(วิดีโอ)</string>
   <string name="DraftDatabase_Draft_location_snippet">(ตำแหน่งที่ตั้ง)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(ตอบกลับ)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">อัลบั้มภาพ</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">ไฟล์</string>
+  <string name="AttachmentKeyboard_contact">ผู้ติดต่อ</string>
+  <string name="AttachmentKeyboard_location">ตำแหน่งที่ตั้ง</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">ไม่พบแอปสำหรับเลือกสื่อ</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">เพื่อที่จะแนบรูปภาพ วิดีโอ หรือเสียง Signal ต้องได้รับอนุญาตให้เข้าถึงที่เก็บข้อมูล แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่าแอป เลือก \"การอนุญาต\" และเปิดใช้งาน \"ที่เก็บข้อมูล\"</string>
@@ -432,7 +438,9 @@
   <string name="MediaOverviewActivity_sent_by_you">ส่งโดยคุณ</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">ส่งโดย %1$s ถึง %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">ส่งโดยคุณถึง %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">เตือนฉันอีกที</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">กำลังใช้สาย Signal อยู่</string>
   <string name="NotificationBarManager__establishing_signal_call">กำลังเริ่มสาย Signal</string>
   <string name="NotificationBarManager__incoming_signal_call">สาย Signal เรียกเข้า</string>
@@ -535,6 +543,8 @@
   <string name="RatingManager_no_thanks">ไม่ ขอบคุณ</string>
   <string name="RatingManager_later">ไว้คราวหน้า</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">โอ๊ะ ไม่พบว่าแอป Play Store ถูกติดตั้งบนอุปกรณ์ของคุณ</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">ปิดกั้นผู้ติดต่อนี้หรือไม่?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">คุณจะไม่ได้รับข้อความและสายโทรเข้าจากผู้ติดต่อนี้อีกต่อไป</string>
@@ -1385,12 +1395,8 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">สร้างรหัส PIN ด้วยตัวอักษรและตัวเลข</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">สร้างรหัส PIN ด้วยตัวเลข</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">รหัส PIN ต้องมีอย่างน้อย %1$d ตัวอักษร</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">รหัส PIN ต้องมีอย่างน้อย %1$dตัวเลข</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">สร้างรหัส PIN ใหม่</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">เนื่องจากคุณยังคงลงชื่อเข้าใช้ คุณสามารถสร้างรหัส PIN ใหม่ เมื่อคุณออกจากระบบ คุณจะไม่มีทางกู้รหัส PIN คืนมาได้</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">สร้างรหัส PIN ของคุณ</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">รหัส PINs เพิ่มเลเยอร์ความปลอดภัยให้กับบัญชีของคุณ จด PIN ของคุณและเก็บมันไว้ในที่ปลอดภัย เพราะมันไม่สามารถกู้คืนได้</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">รหัส PINs ไม่ตรงกัน ลองดูอีกครั้ง</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">ยืนยันรหัส PIN ของคุณ</string>
@@ -1399,15 +1405,11 @@
   <string name="ConfirmKbsPinFragment__pin_created">สร้างรหัส PIN แล้ว</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">แนะนำรหัส PINs</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">เพิ่มความปลอดภัยให้บัญชีของคุณอีกหนึ่งระดับ %1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">อ่านเพิ่มเติมที่นี่</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">เรียนรู้เพิ่มเติม</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">ล็อกการลงทะเบียน = รหัส PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">การล็อกการลงทะเบียนของคุณถูกเรียกว่ารหัส PIN และมันยังทำอะไรได้มากกว่านั้น อัปเดตมันเดี๋ยวนี้ %1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">อ่านเพิ่มเติมเกี่ยวกับรหัส PINs</string>
   <string name="KbsSplashFragment__update_pin">อัปเดตรหัส PIN</string>
   <string name="KbsSplashFragment__create_your_pin">สร้างรหัส PIN ของคุณ</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">เตือนฉันอีกที</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">ใส่รหัส Signal PIN ของคุณ</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">เพื่อช่วยให้คุณจดจำรหัส PIN ล็อกการลงทะเบียนได้ Signal จะขอให้คุณใส่รหัส PIN เป็นระยะๆ เราจะถามคุณน้อยลงเมื่อเวลาผ่านไป</string>
@@ -1420,20 +1422,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">บัญชีของคุณถูกล็อกเพื่อปกป้องความเป็นส่วนตัวและความปลอดภัยของคุณ หลังจากไม่มีการเคลื่อนไหว %1$d วันในบัญชีของคุณ คุณจะสามารถลงทะเบียนได้อีกครั้งด้วยเบอร์โทรศัพท์นี้โดยไม่ต้องใช้รหัส PIN เนื้อหาทั้งหมดจะถูกลบ</string>
   <string name="AccountLockedFragment__next">ต่อไป</string>
   <string name="AccountLockedFragment__learn_more">เรียนรู้เพิ่มเติม</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">ใส่รหัส PIN ของคุณ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">ใส่รหัส PIN ที่คุณสร้างขึ้นมาสำหรับบัญชีของคุณ รหัสนี้แตกต่างจากรหัสยืนยันทาง SMS</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">ใส่รหัส PIN ด้วยตัวอักษรและตัวเลข</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">ใส่รหัส PIN ด้วยตัวเลข</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">ต่อไป</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">รหัส PIN ไม่ถูกต้อง ลองดูอีกครั้ง</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">รหัส PIN ไม่ถูกต้อง เหลือความพยายามอีก %1$d ครั้ง</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">ลืมรหัส PIN หรือ?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">รหัส PIN ไม่ถูกต้อง </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">คุณมีความพยาามเหลืออีก %1$d ครั้ง ถ้าคุณใช้ความพยายามนี้จนหมด บัญชีของคุณจะถูกล็อกเป็นเวลา %2$dวัน หลังจาก %3$d ที่ไม่มีการเคลื่อนไหว คุณจะสามารถลงทะเบียนได้อีกครั้งโดยไม่ต้องใช้รหัส PIN บัญชีของคุณจะถูกทำความสะอาดและเนื้อหาทั้งหมดจะถูกลบ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">ลืมรหัส PIN หรือ?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">เพื่อความเป็นส่วนตัวและความปลอดภัยของคุณ ไม่มีทางไหนที่จะนำรหัส PIN ของคุณกลับคืนมา ถ้าคุณใช้ความพยายามจนหมด คุณสามารถยืนยันตัวตนผ่าน SMS ได้อีกครั้งหลังจาก %1$d วันที่ไม่มีการเคลื่อนไหว ในกรณีนี้ บัญชีของคุณจะถูกทำความสะอาดและเนื้อหาทั้งหมดจะถูกลบ</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">ใส่รหัส PIN ของคุณ</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">ใส่รหัส PIN ที่คุณสร้างขึ้นมาสำหรับบัญชีของคุณ รหัสนี้แตกต่างจากรหัสยืนยันทาง SMS</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">ใส่รหัส PIN ด้วยตัวอักษรและตัวเลข</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">ใส่รหัส PIN ด้วยตัวเลข</string>
+  <string name="RegistrationLockFragment__next">ต่อไป</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">รหัส PIN ไม่ถูกต้อง ลองดูอีกครั้ง</string>
+  <string name="RegistrationLockFragment__forgot_pin">ลืมรหัส PIN หรือ?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">รหัส PIN ไม่ถูกต้อง </string>
+  <string name="RegistrationLockFragment__forgot_your_pin">ลืมรหัส PIN หรือ?</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">แนะนำรหัส PINs</string>
+  <string name="KbsMegaphone__update_pin">อัปเดตรหัส PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">ไอคอนขนส่ง</string>
   <string name="ConversationListFragment_loading">กำลังโหลด…</string>
@@ -1494,6 +1495,7 @@
   <string name="preferences_app_protection__signal_pin">รหัส PIN ของ Signal</string>
   <string name="preferences_app_protection__pin"> รหัส PIN</string>
   <string name="preferences_app_protection__change">เปลี่ยน</string>
+  <string name="preferences_app_protection__create">สร้าง</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">รหัส PIN ของคุณเพิ่มเลเยอร์ความปลอดภัยและสำรองบัญชีของคุณ คุณจะถูกถามเมื่อคุณลงทะเบียนหมายเลขโทรศัพท์ของคุณกับ Signal ถ้าคุณลืมรหัส PIN ของคุณ คุณจะถูกล็อกจากบัญชีของคุณเป็นเวลา 7 วัน</string>
   <string name="AppProtectionPreferenceFragment_none">ไม่มี</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">รหัส PIN ล็อกการลงทะเบียนไม่เหมือนกับรหัสการยืนยันทาง SMS ที่คุณเพิ่งได้รับ โปรดป้อนรหัส PIN ที่คุณได้กำหนดไว้ในโปรแกรมก่อนหน้านี้</string>
