--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -54,6 +54,12 @@
   <string name="DraftDatabase_Draft_video_snippet">(وڈیو)</string>
   <string name="DraftDatabase_Draft_location_snippet">(مقام)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(جواب )</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">گیلری</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">فائل</string>
+  <string name="AttachmentKeyboard_contact">رابطہ</string>
+  <string name="AttachmentKeyboard_location">مقام</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">میڈیا کے انتخاب کیلئے کوئی ایپ نہیں مل سکتی۔</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal کو آڈیو، ویڈیو، تصاویر وغیرہ منسلک کرنے کیلئے سٹوریج اجازت کی ضرورت ہوتی ہے، لیکن اس کی مستقل طور پر نفی کر دی گئی ہے ۔ برائے مہربانی ایپ ترتیبات کی فہرست میں جائیں، \"منظوری\" منتخب کریں، اور \"اسٹوریج\" فعال کریں۔</string>
@@ -453,7 +459,9 @@
   <string name="MediaOverviewActivity_sent_by_you">آپ کے ذریعہ بھیجا گیا</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">%1$sبذریعہ%2$s بھیجا گیا</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">آپ کے ذریعہ بھیجا گیا%1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">مجھے بعد میں یاد کروانا</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">signal کال پروگریس میں ہے</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal کال قائم ہو رہی ہے</string>
   <string name="NotificationBarManager__incoming_signal_call">signal کال آ رہی ہے</string>
@@ -556,6 +564,8 @@
   <string name="RatingManager_no_thanks">نہیں شکریہ</string>
   <string name="RatingManager_later">بعد میں</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">اوپس ، پلے سٹور ایپ آپ کی ڈیوائس پر انسٹال ہوتے دکھائی نہیں دیتی ہے۔</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">اس رابطے کو بلاک کریں؟</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">آپ کو مزید اس رابطہ سے پیغامات اور کالیں وصول نہیں ہونگے۔</string>
@@ -1408,29 +1418,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Alphanumeric پن بنائیں</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">عددی پن بنائیں</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">پن کم از کم %1$d حروف کا ہونا ضروری ہے</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">پن کم از کم %1$d ہندسوں کا ہونا ضروری ہے</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">ایک نیا پن بنائیں</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">چونکہ آپ ابھی بھی لاگ ان ہیں ، لہذا آپ نیا پن بنا سکتے ہیں۔ جب آپ لاگ آؤٹ ہو جاتے ہیں تو ، آپ کا پن بازیافت کرنے کا کوئی راستہ نہیں ہوتا ہے۔</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">اپنا پن بنائیں</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">پن آپ کے اکاؤنٹ میں سیکیورٹی کی ایک اضافی پرت کا اضافہ کرتے ہیں۔ اپنا پن لکھ کر ایک محفوظ جگہ پر رکھیں۔ اسے بازیافت نہیں کیا جاسکتا۔</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">پن مماثل نہیں ہیں۔ دوبارہ کوشش کریں.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">اپنے پن کی تصدیق کریں۔</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">پن کی تشکیل ناکام ہوگئی</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">آپ کا پن محفوظ نہیں ہوا تھا۔ ہم آپ کو بعد میں ایک پن بنانے کا اشارہ کریں گے۔</string>
   <string name="ConfirmKbsPinFragment__pin_created">پن تیار کیا گیا۔</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">پن دوبارہ داخل کریں</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">پن ز متعارف ہو رہے ہیں</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">اپنے اکاؤنٹ میں سیکیورٹی کی ایک اور سطح شامل کریں۔%1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">یہاں مزید پڑھیں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">مزید پڑھیں</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">رجسٹریشن لاک=پن</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">آپ کے رجسٹریشن لاک کو اب ایک پن کہا جاتا ہے ، اور یہ اور بھی کرتا ہے۔ ابھی اسے اپ ڈیٹ کریں۔%1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">پن کے بارے میں مزید پڑھیں</string>
   <string name="KbsSplashFragment__update_pin">پن کو اپ ڈیٹ کریں</string>
   <string name="KbsSplashFragment__create_your_pin">اپنا پن بنائیں</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">مجھے بعد میں یاد کروانا</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">اپنا Signal پن داخل کریں</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">آپ کو اپنا پن حفظ کرنے میں مدد کے لیئے ، ہم آپ سے وقتا فوقتا اس میں داخل ہونے کو کہیں گے۔ وقت کے ساتھ ہم آپ سے کم پوچھتے ہیں۔</string>
@@ -1443,20 +1446,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">آپ کی نجی معلومات کی حفاظتی اور حفاظت کے لیئے آپ کا اکاؤنٹ مقفل کردیا گیا ہے۔ آپ کے اکاؤنٹ میں%1$d دنوں کے غیر فعال ہونے کے بعد آپ اپنے پن کی ضرورت کے بغیر اس فون نمبر کو دوبارہ رجسٹر کرسکیں گے۔ تمام مشمولات کو حذف کردیا جائے گا۔</string>
   <string name="AccountLockedFragment__next">اگلا</string>
   <string name="AccountLockedFragment__learn_more">مزید پڑھیں</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">اپنا پن داخل کریں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">اپنے اکاؤنٹ کیلئے جو پن بنایا ہے داخل کریں۔ یہ آپ کے تصدیقی ایس ایم ایس سے مختلف ہے۔</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Alphanumeric کا پن درج کریں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">عددی پن درج کریں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">اگلا</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">غلط پن. دوبارہ کوشش کریں.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">غلط پن.%1$d باقی کوششیں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">پن بھول گیا؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">غلط پن</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">آپ کے پاس %1$d کوششیں باقی ہیں۔ اگر آپ کوششوں سے باہر نکل جاتے ہیں تو آپ کا اکاؤنٹ %2$d دنوں کے لئے بند ہوجاتا ہے۔ %3$d دن کی غیر فعالیت کے بعد ، آپ اپنے پن کے بغیر دوبارہ اندراج کرسکتے ہیں۔ آپ کا اکاؤنٹ مٹا دیا جائے گا اور سارا مواد حذف ہوجائے گا۔</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">آپ کا پن بھول گیا؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">آپ کی رازداری اور سیکیورٹی کے لیئے ، آپ کے پن کی بازیافت کا کوئی راستہ نہیں ہے۔ اگر آپ کی کوششیں ختم ہوجاتی ہیں تو ، آپ غیر فعال %1$d دنوں کے بعد ایس ایم ایس کے ساتھ دوبارہ توثیق کرسکتے ہیں۔ اس معاملے میں ، آپ کا اکاؤنٹ صاف ہوجائے گا اور تمام مواد حذف ہوجائے گا۔</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">اپنا پن داخل کریں</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">اپنے اکاؤنٹ کیلئے جو پن بنایا ہے داخل کریں۔ یہ آپ کے تصدیقی ایس ایم ایس سے مختلف ہے۔</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Alphanumeric کا پن درج کریں</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">عددی پن درج کریں</string>
+  <string name="RegistrationLockFragment__next">اگلا</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">غلط پن. دوبارہ کوشش کریں.</string>
+  <string name="RegistrationLockFragment__forgot_pin">پن بھول گیا؟</string>
+  <string name="RegistrationLockFragment__incorrect_pin">غلط پن</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">آپ کا پن بھول گیا؟</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">پن ز متعارف ہو رہے ہیں</string>
+  <string name="KbsMegaphone__update_pin">پن کو اپ ڈیٹ کریں</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">ٹرانسپورٹ آئکن</string>
   <string name="ConversationListFragment_loading">لوڈ ہو رہا ہے۔۔۔</string>
@@ -1517,6 +1519,7 @@
   <string name="preferences_app_protection__signal_pin">Signal پن</string>
   <string name="preferences_app_protection__pin">پن</string>
   <string name="preferences_app_protection__change">تبدیلی</string>
+  <string name="preferences_app_protection__create">بنائیں</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">آپ کا پن سیکیورٹی کی ایک اضافی پرت کو جوڑتا ہے اور آپ کے اکاؤنٹ کا بیک اپ بناتا ہے۔ جب آپ اپنے فون نمبر کو Signal کے ساتھ رجسٹر کرتے ہیں تو آپ سے اس کے بارے میں پوچھا جائے گا۔ اگر آپ اپنا پن بھول جاتے ہیں تو ، آپ کو 7 دن کے لئے آپ کے اکاؤنٹ سے بند کر دیا جائے گا۔</string>
   <string name="AppProtectionPreferenceFragment_none">کوئی نہیں</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">رجسٹریشن لاک پن وہی نہیں ہے جو آپ نے ابھی موصول کردہ ایس ایم ایس کا تصدیقی کوڈ سے کیا ہے۔ براہ کرم درخواست میں جو پن آپ نے پہلے تشکیل کیا تھا اسے درج کریں۔</string>
