--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -51,6 +51,12 @@
   <string name="DraftDatabase_Draft_video_snippet">（视频）</string>
   <string name="DraftDatabase_Draft_location_snippet">(位置)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(回复)</string>
+  <!--AttachmentKeyboard-->
+  <string name="AttachmentKeyboard_gallery">相册</string>
+  <string name="AttachmentKeyboard_gif">GIF</string>
+  <string name="AttachmentKeyboard_file">文件</string>
+  <string name="AttachmentKeyboard_contact">联系人</string>
+  <string name="AttachmentKeyboard_location">位置</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">未找到选择媒体的应用。</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal 需“存储”权限，来发送图片、视频和音频，但该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“存储”。</string>
@@ -432,7 +438,9 @@
   <string name="MediaOverviewActivity_sent_by_you">由您发送</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">由 %1$s 发送至 %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">由您发送至 %1$s</string>
-  <!--- NotificationBarManager-->
+  <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">稍后提醒</string>
+  <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">正在处理 Signal 呼叫</string>
   <string name="NotificationBarManager__establishing_signal_call">正在建立 Signal 呼叫</string>
   <string name="NotificationBarManager__incoming_signal_call">Signal 来电</string>
@@ -535,6 +543,8 @@
   <string name="RatingManager_no_thanks">不，谢谢。</string>
   <string name="RatingManager_later">稍后</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">糟糕, 你的设备上未安装 Google Play 商店。</string>
+  <!--ReactionsBottomSheetDialogFragment-->
+  <!--ReactionsConversationView-->
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">屏蔽该联系人？</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">将不再接收该联系人的消息和呼叫。</string>
@@ -1384,29 +1394,22 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">创建字母数字 PIN</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">时间数字 PIN</string>
   <!--CreateKbsPinFragment-->
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PIN 不可少于 %1$d 个字母</string>
-  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PIN 不可少于 %1$d 个数字</string>
   <string name="CreateKbsPinFragment__create_a_new_pin">新建 PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">登录状态下可创建新的 PIN 密码，退出之后将无法恢复 PIN 密码。</string> -->
   <string name="CreateKbsPinFragment__create_your_pin">创建 PIN 密码</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN 密码为帐户增加了额外保护。将你的 PIN 密码写下来并保存到安全的得分。PIN 不可恢复。</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN 不匹配，请重试。</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">确认你的 PIN。</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">PIN 创建失败</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">PIN 没有保存。我们将稍后提示您创建 PIN。</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN 已创建。</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">重新输入 PIN</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">推出 PIN 密码功能</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">为你的帐户增加多一层保护。%1$s</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">此处了解更多。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__learn_more">了解更多</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">注册锁定 = PIN</string>
-  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">注册锁定现在成为 PIN，而且后者更强大。马上更新。%1$s</string>
   <string name="KbsSplashFragment__read_more_about_pins">了解更多 PIN 信息。</string>
   <string name="KbsSplashFragment__update_pin">更新 PIN</string>
   <string name="KbsSplashFragment__create_your_pin">创建 PIN</string>
-  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">稍后提醒</string> -->
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">请输入 Signal 的 PIN 密码</string>
   <string name="KbsReminderDialog__to_help_you_memorize_your_pin">为了便于记住 PIN，我们将定期提示输入该密码。提示次数将逐渐减少。</string>
@@ -1419,20 +1422,19 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">为了保护你的隐私与安全，已锁定你的帐户。帐户在 %1$d 天不活动之后，可用该电话号码重新注册，并且无需 PIN 密码。所有内容将删除。</string>
   <string name="AccountLockedFragment__next">下一步</string>
   <string name="AccountLockedFragment__learn_more">了解更多</string>
-  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
   <!--KbsLockFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">请输入 PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">输入帐户的 PIN 密码。该密码不是短信验证码。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">输入字母数字 PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">输入数字 PIN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">下一步</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PIN 错误，请重试。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PIN 错误，还可输入 %1$d 次。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">忘记 PIN？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PIN 错误</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">还可输入 %1$d 次，之后仍输入错误，将锁定帐户 %2$d 天。在帐户非活动状态 %3$d 天后，可无需 PIN 密码重新注册，但你的帐户将被清理，并且删除所有内容。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">忘记 PIN？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">为了隐私与安全，PIN 密码无法恢复。如果密码错误超过限定，可在帐户非活动 %1$d 天后，通过短信重新验证，但你的帐户将被清理，并且删除所有内容。</string> -->
+  <string name="RegistrationLockFragment__enter_your_pin">请输入 PIN</string>
+  <string name="RegistrationLockFragment__enter_the_pin_you_created">输入帐户的 PIN 密码。该密码不是短信验证码。</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">输入字母数字 PIN</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">输入数字 PIN</string>
+  <string name="RegistrationLockFragment__next">下一步</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">PIN 错误，请重试。</string>
+  <string name="RegistrationLockFragment__forgot_pin">忘记 PIN？</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PIN 错误</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">忘记 PIN？</string>
+  <!--KBS Megaphone-->
+  <string name="KbsMegaphone__introducing_pins">推出 PIN 密码功能</string>
+  <string name="KbsMegaphone__update_pin">更新 PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">传输图标</string>
   <string name="ConversationListFragment_loading">正在加载…</string>
@@ -1474,6 +1476,7 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">禁用并删除全部本地备份？</string>
   <string name="BackupDialog_delete_backups_statement">删除备份</string>
   <string name="BackupDialog_copied_to_clipboard">已复制到剪切板</string>
+  <string name="BackupDialog_verify">验证</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal 需外部存储权限，来创建备份，但该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“存储”。</string>
   <string name="ChatsPreferenceFragment_last_backup_s">最近备份：%s</string>
   <string name="ChatsPreferenceFragment_in_progress">进行中</string>
@@ -1493,6 +1496,7 @@
   <string name="preferences_app_protection__signal_pin">Signal PIN 密码</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">修改</string>
+  <string name="preferences_app_protection__create">创建</string>
   <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN 密码为帐户恢复新增一层安全防护。使用电话号码注册 Signal 时需输入该密码。如果忘记 PIN，将在 7 天内无法注册使用 Signal。</string>
   <string name="AppProtectionPreferenceFragment_none">无</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">注册锁定 PIN 密码不是您刚刚收到的短信验证码。请输入之前在应用中设置的 PIN。</string>
